Added Open in Colab badges to 81-101 notebooks

--- a/100_World_Models_Model_Based_RL.ipynb
+++ b/100_World_Models_Model_Based_RL.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/100_World_Models_Model_Based_RL.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8a281d7c",
    "metadata": {},
    "source": [
-    "# 🌍 World Models: Maszyny, które śnią\n",
+    "# \ud83c\udf0d World Models: Maszyny, kt\u00f3re \u015bni\u0105\n",
     "\n",
-    "Model-Free RL (DQN) to \"odruch\". Widzę -> Reaguję.\n",
-    "Model-Based RL (World Models) to \"wyobraźnia\". Widzę -> Przewiduję przyszłość -> Planuję -> Reaguję.\n",
+    "Model-Free RL (DQN) to \"odruch\". Widz\u0119 -> Reaguj\u0119.\n",
+    "Model-Based RL (World Models) to \"wyobra\u017ania\". Widz\u0119 -> Przewiduj\u0119 przysz\u0142o\u015b\u0107 -> Planuj\u0119 -> Reaguj\u0119.\n",
     "\n",
-    "Architektura składa się z 3 części:\n",
-    "1.  **V (Vision - VAE):** Zmienia obraz z kamery (np. 64x64 piksele) na mały wektor stanu $z$ (np. 32 liczby). (To robiliśmy w notatniku 43).\n",
-    "2.  **M (Memory - MDN-RNN):** To jest **Model Świata**. Bierze obecny stan $z_t$ i akcję $a_t$, i przewiduje przyszły stan $z_{t+1}$.\n",
-    "    *   To sieć rekurencyjna, która \"umie fizykę\".\n",
-    "3.  **C (Controller):** Prosta sieć liniowa, która decyduje o ruchu, patrząc na wizję ($z$) i pamięć ($h$).\n",
+    "Architektura sk\u0142ada si\u0119 z 3 cz\u0119\u015bci:\n",
+    "1.  **V (Vision - VAE):** Zmienia obraz z kamery (np. 64x64 piksele) na ma\u0142y wektor stanu $z$ (np. 32 liczby). (To robili\u015bmy w notatniku 43).\n",
+    "2.  **M (Memory - MDN-RNN):** To jest **Model \u015awiata**. Bierze obecny stan $z_t$ i akcj\u0119 $a_t$, i przewiduje przysz\u0142y stan $z_{t+1}$.\n",
+    "    *   To sie\u0107 rekurencyjna, kt\u00f3ra \"umie fizyk\u0119\".\n",
+    "3.  **C (Controller):** Prosta sie\u0107 liniowa, kt\u00f3ra decyduje o ruchu, patrz\u0105c na wizj\u0119 ($z$) i pami\u0119\u0107 ($h$).\n",
     "\n",
-    "W tym notatniku zbudujemy \"Silnik Snów\" (komponent M)."
+    "W tym notatniku zbudujemy \"Silnik Sn\u00f3w\" (komponent M)."
    ]
   },
   {
@@ -29,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Budujemy symulator świata na: cuda\n"
+      "Budujemy symulator \u015bwiata na: cuda\n"
      ]
     }
    ],
@@ -42,11 +49,11 @@
     "\n",
     "# Konfiguracja\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "LATENT_SIZE = 32  # Rozmiar skompresowanego świata (z)\n",
-    "ACTION_SIZE = 1   # Jedna akcja (np. skręć kierownicą)\n",
-    "HIDDEN_SIZE = 256 # Pamięć RNN\n",
+    "LATENT_SIZE = 32  # Rozmiar skompresowanego \u015bwiata (z)\n",
+    "ACTION_SIZE = 1   # Jedna akcja (np. skr\u0119\u0107 kierownic\u0105)\n",
+    "HIDDEN_SIZE = 256 # Pami\u0119\u0107 RNN\n",
     "\n",
-    "print(f\"Budujemy symulator świata na: {DEVICE}\")"
+    "print(f\"Budujemy symulator \u015bwiata na: {DEVICE}\")"
    ]
   },
   {
@@ -57,17 +64,17 @@
     "## 1. Komponent M (Memory / World Model)\n",
     "\n",
     "To jest serce systemu.\n",
-    "Jest to sieć **LSTM**, która działa jako predyktor.\n",
+    "Jest to sie\u0107 **LSTM**, kt\u00f3ra dzia\u0142a jako predyktor.\n",
     "\n",
-    "Wejście:\n",
-    "*   Aktualny stan świata ($z_t$) - skompresowany przez VAE.\n",
-    "*   Akcja, którą podjął agent ($a_t$).\n",
+    "Wej\u015bcie:\n",
+    "*   Aktualny stan \u015bwiata ($z_t$) - skompresowany przez VAE.\n",
+    "*   Akcja, kt\u00f3r\u0105 podj\u0105\u0142 agent ($a_t$).\n",
     "\n",
-    "Wyjście:\n",
-    "*   Przewidywany następny stan świata ($z_{t+1}$).\n",
-    "*   (W pełnej wersji przewiduje rozkład prawdopodobieństwa Gaussian Mixture, tu dla uproszczenia przewidzimy średnią).\n",
+    "Wyj\u015bcie:\n",
+    "*   Przewidywany nast\u0119pny stan \u015bwiata ($z_{t+1}$).\n",
+    "*   (W pe\u0142nej wersji przewiduje rozk\u0142ad prawdopodobie\u0144stwa Gaussian Mixture, tu dla uproszczenia przewidzimy \u015bredni\u0105).\n",
     "\n",
-    "Dzięki temu model może \"odtworzyć\" film z gry w swojej głowie, nie dotykając klawiatury."
+    "Dzi\u0119ki temu model mo\u017ce \"odtworzy\u0107\" film z gry w swojej g\u0142owie, nie dotykaj\u0105c klawiatury."
    ]
   },
   {
@@ -80,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Świata gotowy (Symulator Fizyki).\n"
+      "Model \u015awiata gotowy (Symulator Fizyki).\n"
      ]
     }
    ],
@@ -88,31 +95,31 @@
     "class WorldModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        # LSTM przyjmuje: Stan Latentny + Akcję\n",
+    "        # LSTM przyjmuje: Stan Latentny + Akcj\u0119\n",
     "        self.lstm = nn.LSTM(input_size = LATENT_SIZE + ACTION_SIZE, \n",
     "                            hidden_size = HIDDEN_SIZE, \n",
     "                            batch_first = True)\n",
     "        \n",
-    "        # Głowica przewidująca następny stan (Z_next)\n",
+    "        # G\u0142owica przewiduj\u0105ca nast\u0119pny stan (Z_next)\n",
     "        self.predict_next_z = nn.Linear(HIDDEN_SIZE, LATENT_SIZE)\n",
     "\n",
     "    def forward(self, z, action, hidden_state=None):\n",
     "        # z: [Batch, Seq, 32]\n",
     "        # action: [Batch, Seq, 1]\n",
     "        \n",
-    "        # Łączymy stan i akcję (Input Fusion)\n",
+    "        # \u0141\u0105czymy stan i akcj\u0119 (Input Fusion)\n",
     "        x = torch.cat([z, action], dim=-1) # [Batch, Seq, 33]\n",
     "        \n",
-    "        # Pamięć przetwarza sytuację\n",
+    "        # Pami\u0119\u0107 przetwarza sytuacj\u0119\n",
     "        lstm_out, new_hidden = self.lstm(x, hidden_state)\n",
     "        \n",
-    "        # Przewidujemy, co się stanie\n",
+    "        # Przewidujemy, co si\u0119 stanie\n",
     "        next_z = self.predict_next_z(lstm_out)\n",
     "        \n",
     "        return next_z, new_hidden\n",
     "\n",
     "model_m = WorldModel().to(DEVICE)\n",
-    "print(\"Model Świata gotowy (Symulator Fizyki).\")"
+    "print(\"Model \u015awiata gotowy (Symulator Fizyki).\")"
    ]
   },
   {
@@ -122,11 +129,11 @@
    "source": [
     "## 2. Symulacja \"Snu\" (Dreaming)\n",
     "\n",
-    "Wyobraź sobie, że Agent jedzie samochodem (w grze).\n",
-    "Nagle **odcinamy mu kamerę**.\n",
-    "Agent musi \"zamknąć oczy\" i jechać dalej, polegając tylko na swoich przewidywaniach.\n",
+    "Wyobra\u017a sobie, \u017ce Agent jedzie samochodem (w grze).\n",
+    "Nagle **odcinamy mu kamer\u0119**.\n",
+    "Agent musi \"zamkn\u0105\u0107 oczy\" i jecha\u0107 dalej, polegaj\u0105c tylko na swoich przewidywaniach.\n",
     "\n",
-    "Zrobimy pętlę, w której wyjście modelu ($z_{t+1}$) staje się wejściem w następnym kroku.\n",
+    "Zrobimy p\u0119tl\u0119, w kt\u00f3rej wyj\u015bcie modelu ($z_{t+1}$) staje si\u0119 wej\u015bciem w nast\u0119pnym kroku.\n",
     "To jest **Halucynacja**."
    ]
   },
@@ -140,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wygenerowano sen o długości 50 kroków.\n"
+      "Wygenerowano sen o d\u0142ugo\u015bci 50 krok\u00f3w.\n"
      ]
     }
    ],
@@ -148,36 +155,36 @@
     "def dream_trajectory(model, steps=50):\n",
     "    model.eval()\n",
     "    \n",
-    "    # 1. Stan początkowy (Losowy punkt w świecie)\n",
-    "    # W prawdziwym życiu to byłby obraz z kamery przepuszczony przez VAE\n",
+    "    # 1. Stan pocz\u0105tkowy (Losowy punkt w \u015bwiecie)\n",
+    "    # W prawdziwym \u017cyciu to by\u0142by obraz z kamery przepuszczony przez VAE\n",
     "    current_z = torch.randn(1, 1, LATENT_SIZE).to(DEVICE)\n",
     "    \n",
-    "    # Inicjalizacja pamięci LSTM\n",
+    "    # Inicjalizacja pami\u0119ci LSTM\n",
     "    hidden = None\n",
     "    \n",
     "    trajectory = []\n",
     "    \n",
     "    with torch.no_grad():\n",
     "        for t in range(steps):\n",
-    "            # Agent wykonuje akcję (np. ciągle skręca w prawo = 1.0)\n",
-    "            # W pełnym modelu akcję wybierałby Komponent C (Controller)\n",
+    "            # Agent wykonuje akcj\u0119 (np. ci\u0105gle skr\u0119ca w prawo = 1.0)\n",
+    "            # W pe\u0142nym modelu akcj\u0119 wybiera\u0142by Komponent C (Controller)\n",
     "            action = torch.tensor([[[1.0]]]).to(DEVICE) \n",
     "            \n",
-    "            # Pytamy Model Świata: \"Co się stanie, jak skręcę w prawo?\"\n",
+    "            # Pytamy Model \u015awiata: \"Co si\u0119 stanie, jak skr\u0119c\u0119 w prawo?\"\n",
     "            next_z, hidden = model(current_z, action, hidden)\n",
     "            \n",
-    "            # Zapisujemy \"wyobrażenie\"\n",
+    "            # Zapisujemy \"wyobra\u017cenie\"\n",
     "            trajectory.append(next_z.cpu().numpy().flatten())\n",
     "            \n",
-    "            # To co sobie wyobraziliśmy, staje się naszą nową rzeczywistością\n",
-    "            # (Odcięcie od prawdziwych sensorów!)\n",
+    "            # To co sobie wyobrazili\u015bmy, staje si\u0119 nasz\u0105 now\u0105 rzeczywisto\u015bci\u0105\n",
+    "            # (Odci\u0119cie od prawdziwych sensor\u00f3w!)\n",
     "            current_z = next_z\n",
     "            \n",
     "    return np.array(trajectory)\n",
     "\n",
     "# Uruchamiamy sen\n",
     "dream_data = dream_trajectory(model_m)\n",
-    "print(f\"Wygenerowano sen o długości {len(dream_data)} kroków.\")"
+    "print(f\"Wygenerowano sen o d\u0142ugo\u015bci {len(dream_data)} krok\u00f3w.\")"
    ]
   },
   {
@@ -199,16 +206,16 @@
    ],
    "source": [
     "# WIZUALIZACJA SNU\n",
-    "# Ponieważ Z ma 32 wymiary, pokażemy to jako mapę ciepła\n",
-    "# Oś X: Wymiary latentne (cechy świata)\n",
-    "# Oś Y: Czas (przyszłość)\n",
+    "# Poniewa\u017c Z ma 32 wymiary, poka\u017cemy to jako map\u0119 ciep\u0142a\n",
+    "# O\u015b X: Wymiary latentne (cechy \u015bwiata)\n",
+    "# O\u015b Y: Czas (przysz\u0142o\u015b\u0107)\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.imshow(dream_data.T, aspect='auto', cmap='viridis')\n",
-    "plt.colorbar(label=\"Wartość aktywacji\")\n",
-    "plt.title(\"Wizualizacja 'Myśli' Agenta (Trajektoria w Latent Space)\")\n",
-    "plt.xlabel(\"Czas (Kroki w przód)\")\n",
-    "plt.ylabel(\"Wymiary Latentne (Cechy świata)\")\n",
+    "plt.colorbar(label=\"Warto\u015b\u0107 aktywacji\")\n",
+    "plt.title(\"Wizualizacja 'My\u015bli' Agenta (Trajektoria w Latent Space)\")\n",
+    "plt.xlabel(\"Czas (Kroki w prz\u00f3d)\")\n",
+    "plt.ylabel(\"Wymiary Latentne (Cechy \u015bwiata)\")\n",
     "plt.show()"
    ]
   },
@@ -217,18 +224,18 @@
    "id": "abe75a28",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Trening we Śnie\n",
+    "## \ud83e\udde0 Podsumowanie: Trening we \u015anie\n",
     "\n",
     "Co widzisz na wykresie?\n",
-    "To są **zmieniające się stany gry**, które wygenerował model.\n",
-    "*   Jeśli model jest niewytrenowany (jak teraz) -> Widzisz losowy szum lub proste wzory.\n",
-    "*   Jeśli model jest wytrenowany (np. na grze CarRacing) -> Widziałbyś, jak parametry odpowiadające za \"zakręt\" powoli się zmieniają, symulując ruch samochodu.\n",
+    "To s\u0105 **zmieniaj\u0105ce si\u0119 stany gry**, kt\u00f3re wygenerowa\u0142 model.\n",
+    "*   Je\u015bli model jest niewytrenowany (jak teraz) -> Widzisz losowy szum lub proste wzory.\n",
+    "*   Je\u015bli model jest wytrenowany (np. na grze CarRacing) -> Widzia\u0142by\u015b, jak parametry odpowiadaj\u0105ce za \"zakr\u0119t\" powoli si\u0119 zmieniaj\u0105, symuluj\u0105c ruch samochodu.\n",
     "\n",
     "**Dlaczego to jest SOTA?**\n",
-    "Wytrenowanie modelu świata na milionach filmów z YouTube (jak robi to model **Sora** od OpenAI lub **Gen-2** od Runway) pozwala komputerowi zrozumieć fizykę.\n",
-    "Gdy AI rozumie fizykę, może planować działania w świecie rzeczywistym, nie robiąc sobie krzywdy.\n",
+    "Wytrenowanie modelu \u015bwiata na milionach film\u00f3w z YouTube (jak robi to model **Sora** od OpenAI lub **Gen-2** od Runway) pozwala komputerowi zrozumie\u0107 fizyk\u0119.\n",
+    "Gdy AI rozumie fizyk\u0119, mo\u017ce planowa\u0107 dzia\u0142ania w \u015bwiecie rzeczywistym, nie robi\u0105c sobie krzywdy.\n",
     "\n",
-    "**Model-Based RL** to przyszłość robotyki."
+    "**Model-Based RL** to przysz\u0142o\u015b\u0107 robotyki."
    ]
   }
  ],
