--- a/101_KAN_Kolmogorov_Arnold_Networks.ipynb
+++ b/101_KAN_Kolmogorov_Arnold_Networks.ipynb
@@ -2,29 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/101_KAN_Kolmogorov_Arnold_Networks.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bbb218e3",
    "metadata": {},
    "source": [
-    "# 🎆 The Grand Finale: KAN (Kolmogorov-Arnold Networks)\n",
+    "# \ud83c\udf86 The Grand Finale: KAN (Kolmogorov-Arnold Networks)\n",
     "\n",
     "To jest notatnik nr 101. Ostatni.\n",
-    "Wracamy do korzeni (Notatnik 16 - Perceptron), żeby je... zburzyć.\n",
+    "Wracamy do korzeni (Notatnik 16 - Perceptron), \u017ceby je... zburzy\u0107.\n",
     "\n",
-    "Wszystkie sieci, które do tej pory budowaliśmy (MLP, CNN, Transformer), opierały się na twierdzeniu o aproksymacji, które mówi:\n",
+    "Wszystkie sieci, kt\u00f3re do tej pory budowali\u015bmy (MLP, CNN, Transformer), opiera\u0142y si\u0119 na twierdzeniu o aproksymacji, kt\u00f3re m\u00f3wi:\n",
     "$$ f(x) \\approx \\sum w_i \\cdot \\sigma(x) $$\n",
-    "(Stała funkcja $\\sigma$ i zmienne wagi $w$).\n",
+    "(Sta\u0142a funkcja $\\sigma$ i zmienne wagi $w$).\n",
     "\n",
-    "**Twierdzenie Kołmogorowa-Arnolda** mówi coś innego: każdą funkcję można zapisać jako złożenie funkcji jednej zmiennej.\n",
+    "**Twierdzenie Ko\u0142mogorowa-Arnolda** m\u00f3wi co\u015b innego: ka\u017cd\u0105 funkcj\u0119 mo\u017cna zapisa\u0107 jako z\u0142o\u017cenie funkcji jednej zmiennej.\n",
     "$$ f(x) \\approx \\sum \\phi(x) $$\n",
     "(Brak wag! To funkcja $\\phi$ jest zmienna).\n",
     "\n",
     "**Co to jest KAN?**\n",
-    "W KAN-ie na każdym połączeniu między neuronami nie ma liczby (wagi). Jest **krzywa (Spline)**.\n",
-    "Sieć uczy się **kształtu tej krzywej**.\n",
+    "W KAN-ie na ka\u017cdym po\u0142\u0105czeniu mi\u0119dzy neuronami nie ma liczby (wagi). Jest **krzywa (Spline)**.\n",
+    "Sie\u0107 uczy si\u0119 **kszta\u0142tu tej krzywej**.\n",
     "\n",
-    "Dzięki temu KAN-y są:\n",
-    "1.  **Bardziej precyzyjne** (biją MLP przy mniejszej liczbie parametrów).\n",
-    "2.  **Interpretowalne** (możesz narysować funkcję i zobaczyć wzór matematyczny)."
+    "Dzi\u0119ki temu KAN-y s\u0105:\n",
+    "1.  **Bardziej precyzyjne** (bij\u0105 MLP przy mniejszej liczbie parametr\u00f3w).\n",
+    "2.  **Interpretowalne** (mo\u017cesz narysowa\u0107 funkcj\u0119 i zobaczy\u0107 wz\u00f3r matematyczny)."
    ]
   },
   {
@@ -61,14 +68,14 @@
    "source": [
     "## Matematyka: B-Splines (Krzywe Bazowe)\n",
     "\n",
-    "Jak nauczyć komputer \"kształtu funkcji\"?\n",
-    "Używamy **B-Splines** (Basis Splines). To elastyczne krzywe, które można wyginać, zmieniając punkty kontrolne.\n",
+    "Jak nauczy\u0107 komputer \"kszta\u0142tu funkcji\"?\n",
+    "U\u017cywamy **B-Splines** (Basis Splines). To elastyczne krzywe, kt\u00f3re mo\u017cna wygina\u0107, zmieniaj\u0105c punkty kontrolne.\n",
     "\n",
-    "Każda krawędź w naszej sieci będzie sumą:\n",
-    "1.  **Części bazowej (SiLU):** Standardowa aktywacja (dla stabilności).\n",
-    "2.  **Części elastycznej (Spline):** Kombinacja wielomianów, która dopasowuje się do danych.\n",
+    "Ka\u017cda kraw\u0119d\u017a w naszej sieci b\u0119dzie sum\u0105:\n",
+    "1.  **Cz\u0119\u015bci bazowej (SiLU):** Standardowa aktywacja (dla stabilno\u015bci).\n",
+    "2.  **Cz\u0119\u015bci elastycznej (Spline):** Kombinacja wielomian\u00f3w, kt\u00f3ra dopasowuje si\u0119 do danych.\n",
     "\n",
-    "Nie martw się wzorem na B-Spline (jest skomplikowany), ważna jest idea: to \"wyginalny drut\"."
+    "Nie martw si\u0119 wzorem na B-Spline (jest skomplikowany), wa\u017cna jest idea: to \"wyginalny drut\"."
    ]
   },
   {
@@ -88,8 +95,8 @@
    "source": [
     "def b_splines(x: torch.Tensor, grid: torch.Tensor, k: int = 0) -> torch.Tensor:\n",
     "    \"\"\"\n",
-    "    Oblicza wartości B-Spline dla wejścia x na siatce grid.\n",
-    "    Wersja poprawiona: Obsługuje poprawnie wymiary [Batch, In, Grid].\n",
+    "    Oblicza warto\u015bci B-Spline dla wej\u015bcia x na siatce grid.\n",
+    "    Wersja poprawiona: Obs\u0142uguje poprawnie wymiary [Batch, In, Grid].\n",
     "    \"\"\"\n",
     "    # x shape: [Batch, In]\n",
     "    # grid shape: [In, Grid_Size]\n",
@@ -105,8 +112,8 @@
     "    for degree in range(1, k + 1):\n",
     "        b = basis\n",
     "        \n",
-    "        # Obliczamy lewą i prawą część wzoru rekurencyjnego\n",
-    "        # Używamy [..., ] żeby ciąć zawsze ostatni wymiar niezależnie od batcha\n",
+    "        # Obliczamy lew\u0105 i praw\u0105 cz\u0119\u015b\u0107 wzoru rekurencyjnego\n",
+    "        # U\u017cywamy [..., ] \u017ceby ci\u0105\u0107 zawsze ostatni wymiar niezale\u017cnie od batcha\n",
     "        \n",
     "        # Term 1 (Lewa noga)\n",
     "        numer1 = x - grid[..., :-(degree + 1)]\n",
@@ -119,7 +126,7 @@
     "        term2 = numer2 / denom2\n",
     "        \n",
     "        # Aktualizacja bazy\n",
-    "        # POPRAWKA: Używamy b[..., :-1] zamiast b[:, :-1]\n",
+    "        # POPRAWKA: U\u017cywamy b[..., :-1] zamiast b[:, :-1]\n",
     "        basis = term1 * b[..., :-1] + term2 * b[..., 1:]\n",
     "        \n",
     "    return basis\n",
@@ -134,12 +141,12 @@
    "source": [
     "## Warstwa KAN (KANLinear)\n",
     "\n",
-    "To jest odpowiednik `nn.Linear`, ale w świecie KAN.\n",
+    "To jest odpowiednik `nn.Linear`, ale w \u015bwiecie KAN.\n",
     "Zamiast macierzy wag `W`, mamy **parametry krzywych**.\n",
     "\n",
-    "Dla każdego wejścia i wyjścia uczymy się:\n",
+    "Dla ka\u017cdego wej\u015bcia i wyj\u015bcia uczymy si\u0119:\n",
     "*   Wagi dla funkcji bazowej (`base_weight`).\n",
-    "*   Współczynników dla krzywych B-Spline (`spline_weight`)."
+    "*   Wsp\u00f3\u0142czynnik\u00f3w dla krzywych B-Spline (`spline_weight`)."
    ]
   },
   {
@@ -169,11 +176,11 @@
     "        h = (1 - (-1)) / grid_size\n",
     "        \n",
     "        # --- POPRAWKA: Stabilne generowanie siatki ---\n",
-    "        # Obliczamy dokładnie, ile punktów potrzebujemy, żeby matematyka się zgadzała.\n",
-    "        # Wzór: grid_size + 2*order + 1\n",
+    "        # Obliczamy dok\u0142adnie, ile punkt\u00f3w potrzebujemy, \u017ceby matematyka si\u0119 zgadza\u0142a.\n",
+    "        # Wz\u00f3r: grid_size + 2*order + 1\n",
     "        num_grid_points = grid_size + 2 * spline_order + 1\n",
     "        \n",
-    "        # Używamy linspace zamiast arange, żeby uniknąć błędów float\n",
+    "        # U\u017cywamy linspace zamiast arange, \u017ceby unikn\u0105\u0107 b\u0142\u0119d\u00f3w float\n",
     "        grid = torch.linspace(\n",
     "            -1 - h * spline_order,\n",
     "            1 + h * spline_order,\n",
@@ -191,24 +198,24 @@
     "        self.reset_parameters()\n",
     "\n",
     "    def reset_parameters(self):\n",
-    "        # Inicjalizacja (Kaiming dla bazy, mały szum dla splotów)\n",
+    "        # Inicjalizacja (Kaiming dla bazy, ma\u0142y szum dla splot\u00f3w)\n",
     "        nn.init.kaiming_uniform_(self.base_weight, a=np.sqrt(5) * 0.1)\n",
     "        nn.init.normal_(self.spline_weight, mean=0.0, std=0.1)\n",
     "\n",
     "    def forward(self, x):\n",
     "        # x: [Batch, In]\n",
     "        \n",
-    "        # Ścieżka 1: Baza (SiLU)\n",
+    "        # \u015acie\u017cka 1: Baza (SiLU)\n",
     "        base_output = F.linear(F.silu(x), self.base_weight)\n",
     "        \n",
-    "        # Ścieżka 2: Spline\n",
-    "        # Rozszerzamy grid do wymiaru wejścia [In, Grid_Len]\n",
+    "        # \u015acie\u017cka 2: Spline\n",
+    "        # Rozszerzamy grid do wymiaru wej\u015bcia [In, Grid_Len]\n",
     "        grid = self.grid.repeat(x.shape[1], 1)\n",
     "        \n",
-    "        # Obliczamy bazę splotów\n",
+    "        # Obliczamy baz\u0119 splot\u00f3w\n",
     "        bases = b_splines(x, grid, self.spline_order) # [Batch, In, Spline_Coeffs]\n",
     "        \n",
-    "        # Mnożenie: [Batch, In, Coeffs] * [Out, In, Coeffs] -> [Batch, Out]\n",
+    "        # Mno\u017cenie: [Batch, In, Coeffs] * [Out, In, Coeffs] -> [Batch, Out]\n",
     "        spline_output = torch.einsum(\"bij,oij->bo\", bases, self.spline_weight)\n",
     "        \n",
     "        return base_output + spline_output\n",
@@ -227,11 +234,11 @@
    "source": [
     "## Eksperyment: Odtwarzanie Funkcji\n",
     "\n",
-    "Nauczymy sieć KAN (z 1 warstwą!) skomplikowanej funkcji matematycznej:\n",
+    "Nauczymy sie\u0107 KAN (z 1 warstw\u0105!) skomplikowanej funkcji matematycznej:\n",
     "$$ f(x) = \\sin(3x) + x^2 - 0.5 $$\n",
     "\n",
-    "Zwykły MLP potrzebowałby wielu neuronów i warstw, żeby przybliżyć ten kształt (schodkami ReLU).\n",
-    "KAN powinien nauczyć się **dokładnego kształtu**, wyginając swoje funkcje aktywacji."
+    "Zwyk\u0142y MLP potrzebowa\u0142by wielu neuron\u00f3w i warstw, \u017ceby przybli\u017cy\u0107 ten kszta\u0142t (schodkami ReLU).\n",
+    "KAN powinien nauczy\u0107 si\u0119 **dok\u0142adnego kszta\u0142tu**, wyginaj\u0105c swoje funkcje aktywacji."
    ]
   },
   {
@@ -269,10 +276,10 @@
     }
    ],
    "source": [
-    "# Model KAN (Mały!)\n",
+    "# Model KAN (Ma\u0142y!)\n",
     "model = nn.Sequential(\n",
-    "    KANLayer(1, 8), # Warstwa 1: 1 wejście -> 8 neuronów\n",
-    "    KANLayer(8, 1)  # Warstwa 2: 8 neuronów -> 1 wyjście\n",
+    "    KANLayer(1, 8), # Warstwa 1: 1 wej\u015bcie -> 8 neuron\u00f3w\n",
+    "    KANLayer(8, 1)  # Warstwa 2: 8 neuron\u00f3w -> 1 wyj\u015bcie\n",
     ").to(DEVICE)\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
@@ -296,7 +303,7 @@
     "        print(f\"Epoka {epoch}, Loss: {loss.item():.6f}\")\n",
     "\n",
     "plt.plot(losses)\n",
-    "plt.title(\"Szybkość uczenia KAN\")\n",
+    "plt.title(\"Szybko\u015b\u0107 uczenia KAN\")\n",
     "plt.yscale('log')\n",
     "plt.show()"
    ]
@@ -337,18 +344,18 @@
    "id": "02d422ba",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Przyszłość jest elastyczna\n",
+    "## \ud83e\udde0 Podsumowanie: Przysz\u0142o\u015b\u0107 jest elastyczna\n",
     "\n",
-    "To niesamowite zakończenie naszej podróży.\n",
-    "Zaczynaliśmy od prostych linii (Regresja Liniowa).\n",
-    "Kończymy na sieciach, które **uczą się kształtu funkcji na swoich połączeniach**.\n",
+    "To niesamowite zako\u0144czenie naszej podr\u00f3\u017cy.\n",
+    "Zaczynali\u015bmy od prostych linii (Regresja Liniowa).\n",
+    "Ko\u0144czymy na sieciach, kt\u00f3re **ucz\u0105 si\u0119 kszta\u0142tu funkcji na swoich po\u0142\u0105czeniach**.\n",
     "\n",
-    "**Dlaczego KAN to przyszłość?**\n",
-    "W papierze badawczym autorzy pokazali, że KAN-y potrafią \"odkrywać prawa fizyki\" z danych i są znacznie bardziej interpretowalne niż czarne skrzynki MLP (można spojrzeć na kształt Spline'a i powiedzieć: \"O, to wygląda jak sinus!\").\n",
+    "**Dlaczego KAN to przysz\u0142o\u015b\u0107?**\n",
+    "W papierze badawczym autorzy pokazali, \u017ce KAN-y potrafi\u0105 \"odkrywa\u0107 prawa fizyki\" z danych i s\u0105 znacznie bardziej interpretowalne ni\u017c czarne skrzynki MLP (mo\u017cna spojrze\u0107 na kszta\u0142t Spline'a i powiedzie\u0107: \"O, to wygl\u0105da jak sinus!\").\n",
     "\n",
     "**To koniec kursu.**\n",
-    "Masz w rękach wiedzę od średniej arytmetycznej po najnowsze osiągnięcia z 2024 roku.\n",
-    "Teraz Twoja kolej, żeby coś z tym zbudować. Powodzenia, Inżynierze! 🚀"
+    "Masz w r\u0119kach wiedz\u0119 od \u015bredniej arytmetycznej po najnowsze osi\u0105gni\u0119cia z 2024 roku.\n",
+    "Teraz Twoja kolej, \u017ceby co\u015b z tym zbudowa\u0107. Powodzenia, In\u017cynierze! \ud83d\ude80"
    ]
   }
  ],
