--- a/81_Audio_Mel_Spectrograms.ipynb
+++ b/81_Audio_Mel_Spectrograms.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/81_Audio_Mel_Spectrograms.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d894dcdf",
    "metadata": {},
    "source": [
-    "# 🎧 Audio Processing: Jak AI słyszy świat? (Mel-Spectrogram)\n",
+    "# \ud83c\udfa7 Audio Processing: Jak AI s\u0142yszy \u015bwiat? (Mel-Spectrogram)\n",
     "\n",
-    "Modele takie jak Whisper czy Siri nie \"słuchają\" fali dźwiękowej bezpośrednio. One \"patrzą\" na jej reprezentację wizualną.\n",
+    "Modele takie jak Whisper czy Siri nie \"s\u0142uchaj\u0105\" fali d\u017awi\u0119kowej bezpo\u015brednio. One \"patrz\u0105\" na jej reprezentacj\u0119 wizualn\u0105.\n",
     "\n",
     "**Transformacja:**\n",
-    "1.  **Waveform (Czas):** Zwykły wykres amplitudy (to, co widzisz w Audacity). Mało czytelne dla AI.\n",
-    "2.  **STFT (Short-Time Fourier Transform):** Dzielimy dźwięk na klatki (np. co 20ms) i robimy FFT. Otrzymujemy mapę: Czas x Częstotliwość.\n",
-    "3.  **Mel-Spectrogram:** Ściskamy oś częstotliwości, używając **Skali Melowej**.\n",
-    "    *   Niskie tony (bas) są rozciągnięte (ważne dla mowy).\n",
-    "    *   Wysokie tony (pisk) są ściśnięte (mało ważne).\n",
+    "1.  **Waveform (Czas):** Zwyk\u0142y wykres amplitudy (to, co widzisz w Audacity). Ma\u0142o czytelne dla AI.\n",
+    "2.  **STFT (Short-Time Fourier Transform):** Dzielimy d\u017awi\u0119k na klatki (np. co 20ms) i robimy FFT. Otrzymujemy map\u0119: Czas x Cz\u0119stotliwo\u015b\u0107.\n",
+    "3.  **Mel-Spectrogram:** \u015aciskamy o\u015b cz\u0119stotliwo\u015bci, u\u017cywaj\u0105c **Skali Melowej**.\n",
+    "    *   Niskie tony (bas) s\u0105 rozci\u0105gni\u0119te (wa\u017cne dla mowy).\n",
+    "    *   Wysokie tony (pisk) s\u0105 \u015bci\u015bni\u0119te (ma\u0142o wa\u017cne).\n",
     "\n",
-    "W tym notatniku wygenerujemy dźwięk, posłuchamy go i zamienimy na \"obraz\", który rozumie sieć neuronowa."
+    "W tym notatniku wygenerujemy d\u017awi\u0119k, pos\u0142uchamy go i zamienimy na \"obraz\", kt\u00f3ry rozumie sie\u0107 neuronowa."
    ]
   },
   {
@@ -36,10 +43,10 @@
     "import IPython.display as ipd\n",
     "\n",
     "# Konfiguracja\n",
-    "SR = 22050 # Sample Rate (standardowa jakość audio)\n",
+    "SR = 22050 # Sample Rate (standardowa jako\u015b\u0107 audio)\n",
     "DURATION = 5 # Sekundy\n",
     "\n",
-    "print(f\"Będziemy przetwarzać {SR * DURATION} próbek.\")"
+    "print(f\"B\u0119dziemy przetwarza\u0107 {SR * DURATION} pr\u00f3bek.\")"
    ]
   },
   {
@@ -47,11 +54,11 @@
    "id": "483894b0",
    "metadata": {},
    "source": [
-    "## Generowanie Dźwięku (Chirp Signal)\n",
+    "## Generowanie D\u017awi\u0119ku (Chirp Signal)\n",
     "\n",
-    "Stworzymy sztuczny sygnał, który zmienia częstotliwość w czasie (tzw. \"Sweep\" lub \"Chirp\").\n",
-    "Zaczniemy od niskiego basu (100 Hz) i pójdziemy do wysokiego pisku (8000 Hz).\n",
-    "Dzięki temu idealnie zobaczymy różnicę między skalą liniową a Melową."
+    "Stworzymy sztuczny sygna\u0142, kt\u00f3ry zmienia cz\u0119stotliwo\u015b\u0107 w czasie (tzw. \"Sweep\" lub \"Chirp\").\n",
+    "Zaczniemy od niskiego basu (100 Hz) i p\u00f3jdziemy do wysokiego pisku (8000 Hz).\n",
+    "Dzi\u0119ki temu idealnie zobaczymy r\u00f3\u017cnic\u0119 mi\u0119dzy skal\u0105 liniow\u0105 a Melow\u0105."
    ]
   },
   {
@@ -64,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔊 Posłuchaj sygnału:\n"
+      "\ud83d\udd0a Pos\u0142uchaj sygna\u0142u:\n"
      ]
     },
     {
@@ -98,22 +105,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Widać tylko, że coś 'gęstnieje', ale nie widać jakie to nuty.\n"
+      "Wida\u0107 tylko, \u017ce co\u015b 'g\u0119stnieje', ale nie wida\u0107 jakie to nuty.\n"
      ]
     }
    ],
    "source": [
-    "# Oś czasu\n",
+    "# O\u015b czasu\n",
     "t = np.linspace(0, DURATION, int(SR * DURATION))\n",
     "\n",
-    "# Generujemy sygnał \"Chirp\" (częstotliwość rośnie liniowo)\n",
-    "# f(t) zmienia się od 100 Hz do 8000 Hz\n",
+    "# Generujemy sygna\u0142 \"Chirp\" (cz\u0119stotliwo\u015b\u0107 ro\u015bnie liniowo)\n",
+    "# f(t) zmienia si\u0119 od 100 Hz do 8000 Hz\n",
     "freqs = np.linspace(100, 8000, len(t))\n",
     "phase = 2 * np.pi * np.cumsum(freqs) / SR\n",
     "signal = 0.5 * np.sin(phase)\n",
     "\n",
-    "# Posłuchajmy tego! (Działa w Colab/Jupyter)\n",
-    "print(\"🔊 Posłuchaj sygnału:\")\n",
+    "# Pos\u0142uchajmy tego! (Dzia\u0142a w Colab/Jupyter)\n",
+    "print(\"\ud83d\udd0a Pos\u0142uchaj sygna\u0142u:\")\n",
     "ipd.display(ipd.Audio(signal, rate=SR))\n",
     "\n",
     "# Wizualizacja fali (Waveform)\n",
@@ -123,7 +130,7 @@
     "plt.xlabel(\"Czas (s)\")\n",
     "plt.show()\n",
     "\n",
-    "print(\"Widać tylko, że coś 'gęstnieje', ale nie widać jakie to nuty.\")"
+    "print(\"Wida\u0107 tylko, \u017ce co\u015b 'g\u0119stnieje', ale nie wida\u0107 jakie to nuty.\")"
    ]
   },
   {
@@ -133,8 +140,8 @@
    "source": [
     "## Krok 1: STFT (Spektrogram Liniowy)\n",
     "\n",
-    "Używamy **Szybkiej Transformaty Fouriera (FFT)** na małych kawałkach sygnału.\n",
-    "Oś Y to częstotliwość w Hz (liniowo)."
+    "U\u017cywamy **Szybkiej Transformaty Fouriera (FFT)** na ma\u0142ych kawa\u0142kach sygna\u0142u.\n",
+    "O\u015b Y to cz\u0119stotliwo\u015b\u0107 w Hz (liniowo)."
    ]
   },
   {
@@ -158,18 +165,18 @@
      "output_type": "stream",
      "text": [
       "ANALIZA:\n",
-      "Widzisz prostą linię idącą w górę? To nasza rosnąca częstotliwość.\n",
-      "Na osi liniowej (Hz) zmiana o 1000 Hz wygląda tak samo na dole i na górze wykresu.\n"
+      "Widzisz prost\u0105 lini\u0119 id\u0105c\u0105 w g\u00f3r\u0119? To nasza rosn\u0105ca cz\u0119stotliwo\u015b\u0107.\n",
+      "Na osi liniowej (Hz) zmiana o 1000 Hz wygl\u0105da tak samo na dole i na g\u00f3rze wykresu.\n"
      ]
     }
    ],
    "source": [
     "# Obliczamy STFT\n",
-    "# n_fft = długość okna (ile próbek bierzemy do jednego FFT)\n",
-    "# hop_length = przesunięcie (co ile próbek robimy nowe okno)\n",
+    "# n_fft = d\u0142ugo\u015b\u0107 okna (ile pr\u00f3bek bierzemy do jednego FFT)\n",
+    "# hop_length = przesuni\u0119cie (co ile pr\u00f3bek robimy nowe okno)\n",
     "stft = librosa.stft(signal, n_fft=2048, hop_length=512)\n",
     "\n",
-    "# Zamieniamy na decybele (skala logarytmiczna amplitudy - tak słyszy ucho głośność)\n",
+    "# Zamieniamy na decybele (skala logarytmiczna amplitudy - tak s\u0142yszy ucho g\u0142o\u015bno\u015b\u0107)\n",
     "spectrogram_db = librosa.amplitude_to_db(np.abs(stft), ref=np.max)\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
@@ -179,8 +186,8 @@
     "plt.show()\n",
     "\n",
     "print(\"ANALIZA:\")\n",
-    "print(\"Widzisz prostą linię idącą w górę? To nasza rosnąca częstotliwość.\")\n",
-    "print(\"Na osi liniowej (Hz) zmiana o 1000 Hz wygląda tak samo na dole i na górze wykresu.\")"
+    "print(\"Widzisz prost\u0105 lini\u0119 id\u0105c\u0105 w g\u00f3r\u0119? To nasza rosn\u0105ca cz\u0119stotliwo\u015b\u0107.\")\n",
+    "print(\"Na osi liniowej (Hz) zmiana o 1000 Hz wygl\u0105da tak samo na dole i na g\u00f3rze wykresu.\")"
    ]
   },
   {
@@ -188,13 +195,13 @@
    "id": "cd765ada",
    "metadata": {},
    "source": [
-    "## Krok 2: Mel-Spectrogram (Jak słyszy człowiek?)\n",
+    "## Krok 2: Mel-Spectrogram (Jak s\u0142yszy cz\u0142owiek?)\n",
     "\n",
-    "Dla człowieka różnica między 100 Hz a 200 Hz to cała oktawa (dużo).\n",
-    "Różnica między 10000 Hz a 10100 Hz jest niesłyszalna.\n",
+    "Dla cz\u0142owieka r\u00f3\u017cnica mi\u0119dzy 100 Hz a 200 Hz to ca\u0142a oktawa (du\u017co).\n",
+    "R\u00f3\u017cnica mi\u0119dzy 10000 Hz a 10100 Hz jest nies\u0142yszalna.\n",
     "\n",
-    "**Skala Melowa** \"rozciąga\" dół wykresu i \"ściska\" górę.\n",
-    "Dzięki temu AI skupia się na mowie (która jest nisko), a ignoruje szumy (które są wysoko)."
+    "**Skala Melowa** \"rozci\u0105ga\" d\u00f3\u0142 wykresu i \"\u015bciska\" g\u00f3r\u0119.\n",
+    "Dzi\u0119ki temu AI skupia si\u0119 na mowie (kt\u00f3ra jest nisko), a ignoruje szumy (kt\u00f3re s\u0105 wysoko)."
    ]
   },
   {
@@ -218,29 +225,29 @@
      "output_type": "stream",
      "text": [
       "ANALIZA:\n",
-      "Spójrz na linię. Nie jest już prosta! Jest wygięta (logarytmiczna).\n",
-      "Niskie częstotliwości zajmują więcej miejsca na wykresie.\n",
-      "To jest dokładnie ten obrazek, który wchodzi do modelu Whisper.\n"
+      "Sp\u00f3jrz na lini\u0119. Nie jest ju\u017c prosta! Jest wygi\u0119ta (logarytmiczna).\n",
+      "Niskie cz\u0119stotliwo\u015bci zajmuj\u0105 wi\u0119cej miejsca na wykresie.\n",
+      "To jest dok\u0142adnie ten obrazek, kt\u00f3ry wchodzi do modelu Whisper.\n"
      ]
     }
    ],
    "source": [
     "# Tworzymy Mel-Spectrogram\n",
-    "# n_mels = 128 (standardowa \"wysokość\" obrazka dla sieci neuronowych)\n",
+    "# n_mels = 128 (standardowa \"wysoko\u015b\u0107\" obrazka dla sieci neuronowych)\n",
     "mel_spectrogram = librosa.feature.melspectrogram(y=signal, sr=SR, n_mels=128, fmax=8000)\n",
     "mel_spectrogram_db = librosa.power_to_db(mel_spectrogram, ref=np.max)\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
-    "# Zauważ: y_axis='mel'\n",
+    "# Zauwa\u017c: y_axis='mel'\n",
     "librosa.display.specshow(mel_spectrogram_db, sr=SR, x_axis='time', y_axis='mel', fmax=8000)\n",
     "plt.colorbar(format='%+2.0f dB')\n",
-    "plt.title(\"Mel-Spectrogram (Wejście dla AI)\")\n",
+    "plt.title(\"Mel-Spectrogram (Wej\u015bcie dla AI)\")\n",
     "plt.show()\n",
     "\n",
     "print(\"ANALIZA:\")\n",
-    "print(\"Spójrz na linię. Nie jest już prosta! Jest wygięta (logarytmiczna).\")\n",
-    "print(\"Niskie częstotliwości zajmują więcej miejsca na wykresie.\")\n",
-    "print(\"To jest dokładnie ten obrazek, który wchodzi do modelu Whisper.\")"
+    "print(\"Sp\u00f3jrz na lini\u0119. Nie jest ju\u017c prosta! Jest wygi\u0119ta (logarytmiczna).\")\n",
+    "print(\"Niskie cz\u0119stotliwo\u015bci zajmuj\u0105 wi\u0119cej miejsca na wykresie.\")\n",
+    "print(\"To jest dok\u0142adnie ten obrazek, kt\u00f3ry wchodzi do modelu Whisper.\")"
    ]
   },
   {
@@ -248,17 +255,17 @@
    "id": "bd9d04b5",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Dźwięk to Obraz\n",
+    "## \ud83e\udde0 Podsumowanie: D\u017awi\u0119k to Obraz\n",
     "\n",
-    "Dla Inżyniera AI (Deep Learning), **Audio to po prostu Computer Vision**.\n",
+    "Dla In\u017cyniera AI (Deep Learning), **Audio to po prostu Computer Vision**.\n",
     "\n",
     "Gdy zamienisz nagranie na Mel-Spectrogram:\n",
-    "1.  Możesz użyć sieci **CNN** (jak w notatniku 38), żeby klasyfikować dźwięki (szczekanie psa vs klakson).\n",
-    "2.  Możesz użyć **Transformera**, żeby rozpoznawać mowę (Whisper traktuje spektrogram jako sekwencję \"patchy\", tak jak ViT w notatniku 70).\n",
+    "1.  Mo\u017cesz u\u017cy\u0107 sieci **CNN** (jak w notatniku 38), \u017ceby klasyfikowa\u0107 d\u017awi\u0119ki (szczekanie psa vs klakson).\n",
+    "2.  Mo\u017cesz u\u017cy\u0107 **Transformera**, \u017ceby rozpoznawa\u0107 mow\u0119 (Whisper traktuje spektrogram jako sekwencj\u0119 \"patchy\", tak jak ViT w notatniku 70).\n",
     "\n",
     "**Kluczowe parametry w produkcji:**\n",
     "*   `Sample Rate`: Zazwyczaj 16kHz (dla mowy) lub 44.1kHz (dla muzyki).\n",
-    "*   `n_mels`: Zazwyczaj 80 lub 128 (ilość \"pikseli\" w pionie)."
+    "*   `n_mels`: Zazwyczaj 80 lub 128 (ilo\u015b\u0107 \"pikseli\" w pionie)."
    ]
   }
  ],
