--- a/82_Audio_ASR_CTC_Loss.ipynb
+++ b/82_Audio_ASR_CTC_Loss.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/82_Audio_ASR_CTC_Loss.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4e5bc054",
    "metadata": {},
    "source": [
-    "# 🗣️ CTC Loss: Jak dopasować Dźwięk do Tekstu?\n",
+    "# \ud83d\udde3\ufe0f CTC Loss: Jak dopasowa\u0107 D\u017awi\u0119k do Tekstu?\n",
     "\n",
-    "W rozpoznawaniu mowy (ASR) mamy problem **Niewyrównania (Alignment)**.\n",
-    "Wejście (Audio) jest znacznie dłuższe niż Wyjście (Tekst).\n",
+    "W rozpoznawaniu mowy (ASR) mamy problem **Niewyr\u00f3wnania (Alignment)**.\n",
+    "Wej\u015bcie (Audio) jest znacznie d\u0142u\u017csze ni\u017c Wyj\u015bcie (Tekst).\n",
     "\n",
-    "Sieć neuronowa dla każdej milisekundy dźwięku wypluwa literkę.\n",
-    "Efekt surowy: `KKK--ooo---ttt` (gdzie `-` to cisza/przejście).\n",
+    "Sie\u0107 neuronowa dla ka\u017cdej milisekundy d\u017awi\u0119ku wypluwa literk\u0119.\n",
+    "Efekt surowy: `KKK--ooo---ttt` (gdzie `-` to cisza/przej\u015bcie).\n",
     "\n",
     "**Algorytm CTC Decoding:**\n",
-    "1.  **Krok 1 (Argmax):** Wybierz najbardziej prawdopodobny znak w każdej klatce czasu.\n",
-    "2.  **Krok 2 (Collapse):** Zwiń powtarzające się znaki (np. `KK` -> `K`).\n",
-    "3.  **Krok 3 (Blank Removal):** Usuń znak specjalny `<blank>` (`-`).\n",
+    "1.  **Krok 1 (Argmax):** Wybierz najbardziej prawdopodobny znak w ka\u017cdej klatce czasu.\n",
+    "2.  **Krok 2 (Collapse):** Zwi\u0144 powtarzaj\u0105ce si\u0119 znaki (np. `KK` -> `K`).\n",
+    "3.  **Krok 3 (Blank Removal):** Usu\u0144 znak specjalny `<blank>` (`-`).\n",
     "\n",
-    "Dzięki temu `_pp_ii_zza_` zamienia się w `pizza`.\n",
-    "A `_pp_ii_zz_aa` (gdzie `_` rozdziela dwa `z`) też zamienia się w `pizza`.\n",
+    "Dzi\u0119ki temu `_pp_ii_zza_` zamienia si\u0119 w `pizza`.\n",
+    "A `_pp_ii_zz_aa` (gdzie `_` rozdziela dwa `z`) te\u017c zamienia si\u0119 w `pizza`.\n",
     "\n",
     "Zaimplementujemy **Greedy Decoder** dla CTC."
    ]
@@ -34,8 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Słownik: ['-', 'b', 'e', 'r']\n",
-      "Cel: Zdekodować słowo 'beer' z zaszumionego ciągu.\n"
+      "S\u0142ownik: ['-', 'b', 'e', 'r']\n",
+      "Cel: Zdekodowa\u0107 s\u0142owo 'beer' z zaszumionego ci\u0105gu.\n"
      ]
     }
    ],
@@ -45,13 +52,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 1. SŁOWNIK\n",
+    "# 1. S\u0141OWNIK\n",
     "# Mamy tylko 4 znaki. Indeks 0 to zawsze BLANK (-) w CTC.\n",
     "vocab = ['-', 'b', 'e', 'r'] \n",
     "# Indeksy: 0='-', 1='b', 2='e', 3='r'\n",
     "\n",
-    "print(f\"Słownik: {vocab}\")\n",
-    "print(\"Cel: Zdekodować słowo 'beer' z zaszumionego ciągu.\")"
+    "print(f\"S\u0142ownik: {vocab}\")\n",
+    "print(\"Cel: Zdekodowa\u0107 s\u0142owo 'beer' z zaszumionego ci\u0105gu.\")"
    ]
   },
   {
@@ -59,12 +66,12 @@
    "id": "61312242",
    "metadata": {},
    "source": [
-    "## Symulacja Wyjścia Sieci (Logity)\n",
+    "## Symulacja Wyj\u015bcia Sieci (Logity)\n",
     "\n",
-    "Wyobraźmy sobie, że nasza sieć neuronowa (RNN) przetworzyła 10 klatek audio.\n",
-    "Dla każdej klatki zwróciła prawdopodobieństwa dla 4 znaków `[-, b, e, r]`.\n",
+    "Wyobra\u017amy sobie, \u017ce nasza sie\u0107 neuronowa (RNN) przetworzy\u0142a 10 klatek audio.\n",
+    "Dla ka\u017cdej klatki zwr\u00f3ci\u0142a prawdopodobie\u0144stwa dla 4 znak\u00f3w `[-, b, e, r]`.\n",
     "\n",
-    "Stworzymy macierz prawdopodobieństw ręcznie, żeby symulowała ciąg:\n",
+    "Stworzymy macierz prawdopodobie\u0144stw r\u0119cznie, \u017ceby symulowa\u0142a ci\u0105g:\n",
     "`b` -> `b` -> `-` -> `e` -> `e` -> `e` -> `-` -> `r` -> `r` -> `-`"
    ]
   },
@@ -78,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- NOWA MACIERZ (Z przerwą między 'e') ---\n"
+      "--- NOWA MACIERZ (Z przerw\u0105 mi\u0119dzy 'e') ---\n"
      ]
     },
     {
@@ -93,8 +100,8 @@
     }
    ],
    "source": [
-    "# Czas = 10 kroków, Klasy = 4\n",
-    "# Tworzymy macierz logitów tak, żeby rozdzielić 'e'\n",
+    "# Czas = 10 krok\u00f3w, Klasy = 4\n",
+    "# Tworzymy macierz logit\u00f3w tak, \u017ceby rozdzieli\u0107 'e'\n",
     "# Sekwencja: b -> - -> e -> - -> e -> - -> r -> - ...\n",
     "\n",
     "logits = torch.tensor([\n",
@@ -102,7 +109,7 @@
     "    [-5., 10., -5., -5.],  # t0: 'b'\n",
     "    [10., -5., -5., -5.],  # t1: '-' (Cisza po b)\n",
     "    [-5., -5., 10., -5.],  # t2: 'e' (Pierwsze e)\n",
-    "    [10., -5., -5., -5.],  # t3: '-' (WAŻNE! Rozdziela dwa e)\n",
+    "    [10., -5., -5., -5.],  # t3: '-' (WA\u017bNE! Rozdziela dwa e)\n",
     "    [-5., -5., 10., -5.],  # t4: 'e' (Drugie e)\n",
     "    [10., -5., -5., -5.],  # t5: '-'\n",
     "    [-5., -5., -5., 10.],  # t6: 'r'\n",
@@ -111,16 +118,16 @@
     "    [10., -5., -5., -5.]   # t9: '-'\n",
     "])\n",
     "\n",
-    "# Zamiana na prawdopodobieństwa (Softmax)\n",
+    "# Zamiana na prawdopodobie\u0144stwa (Softmax)\n",
     "probs = F.softmax(logits, dim=1)\n",
     "\n",
-    "print(\"--- NOWA MACIERZ (Z przerwą między 'e') ---\")\n",
+    "print(\"--- NOWA MACIERZ (Z przerw\u0105 mi\u0119dzy 'e') ---\")\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.imshow(probs.T, cmap='Blues')\n",
     "plt.yticks(range(4), vocab)\n",
     "plt.xlabel(\"Czas (Klatki)\")\n",
-    "plt.title(\"Co 'słyszy' sieć? (Zauważ przerwę w t3)\")\n",
-    "plt.colorbar(label=\"Prawdopodobieństwo\")\n",
+    "plt.title(\"Co 's\u0142yszy' sie\u0107? (Zauwa\u017c przerw\u0119 w t3)\")\n",
+    "plt.colorbar(label=\"Prawdopodobie\u0144stwo\")\n",
     "plt.show()"
    ]
   },
@@ -131,8 +138,8 @@
    "source": [
     "## Krok 1: Greedy Decoding (Argmax)\n",
     "\n",
-    "Najprostsza metoda. W każdym kroku czasowym bierzemy ten znak, który ma najwyższy słupek (największe prawdopodobieństwo).\n",
-    "Nie patrzymy na kontekst, po prostu bierzemy zwycięzcę chwili."
+    "Najprostsza metoda. W ka\u017cdym kroku czasowym bierzemy ten znak, kt\u00f3ry ma najwy\u017cszy s\u0142upek (najwi\u0119ksze prawdopodobie\u0144stwo).\n",
+    "Nie patrzymy na kontekst, po prostu bierzemy zwyci\u0119zc\u0119 chwili."
    ]
   },
   {
@@ -146,19 +153,19 @@
      "output_type": "stream",
      "text": [
       "Indeksy wygrane: [1, 0, 2, 0, 2, 0, 3, 0, 0, 0]\n",
-      "Surowy ciąg: 'b-e-e-r---'\n"
+      "Surowy ci\u0105g: 'b-e-e-r---'\n"
      ]
     }
    ],
    "source": [
-    "# Argmax wzdłuż osi klas (dim=1)\n",
+    "# Argmax wzd\u0142u\u017c osi klas (dim=1)\n",
     "best_indices = torch.argmax(probs, dim=1)\n",
     "\n",
     "print(f\"Indeksy wygrane: {best_indices.tolist()}\")\n",
     "\n",
     "# Zamiana na znaki\n",
     "raw_string = \"\".join([vocab[i] for i in best_indices])\n",
-    "print(f\"Surowy ciąg: '{raw_string}'\")"
+    "print(f\"Surowy ci\u0105g: '{raw_string}'\")"
    ]
   },
   {
@@ -168,20 +175,20 @@
    "source": [
     "## Krok 2: Logika CTC (Zwijanie)\n",
     "\n",
-    "Teraz musimy zastosować reguły CTC, żeby odzyskać sensowne słowo.\n",
+    "Teraz musimy zastosowa\u0107 regu\u0142y CTC, \u017ceby odzyska\u0107 sensowne s\u0142owo.\n",
     "\n",
-    "**Reguły:**\n",
-    "1.  Zwiń sąsiadujące duplikaty (`ee` -> `e`).\n",
-    "2.  Usuń znaki `Blank` (`-`).\n",
+    "**Regu\u0142y:**\n",
+    "1.  Zwi\u0144 s\u0105siaduj\u0105ce duplikaty (`ee` -> `e`).\n",
+    "2.  Usu\u0144 znaki `Blank` (`-`).\n",
     "\n",
-    "**Ważne:** Kolejność ma znaczenie! Najpierw zwijamy duplikaty, POTEM usuwamy blanki.\n",
+    "**Wa\u017cne:** Kolejno\u015b\u0107 ma znaczenie! Najpierw zwijamy duplikaty, POTEM usuwamy blanki.\n",
     "Dlaczego?\n",
-    "Spójrz na słowo \"bee\" (pszczoła).\n",
-    "Sieć widzi: `b... e... - ... e`.\n",
+    "Sp\u00f3jrz na s\u0142owo \"bee\" (pszczo\u0142a).\n",
+    "Sie\u0107 widzi: `b... e... - ... e`.\n",
     "*   Zwijanie: `b` `e` `-` `e`.\n",
     "*   Usuwanie blanka: `b` `e` `e`. (Sukces! Mamy dwa 'e').\n",
     "\n",
-    "Gdyby nie było blanka po środku (`b... e... e...`), zwinęlibyśmy to do `be` (jedno 'e')."
+    "Gdyby nie by\u0142o blanka po \u015brodku (`b... e... e...`), zwin\u0119liby\u015bmy to do `be` (jedno 'e')."
    ]
   },
   {
@@ -194,30 +201,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Po zwinięciu duplikatów: ['b', '-', 'e', '-', 'e', '-', 'r', '-']\n",
+      "Po zwini\u0119ciu duplikat\u00f3w: ['b', '-', 'e', '-', 'e', '-', 'r', '-']\n",
       "------------------------------\n",
-      "Oryginał (Surowy): 'b-e-e-r---'\n",
+      "Orygina\u0142 (Surowy): 'b-e-e-r---'\n",
       "Wynik CTC:         'beer'\n",
-      "✅ SUKCES! Zrozumieliśmy słowo 'beer'.\n"
+      "\u2705 SUKCES! Zrozumieli\u015bmy s\u0142owo 'beer'.\n"
      ]
     }
    ],
    "source": [
     "def ctc_decode(indices, vocabulary):\n",
     "    decoded = []\n",
-    "    last_idx = -1 # Pamiętamy poprzedni znak\n",
+    "    last_idx = -1 # Pami\u0119tamy poprzedni znak\n",
     "    \n",
-    "    # KROK A: Zwijanie duplikatów (Collapse)\n",
+    "    # KROK A: Zwijanie duplikat\u00f3w (Collapse)\n",
     "    for idx in indices:\n",
     "        idx = idx.item()\n",
     "        if idx != last_idx:\n",
     "            decoded.append(idx)\n",
     "            last_idx = idx\n",
     "            \n",
-    "    print(f\"Po zwinięciu duplikatów: {[vocabulary[i] for i in decoded]}\")\n",
+    "    print(f\"Po zwini\u0119ciu duplikat\u00f3w: {[vocabulary[i] for i in decoded]}\")\n",
     "    \n",
-    "    # KROK B: Usuwanie blanków (Blank Removal)\n",
-    "    # Zakładamy, że Blank ma indeks 0\n",
+    "    # KROK B: Usuwanie blank\u00f3w (Blank Removal)\n",
+    "    # Zak\u0142adamy, \u017ce Blank ma indeks 0\n",
     "    final_text = [vocabulary[i] for i in decoded if i != 0]\n",
     "    \n",
     "    return \"\".join(final_text)\n",
@@ -225,13 +232,13 @@
     "result = ctc_decode(best_indices, vocab)\n",
     "\n",
     "print(\"-\" * 30)\n",
-    "print(f\"Oryginał (Surowy): '{raw_string}'\")\n",
+    "print(f\"Orygina\u0142 (Surowy): '{raw_string}'\")\n",
     "print(f\"Wynik CTC:         '{result}'\")\n",
     "\n",
     "if result == \"beer\":\n",
-    "    print(\"✅ SUKCES! Zrozumieliśmy słowo 'beer'.\")\n",
+    "    print(\"\u2705 SUKCES! Zrozumieli\u015bmy s\u0142owo 'beer'.\")\n",
     "else:\n",
-    "    print(\"❌ Coś poszło nie tak.\")"
+    "    print(\"\u274c Co\u015b posz\u0142o nie tak.\")"
    ]
   },
   {
@@ -239,15 +246,15 @@
    "id": "f61e9c6d",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Rola Ciszy\n",
+    "## \ud83e\udde0 Podsumowanie: Rola Ciszy\n",
     "\n",
-    "W CTC **Blank (Cisza)** pełni kluczową rolę gramatyczną.\n",
-    "To on pozwala odróżnić \"długie e\" (w słowie *bEEt*) od \"dwóch e\" (w słowie *bE-Et*).\n",
+    "W CTC **Blank (Cisza)** pe\u0142ni kluczow\u0105 rol\u0119 gramatyczn\u0105.\n",
+    "To on pozwala odr\u00f3\u017cni\u0107 \"d\u0142ugie e\" (w s\u0142owie *bEEt*) od \"dw\u00f3ch e\" (w s\u0142owie *bE-Et*).\n",
     "\n",
     "**Gdzie to spotkasz?**\n",
     "*   **DeepSpeech (Mozilla):** Czyste CTC.\n",
-    "*   **Wav2Vec 2.0 / HuBERT:** Używają CTC jako jednej z głowic trenujących.\n",
-    "*   **Whisper (OpenAI):** Działa inaczej (Encoder-Decoder Sequence-to-Sequence), więc nie potrzebuje CTC, bo generuje tekst jak GPT (token po tokenie), ale CTC jest lżejsze i szybsze dla prostych komend."
+    "*   **Wav2Vec 2.0 / HuBERT:** U\u017cywaj\u0105 CTC jako jednej z g\u0142owic trenuj\u0105cych.\n",
+    "*   **Whisper (OpenAI):** Dzia\u0142a inaczej (Encoder-Decoder Sequence-to-Sequence), wi\u0119c nie potrzebuje CTC, bo generuje tekst jak GPT (token po tokenie), ale CTC jest l\u017cejsze i szybsze dla prostych komend."
    ]
   }
  ],
