--- a/83_Text_to_Speech_Tacotron.ipynb
+++ b/83_Text_to_Speech_Tacotron.ipynb
@@ -2,19 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/83_Text_to_Speech_Tacotron.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bbf7dbfc",
    "metadata": {},
    "source": [
-    "# 🗣️ Text-to-Speech (TTS): Architektura Tacotron\n",
+    "# \ud83d\udde3\ufe0f Text-to-Speech (TTS): Architektura Tacotron\n",
     "\n",
     "Synteza mowy to problem **Sequence-to-Sequence**.\n",
-    "*   Wejście: Sekwencja liter (krótka, np. 20 znaków).\n",
-    "*   Wyjście: Sekwencja klatek audio (długa, np. 200 ramek spektrogramu).\n",
+    "*   Wej\u015bcie: Sekwencja liter (kr\u00f3tka, np. 20 znak\u00f3w).\n",
+    "*   Wyj\u015bcie: Sekwencja klatek audio (d\u0142uga, np. 200 ramek spektrogramu).\n",
     "\n",
     "**Architektura:**\n",
-    "1.  **Encoder (Text):** Przetwarza tekst i wyciąga z niego kontekst.\n",
-    "2.  **Attention (Alignment):** Kluczowy element. Decyduje, którą literę teraz \"wymawiamy\". W TTS uwaga musi przesuwać się płynnie od lewej do prawej (Monotonic Alignment).\n",
-    "3.  **Decoder (Audio):** Generuje spektrogram klatka po klatce (autoregresyjnie), patrząc na to, co wygenerował wcześniej.\n",
+    "1.  **Encoder (Text):** Przetwarza tekst i wyci\u0105ga z niego kontekst.\n",
+    "2.  **Attention (Alignment):** Kluczowy element. Decyduje, kt\u00f3r\u0105 liter\u0119 teraz \"wymawiamy\". W TTS uwaga musi przesuwa\u0107 si\u0119 p\u0142ynnie od lewej do prawej (Monotonic Alignment).\n",
+    "3.  **Decoder (Audio):** Generuje spektrogram klatka po klatce (autoregresyjnie), patrz\u0105c na to, co wygenerowa\u0142 wcze\u015bniej.\n",
     "\n",
     "Zbudujemy uproszczony model **Mini-Tacotron**."
    ]
@@ -29,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Urządzenie: cuda\n"
+      "Urz\u0105dzenie: cuda\n"
      ]
     }
    ],
@@ -46,11 +53,11 @@
     "# Wymiary\n",
     "VOCAB_SIZE = 30   # Alfabet (a-z + znaki spec)\n",
     "EMBED_DIM = 64    # Wektor dla litery\n",
-    "ENC_HIDDEN = 128  # Pamięć Encodera\n",
-    "DEC_HIDDEN = 128  # Pamięć Decodera\n",
-    "MEL_CHANNELS = 80 # Wysokość spektrogramu (standard w TTS)\n",
+    "ENC_HIDDEN = 128  # Pami\u0119\u0107 Encodera\n",
+    "DEC_HIDDEN = 128  # Pami\u0119\u0107 Decodera\n",
+    "MEL_CHANNELS = 80 # Wysoko\u015b\u0107 spektrogramu (standard w TTS)\n",
     "\n",
-    "print(f\"Urządzenie: {DEVICE}\")"
+    "print(f\"Urz\u0105dzenie: {DEVICE}\")"
    ]
   },
   {
@@ -60,7 +67,7 @@
    "source": [
     "## Krok 1: Encoder (Czytanie tekstu)\n",
     "\n",
-    "Encoder to zazwyczaj warstwa konwolucyjna (żeby widzieć sąsiadujące litery, np. \"dzi\", \"sz\") + Bi-directional LSTM.\n",
+    "Encoder to zazwyczaj warstwa konwolucyjna (\u017ceby widzie\u0107 s\u0105siaduj\u0105ce litery, np. \"dzi\", \"sz\") + Bi-directional LSTM.\n",
     "Dla uproszczenia zrobimy samo **Embedding + LSTM**."
    ]
   },
@@ -83,7 +90,7 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.embedding = nn.Embedding(VOCAB_SIZE, EMBED_DIM)\n",
-    "        # Bidirectional = True, bo chcemy znać kontekst z obu stron zdania\n",
+    "        # Bidirectional = True, bo chcemy zna\u0107 kontekst z obu stron zdania\n",
     "        self.lstm = nn.LSTM(EMBED_DIM, ENC_HIDDEN, batch_first=True, bidirectional=True)\n",
     "\n",
     "    def forward(self, text_inputs):\n",
@@ -104,10 +111,10 @@
    "source": [
     "## Krok 2: Attention (Dopasowanie Czasu)\n",
     "\n",
-    "W każdej milisekundzie generowania dźwięku, Decoder musi wiedzieć, na którą literę patrzeć.\n",
-    "Użyjemy prostego mechanizmu uwagi (Dot Product Attention).\n",
+    "W ka\u017cdej milisekundzie generowania d\u017awi\u0119ku, Decoder musi wiedzie\u0107, na kt\u00f3r\u0105 liter\u0119 patrze\u0107.\n",
+    "U\u017cyjemy prostego mechanizmu uwagi (Dot Product Attention).\n",
     "\n",
-    "Wytrenowany model TTS tworzy na mapie uwagi charakterystyczną **przekątną linię** (zaczynamy od początku zdania i idziemy do końca)."
+    "Wytrenowany model TTS tworzy na mapie uwagi charakterystyczn\u0105 **przek\u0105tn\u0105 lini\u0119** (zaczynamy od pocz\u0105tku zdania i idziemy do ko\u0144ca)."
    ]
   },
   {
@@ -133,22 +140,22 @@
     "\n",
     "    def forward(self, hidden, encoder_outputs):\n",
     "        # hidden: [Batch, Dec_Hidden] (Stan obecny Decodera)\n",
-    "        # encoder_outputs: [Batch, Text_Len, Enc_Hidden*2] (Cały tekst)\n",
+    "        # encoder_outputs: [Batch, Text_Len, Enc_Hidden*2] (Ca\u0142y tekst)\n",
     "        \n",
     "        batch_size = encoder_outputs.shape[0]\n",
     "        seq_len = encoder_outputs.shape[1]\n",
     "        \n",
-    "        # Powielamy stan ukryty decodera dla każdej litery, żeby je porównać\n",
+    "        # Powielamy stan ukryty decodera dla ka\u017cdej litery, \u017ceby je por\u00f3wna\u0107\n",
     "        hidden_expanded = hidden.unsqueeze(1).repeat(1, seq_len, 1)\n",
     "        \n",
     "        # Sklejamy stan Decodera z literami\n",
     "        combined = torch.cat((hidden_expanded, encoder_outputs), dim=2)\n",
     "        \n",
-    "        # Liczymy energię (Score)\n",
+    "        # Liczymy energi\u0119 (Score)\n",
     "        energy = torch.tanh(self.attn(combined))\n",
     "        attention_weights = F.softmax(self.v(energy), dim=1)\n",
     "        \n",
-    "        # Context vector: Ważona suma liter\n",
+    "        # Context vector: Wa\u017cona suma liter\n",
     "        # [Batch, 1, Seq_Len] x [Batch, Seq_Len, Enc_Dim*2]\n",
     "        context = torch.bmm(attention_weights.transpose(1, 2), encoder_outputs)\n",
     "        \n",
@@ -164,11 +171,11 @@
    "source": [
     "## Krok 3: Decoder (Generowanie Spektrogramu)\n",
     "\n",
-    "Decoder działa w pętli.\n",
-    "1.  Bierze **ostatnią wygenerowaną klatkę audio** (w treningu bierzemy prawdziwą - Teacher Forcing).\n",
-    "2.  Bierze **kontekst z Attention** (którą literę czytamy?).\n",
+    "Decoder dzia\u0142a w p\u0119tli.\n",
+    "1.  Bierze **ostatni\u0105 wygenerowan\u0105 klatk\u0119 audio** (w treningu bierzemy prawdziw\u0105 - Teacher Forcing).\n",
+    "2.  Bierze **kontekst z Attention** (kt\u00f3r\u0105 liter\u0119 czytamy?).\n",
     "3.  LSTM przetwarza te dane.\n",
-    "4.  Warstwa liniowa przewiduje **nową klatkę** (80 liczb - mel channels)."
+    "4.  Warstwa liniowa przewiduje **now\u0105 klatk\u0119** (80 liczb - mel channels)."
    ]
   },
   {
@@ -204,7 +211,7 @@
     "        self.attention = Attention(ENC_HIDDEN, DEC_HIDDEN)\n",
     "        \n",
     "        # Decoder LSTM\n",
-    "        # Wejście: Poprzednia klatka Audio (80) + Kontekst tekstu (256)\n",
+    "        # Wej\u015bcie: Poprzednia klatka Audio (80) + Kontekst tekstu (256)\n",
     "        self.decoder_rnn = nn.LSTM(MEL_CHANNELS + (ENC_HIDDEN * 2), DEC_HIDDEN, batch_first=True)\n",
     "        \n",
     "        # Projekcja na spektrogram\n",
@@ -213,13 +220,13 @@
     "    def forward(self, text, target_mels=None, teacher_forcing_ratio=1.0):\n",
     "        batch_size = text.shape[0]\n",
     "        \n",
-    "        # Jeśli mamy cel (trening), to znamy długość. Jak nie (inference), ustalamy max.\n",
+    "        # Je\u015bli mamy cel (trening), to znamy d\u0142ugo\u015b\u0107. Jak nie (inference), ustalamy max.\n",
     "        max_len = target_mels.shape[1] if target_mels is not None else 100\n",
     "        \n",
     "        # 1. Kodujemy tekst\n",
     "        enc_outputs = self.encoder(text)\n",
     "        \n",
-    "        # Stan początkowy decodera\n",
+    "        # Stan pocz\u0105tkowy decodera\n",
     "        dec_hidden = torch.zeros(1, batch_size, DEC_HIDDEN).to(DEVICE)\n",
     "        dec_cell = torch.zeros(1, batch_size, DEC_HIDDEN).to(DEVICE)\n",
     "        \n",
@@ -234,23 +241,23 @@
     "            # Bierzemy ostatni stan ukryty (squeeze usuwa wymiar warstw)\n",
     "            context, attn_weights = self.attention(dec_hidden.squeeze(0), enc_outputs)\n",
     "            \n",
-    "            # B. Przygotuj wejście do RNN: [Klatka Audio, Kontekst Tekstowy]\n",
+    "            # B. Przygotuj wej\u015bcie do RNN: [Klatka Audio, Kontekst Tekstowy]\n",
     "            rnn_input = torch.cat((dec_input, context), dim=2)\n",
     "            \n",
     "            # C. Krok LSTM\n",
     "            out, (dec_hidden, dec_cell) = self.decoder_rnn(rnn_input, (dec_hidden, dec_cell))\n",
     "            \n",
-    "            # D. Przewiduj nową klatkę Mel\n",
+    "            # D. Przewiduj now\u0105 klatk\u0119 Mel\n",
     "            mel_frame = self.mel_out(out)\n",
     "            outputs.append(mel_frame)\n",
     "            attn_maps.append(attn_weights)\n",
     "            \n",
-    "            # E. Przygotuj wejście na następny krok\n",
+    "            # E. Przygotuj wej\u015bcie na nast\u0119pny krok\n",
     "            if target_mels is not None and torch.rand(1).item() < teacher_forcing_ratio:\n",
-    "                # Teacher Forcing: Użyj prawdziwej klatki\n",
+    "                # Teacher Forcing: U\u017cyj prawdziwej klatki\n",
     "                dec_input = target_mels[:, t:t+1, :]\n",
     "            else:\n",
-    "                # Autoregresja: Użyj tego, co sam wygenerowałeś\n",
+    "                # Autoregresja: U\u017cyj tego, co sam wygenerowa\u0142e\u015b\n",
     "                dec_input = mel_frame\n",
     "                \n",
     "        return torch.cat(outputs, dim=1), torch.stack(attn_maps, dim=1)\n",
@@ -269,8 +276,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wejście (Tekst): torch.Size([1, 10])\n",
-      "Wyjście (Mel):   torch.Size([1, 50, 80]) -> Oczekiwaliśmy [1, 50, 80]\n"
+      "Wej\u015bcie (Tekst): torch.Size([1, 10])\n",
+      "Wyj\u015bcie (Mel):   torch.Size([1, 50, 80]) -> Oczekiwali\u015bmy [1, 50, 80]\n"
      ]
     },
     {
@@ -285,36 +292,36 @@
     }
    ],
    "source": [
-    "# TEST DZIAŁANIA (Forward Pass)\n",
+    "# TEST DZIA\u0141ANIA (Forward Pass)\n",
     "\n",
     "# 1. Symulujemy dane\n",
     "# Tekst: \"Hello\" -> [8, 5, 12, 12, 15] (tokeny)\n",
-    "text_input = torch.randint(0, VOCAB_SIZE, (1, 10)).to(DEVICE) # Batch=1, Długość tekstu=10\n",
+    "text_input = torch.randint(0, VOCAB_SIZE, (1, 10)).to(DEVICE) # Batch=1, D\u0142ugo\u015b\u0107 tekstu=10\n",
     "\n",
     "# Symulujemy \"Prawdziwy\" spektrogram (dla treningu)\n",
-    "# Batch=1, Długość audio=50 ramek, 80 kanałów\n",
+    "# Batch=1, D\u0142ugo\u015b\u0107 audio=50 ramek, 80 kana\u0142\u00f3w\n",
     "target_mel = torch.randn(1, 50, MEL_CHANNELS).to(DEVICE)\n",
     "\n",
     "# 2. Uruchamiamy model\n",
     "output_mel, attention_plot = model(text_input, target_mel)\n",
     "\n",
-    "print(f\"Wejście (Tekst): {text_input.shape}\")\n",
-    "print(f\"Wyjście (Mel):   {output_mel.shape} -> Oczekiwaliśmy [1, 50, 80]\")\n",
+    "print(f\"Wej\u015bcie (Tekst): {text_input.shape}\")\n",
+    "print(f\"Wyj\u015bcie (Mel):   {output_mel.shape} -> Oczekiwali\u015bmy [1, 50, 80]\")\n",
     "\n",
-    "# 3. Wizualizacja (Co wypluł nietrenowany model?)\n",
+    "# 3. Wizualizacja (Co wyplu\u0142 nietrenowany model?)\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.imshow(output_mel[0].detach().cpu().numpy().T, aspect='auto', origin='lower')\n",
     "plt.title(\"Wygenerowany Spektrogram (Szum - brak treningu)\")\n",
-    "plt.ylabel(\"Częstotliwość Mel\")\n",
+    "plt.ylabel(\"Cz\u0119stotliwo\u015b\u0107 Mel\")\n",
     "plt.xlabel(\"Czas\")\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
-    "# Mapa uwagi: Oś X (Tekst), Oś Y (Czas Audio)\n",
+    "# Mapa uwagi: O\u015b X (Tekst), O\u015b Y (Czas Audio)\n",
     "plt.imshow(attention_plot[0].detach().cpu().numpy(), aspect='auto', origin='lower')\n",
     "plt.title(\"Alignment (Mapa Uwagi)\")\n",
-    "plt.xlabel(\"Znaki w tekście\")\n",
+    "plt.xlabel(\"Znaki w tek\u015bcie\")\n",
     "plt.ylabel(\"Klatki Audio\")\n",
     "\n",
     "plt.show()"
@@ -325,18 +332,18 @@
    "id": "490d44ee",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Gdzie jest dźwięk?\n",
+    "## \ud83e\udde0 Podsumowanie: Gdzie jest d\u017awi\u0119k?\n",
     "\n",
     "Widzisz te dwa obrazki?\n",
-    "1.  **Spektrogram:** Na razie wygląda jak szum, bo wagi są losowe. Po treningu zobaczyłbyś poziome paski (formanty mowy).\n",
-    "2.  **Attention:** Na razie jest rozmyte. Po treningu zobaczyłbyś wyraźną **linię po przekątnej**.\n",
-    "    *   Klatka audio 0 patrzy na literę 0.\n",
-    "    *   Klatka audio 10 patrzy na literę 2.\n",
+    "1.  **Spektrogram:** Na razie wygl\u0105da jak szum, bo wagi s\u0105 losowe. Po treningu zobaczy\u0142by\u015b poziome paski (formanty mowy).\n",
+    "2.  **Attention:** Na razie jest rozmyte. Po treningu zobaczy\u0142by\u015b wyra\u017an\u0105 **lini\u0119 po przek\u0105tnej**.\n",
+    "    *   Klatka audio 0 patrzy na liter\u0119 0.\n",
+    "    *   Klatka audio 10 patrzy na liter\u0119 2.\n",
     "    *   ...itd.\n",
     "\n",
     "**Co dalej? (Vocoder)**\n",
-    "Ten model wypluwa obrazek (Mel-Spectrogram 80 kanałów).\n",
-    "Żeby usłyszeć głos, musisz ten obrazek wrzucić do **Vocodera** (np. HiFi-GAN), który zamieni te 80 liczb na 22 050 próbek fali na sekundę."
+    "Ten model wypluwa obrazek (Mel-Spectrogram 80 kana\u0142\u00f3w).\n",
+    "\u017beby us\u0142ysze\u0107 g\u0142os, musisz ten obrazek wrzuci\u0107 do **Vocodera** (np. HiFi-GAN), kt\u00f3ry zamieni te 80 liczb na 22 050 pr\u00f3bek fali na sekund\u0119."
    ]
   }
  ],
