--- a/84_CLIP_Multimodal.ipynb
+++ b/84_CLIP_Multimodal.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/84_CLIP_Multimodal.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c6e9c26d",
    "metadata": {},
    "source": [
-    "# 📎 CLIP: Jak połączyć Obraz z Tekstem?\n",
+    "# \ud83d\udcce CLIP: Jak po\u0142\u0105czy\u0107 Obraz z Tekstem?\n",
     "\n",
-    "CLIP to model **Dwusiwieżowy (Two-Tower)**:\n",
+    "CLIP to model **Dwusiwie\u017cowy (Two-Tower)**:\n",
     "1.  **Image Encoder:** Zamienia obrazek na wektor (np. ResNet lub ViT).\n",
     "2.  **Text Encoder:** Zamienia tekst na wektor (np. Transformer/BERT).\n",
     "\n",
     "**Trening (Contrastive Learning):**\n",
     "Wrzucamy do modelu pary (Obrazek, Podpis).\n",
-    "*   Obrazek psa + Tekst \"Pies\" -> **Przyciągaj** (Wektory blisko).\n",
+    "*   Obrazek psa + Tekst \"Pies\" -> **Przyci\u0105gaj** (Wektory blisko).\n",
     "*   Obrazek psa + Tekst \"Banan\" -> **Odpychaj** (Wektory daleko).\n",
     "\n",
-    "Dzięki temu powstaje **Wspólna Przestrzeń (Shared Embedding Space)**, gdzie słowa i obrazy o tym samym znaczeniu leżą obok siebie."
+    "Dzi\u0119ki temu powstaje **Wsp\u00f3lna Przestrze\u0144 (Shared Embedding Space)**, gdzie s\u0142owa i obrazy o tym samym znaczeniu le\u017c\u0105 obok siebie."
    ]
   },
   {
@@ -29,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Urządzenie: cuda\n"
+      "Urz\u0105dzenie: cuda\n"
      ]
     }
    ],
@@ -42,10 +49,10 @@
     "\n",
     "# Konfiguracja\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "EMBED_DIM = 256   # Rozmiar wspólnej przestrzeni (np. 512 w oryginale)\n",
+    "EMBED_DIM = 256   # Rozmiar wsp\u00f3lnej przestrzeni (np. 512 w oryginale)\n",
     "TEMP = 0.07       # Temperatura Softmaxa (dla kontrastu)\n",
     "\n",
-    "print(f\"Urządzenie: {DEVICE}\")"
+    "print(f\"Urz\u0105dzenie: {DEVICE}\")"
    ]
   },
   {
@@ -53,11 +60,11 @@
    "id": "8da94b00",
    "metadata": {},
    "source": [
-    "## Krok 1: Wieże (Encoders)\n",
+    "## Krok 1: Wie\u017ce (Encoders)\n",
     "\n",
-    "W prawdziwym CLIP używa się potężnych modeli (ViT + GPT-2).\n",
-    "My użyjemy prostych atrap (Mock), które po prostu rzutują losowe dane na wymiar `EMBED_DIM`.\n",
-    "Ważne jest to, co dzieje się **później** (matematyka łączenia)."
+    "W prawdziwym CLIP u\u017cywa si\u0119 pot\u0119\u017cnych modeli (ViT + GPT-2).\n",
+    "My u\u017cyjemy prostych atrap (Mock), kt\u00f3re po prostu rzutuj\u0105 losowe dane na wymiar `EMBED_DIM`.\n",
+    "Wa\u017cne jest to, co dzieje si\u0119 **p\u00f3\u017aniej** (matematyka \u0142\u0105czenia)."
    ]
   },
   {
@@ -70,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wieże zdefiniowane.\n"
+      "Wie\u017ce zdefiniowane.\n"
      ]
     }
    ],
@@ -78,8 +85,8 @@
     "class ImageEncoder(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        # Symulacja: Wejście to spłaszczony obrazek (np. 784 px)\n",
-    "        # W praktyce tu byłby ResNet50\n",
+    "        # Symulacja: Wej\u015bcie to sp\u0142aszczony obrazek (np. 784 px)\n",
+    "        # W praktyce tu by\u0142by ResNet50\n",
     "        self.net = nn.Sequential(\n",
     "            nn.Linear(784, 512),\n",
     "            nn.ReLU(),\n",
@@ -92,17 +99,17 @@
     "class TextEncoder(nn.Module):\n",
     "    def __init__(self, vocab_size=1000):\n",
     "        super().__init__()\n",
-    "        # Symulacja: Prosty Embedding + uśrednianie\n",
-    "        # W praktyce tu byłby BERT/Transformer\n",
+    "        # Symulacja: Prosty Embedding + u\u015brednianie\n",
+    "        # W praktyce tu by\u0142by BERT/Transformer\n",
     "        self.embedding = nn.Embedding(vocab_size, EMBED_DIM)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        # x: [Batch, Seq_Len]\n",
     "        embedded = self.embedding(x)\n",
-    "        # Uśredniamy słowa, żeby dostać jeden wektor zdania (Global Average Pooling)\n",
+    "        # U\u015bredniamy s\u0142owa, \u017ceby dosta\u0107 jeden wektor zdania (Global Average Pooling)\n",
     "        return embedded.mean(dim=1) \n",
     "\n",
-    "print(\"Wieże zdefiniowane.\")"
+    "print(\"Wie\u017ce zdefiniowane.\")"
    ]
   },
   {
@@ -115,12 +122,12 @@
     "To jest serce modelu.\n",
     "1.  Kodujemy obrazy ($I_e$).\n",
     "2.  Kodujemy teksty ($T_e$).\n",
-    "3.  Normalizujemy wektory (żeby miały długość 1).\n",
-    "4.  Liczymy **Macierz Podobieństwa** (Dot Product): $I_e \\times T_e^T$.\n",
+    "3.  Normalizujemy wektory (\u017ceby mia\u0142y d\u0142ugo\u015b\u0107 1).\n",
+    "4.  Liczymy **Macierz Podobie\u0144stwa** (Dot Product): $I_e \\times T_e^T$.\n",
     "\n",
     "Wynik to szachownica:\n",
-    "*   Przekątna: (Obrazek 1, Tekst 1), (Obrazek 2, Tekst 2)... -> To są pary poprawne.\n",
-    "*   Reszta: Pary błędne."
+    "*   Przek\u0105tna: (Obrazek 1, Tekst 1), (Obrazek 2, Tekst 2)... -> To s\u0105 pary poprawne.\n",
+    "*   Reszta: Pary b\u0142\u0119dne."
    ]
   },
   {
@@ -144,7 +151,7 @@
     "        self.image_encoder = ImageEncoder()\n",
     "        self.text_encoder = TextEncoder()\n",
     "        \n",
-    "        # Temperatura (uczymy się jej, żeby model sam dobrał ostrość)\n",
+    "        # Temperatura (uczymy si\u0119 jej, \u017ceby model sam dobra\u0142 ostro\u015b\u0107)\n",
     "        self.temperature = nn.Parameter(torch.ones([]) * np.log(1 / 0.07))\n",
     "\n",
     "    def forward(self, images, text):\n",
@@ -156,7 +163,7 @@
     "        img_features = img_features / img_features.norm(dim=1, keepdim=True)\n",
     "        text_features = text_features / text_features.norm(dim=1, keepdim=True)\n",
     "        \n",
-    "        # 3. Macierz Podobieństwa (Logits)\n",
+    "        # 3. Macierz Podobie\u0144stwa (Logits)\n",
     "        # [Batch, Dim] @ [Dim, Batch] -> [Batch, Batch]\n",
     "        logit_scale = self.temperature.exp()\n",
     "        logits_per_image = logit_scale * img_features @ text_features.t()\n",
@@ -175,12 +182,12 @@
    "source": [
     "## Symulacja Zero-Shot Prediction\n",
     "\n",
-    "Wyobraź sobie, że model jest już wytrenowany.\n",
-    "Mamy zdjęcie (np. Psa).\n",
-    "Chcemy sprawdzić, czy to \"Pies\", \"Kot\" czy \"Samochód\".\n",
+    "Wyobra\u017a sobie, \u017ce model jest ju\u017c wytrenowany.\n",
+    "Mamy zdj\u0119cie (np. Psa).\n",
+    "Chcemy sprawdzi\u0107, czy to \"Pies\", \"Kot\" czy \"Samoch\u00f3d\".\n",
     "\n",
-    "W klasycznym ML musielibyśmy trenować nową warstwę klasyfikującą (Softmax na 3 klasy).\n",
-    "W CLIP po prostu tworzymy 3 prompty tekstowe i sprawdzamy, który pasuje najbardziej."
+    "W klasycznym ML musieliby\u015bmy trenowa\u0107 now\u0105 warstw\u0119 klasyfikuj\u0105c\u0105 (Softmax na 3 klasy).\n",
+    "W CLIP po prostu tworzymy 3 prompty tekstowe i sprawdzamy, kt\u00f3ry pasuje najbardziej."
    ]
   },
   {
@@ -193,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- MACIERZ PODOBIEŃSTWA (Image vs Text) ---\n",
+      "--- MACIERZ PODOBIE\u0143STWA (Image vs Text) ---\n",
       "tensor([[ 0.9983,  0.1625, -0.9983],\n",
       "        [ 0.1625,  0.9983, -0.1625],\n",
       "        [-0.9983, -0.1625,  0.9983]], device='cuda:0')\n"
@@ -212,12 +219,12 @@
    ],
    "source": [
     "# SYMULACJA ZACHOWANIA PO TRENINGU\n",
-    "# Ponieważ nie trenowaliśmy modelu (brak danych COCO/LAION), \n",
-    "# ręcznie stworzymy wektory, które \"udają\" wytrenowane reprezentacje.\n",
+    "# Poniewa\u017c nie trenowali\u015bmy modelu (brak danych COCO/LAION), \n",
+    "# r\u0119cznie stworzymy wektory, kt\u00f3re \"udaj\u0105\" wytrenowane reprezentacje.\n",
     "\n",
     "batch_size = 3\n",
     "\n",
-    "# Wyobraźmy sobie przestrzeń 2D (cecha X, cecha Y)\n",
+    "# Wyobra\u017amy sobie przestrze\u0144 2D (cecha X, cecha Y)\n",
     "# Obrazek 1 (Pies): [0.9, 0.1]\n",
     "# Obrazek 2 (Kot):  [0.1, 0.9]\n",
     "# Obrazek 3 (Auto): [-0.9, -0.1]\n",
@@ -229,9 +236,9 @@
     "]).to(DEVICE)\n",
     "\n",
     "# Teksty (Prompty):\n",
-    "# Tekst A (\"Zdjęcie psa\"): [0.95, 0.05] (Bardzo blisko psa)\n",
-    "# Tekst B (\"Zdjęcie kota\"): [0.05, 0.95]\n",
-    "# Tekst C (\"Zdjęcie auta\"): [-0.95, -0.05]\n",
+    "# Tekst A (\"Zdj\u0119cie psa\"): [0.95, 0.05] (Bardzo blisko psa)\n",
+    "# Tekst B (\"Zdj\u0119cie kota\"): [0.05, 0.95]\n",
+    "# Tekst C (\"Zdj\u0119cie auta\"): [-0.95, -0.05]\n",
     "\n",
     "fake_text_embeds = torch.tensor([\n",
     "    [0.95, 0.05],\n",
@@ -243,10 +250,10 @@
     "fake_img_embeds = F.normalize(fake_img_embeds, dim=1)\n",
     "fake_text_embeds = F.normalize(fake_text_embeds, dim=1)\n",
     "\n",
-    "# Obliczamy podobieństwo (To robi CLIP w środku)\n",
+    "# Obliczamy podobie\u0144stwo (To robi CLIP w \u015brodku)\n",
     "similarity = fake_img_embeds @ fake_text_embeds.t()\n",
     "\n",
-    "print(\"--- MACIERZ PODOBIEŃSTWA (Image vs Text) ---\")\n",
+    "print(\"--- MACIERZ PODOBIE\u0143STWA (Image vs Text) ---\")\n",
     "print(similarity)\n",
     "\n",
     "# Wizualizacja\n",
@@ -269,7 +276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mamy zdjęcie tajemniczego obiektu (Obrazek 1).\n",
+      "Mamy zdj\u0119cie tajemniczego obiektu (Obrazek 1).\n",
       "Pytamy CLIPa: Co to jest?\n",
       "- Pies: 99.98%\n",
       "- Kot: 0.02%\n",
@@ -286,7 +293,7 @@
     "classes = [\"Pies\", \"Kot\", \"Auto\"]\n",
     "best_idx = probs.argmax().item()\n",
     "\n",
-    "print(f\"Mamy zdjęcie tajemniczego obiektu (Obrazek 1).\")\n",
+    "print(f\"Mamy zdj\u0119cie tajemniczego obiektu (Obrazek 1).\")\n",
     "print(\"Pytamy CLIPa: Co to jest?\")\n",
     "for i, p in enumerate(probs):\n",
     "    print(f\"- {classes[i]}: {p*100:.2f}%\")\n",
@@ -299,14 +306,14 @@
    "id": "736b4b78",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Uniwersalny Tłumacz\n",
+    "## \ud83e\udde0 Podsumowanie: Uniwersalny T\u0142umacz\n",
     "\n",
-    "To, co zobaczyliśmy na macierzy (ciemna przekątna), to dowód na działanie CLIPa.\n",
-    "Wektor obrazu psa \"przytulił się\" do wektora tekstu \"Pies\".\n",
+    "To, co zobaczyli\u015bmy na macierzy (ciemna przek\u0105tna), to dow\u00f3d na dzia\u0142anie CLIPa.\n",
+    "Wektor obrazu psa \"przytuli\u0142 si\u0119\" do wektora tekstu \"Pies\".\n",
     "\n",
     "**Dlaczego to jest SOTA?**\n",
-    "1.  **Wyszukiwarka obrazów:** Możesz wpisać w Google Zdjęcia \"Pies na plaży o zachodzie słońca\", a CLIP znajdzie zdjęcie, które pasuje do opisu, nawet jeśli nikt go tak nie otagował.\n",
-    "2.  **Generowanie (DALL-E):** Generatory obrazów działają \"od tyłu\". Próbują stworzyć z szumu taki obrazek, który wg CLIPa będzie pasował do Twojego promptu."
+    "1.  **Wyszukiwarka obraz\u00f3w:** Mo\u017cesz wpisa\u0107 w Google Zdj\u0119cia \"Pies na pla\u017cy o zachodzie s\u0142o\u0144ca\", a CLIP znajdzie zdj\u0119cie, kt\u00f3re pasuje do opisu, nawet je\u015bli nikt go tak nie otagowa\u0142.\n",
+    "2.  **Generowanie (DALL-E):** Generatory obraz\u00f3w dzia\u0142aj\u0105 \"od ty\u0142u\". Pr\u00f3buj\u0105 stworzy\u0107 z szumu taki obrazek, kt\u00f3ry wg CLIPa b\u0119dzie pasowa\u0142 do Twojego promptu."
    ]
   }
  ],
