--- a/85_NeRF_Neural_Radiance_Fields.ipynb
+++ b/85_NeRF_Neural_Radiance_Fields.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/85_NeRF_Neural_Radiance_Fields.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e147e59b",
    "metadata": {},
    "source": [
-    "# 🧊 NeRF: Świat zamknięty w sieci neuronowej\n",
+    "# \ud83e\uddca NeRF: \u015awiat zamkni\u0119ty w sieci neuronowej\n",
     "\n",
-    "NeRF reprezentuje scenę 3D jako **ciągłą funkcję**.\n",
-    "To mała sieć MLP, która dla każdego punktu w przestrzeni ($x, y, z$) zwraca jego gęstość ($\\sigma$) i kolor ($RGB$).\n",
+    "NeRF reprezentuje scen\u0119 3D jako **ci\u0105g\u0142\u0105 funkcj\u0119**.\n",
+    "To ma\u0142a sie\u0107 MLP, kt\u00f3ra dla ka\u017cdego punktu w przestrzeni ($x, y, z$) zwraca jego g\u0119sto\u015b\u0107 ($\\sigma$) i kolor ($RGB$).\n",
     "\n",
     "**Algorytm Renderowania (Ray Marching):**\n",
-    "1.  Wypuszczamy promień z oka kamery przez piksel.\n",
-    "2.  Próbkujemy punkty wzdłuż promienia (co kawałek).\n",
-    "3.  Dla każdego punktu pytamy sieć: *\"Co tu jest?\"*.\n",
-    "4.  Sumujemy kolory, ważąc je gęstością (jeśli trafiliśmy na ścianę, to co jest za nią, jest niewidoczne).\n",
+    "1.  Wypuszczamy promie\u0144 z oka kamery przez piksel.\n",
+    "2.  Pr\u00f3bkujemy punkty wzd\u0142u\u017c promienia (co kawa\u0142ek).\n",
+    "3.  Dla ka\u017cdego punktu pytamy sie\u0107: *\"Co tu jest?\"*.\n",
+    "4.  Sumujemy kolory, wa\u017c\u0105c je g\u0119sto\u015bci\u0105 (je\u015bli trafili\u015bmy na \u015bcian\u0119, to co jest za ni\u0105, jest niewidoczne).\n",
     "\n",
-    "Kluczowy trik: **Positional Encoding**. Zwykła sieć widzi świat jako rozmytą plamę. Musimy zamienić współrzędne $(x,y,z)$ na wysokie częstotliwości (sinusy/cosinusy), żeby zobaczyć detale."
+    "Kluczowy trik: **Positional Encoding**. Zwyk\u0142a sie\u0107 widzi \u015bwiat jako rozmyt\u0105 plam\u0119. Musimy zamieni\u0107 wsp\u00f3\u0142rz\u0119dne $(x,y,z)$ na wysokie cz\u0119stotliwo\u015bci (sinusy/cosinusy), \u017ceby zobaczy\u0107 detale."
    ]
   },
   {
@@ -29,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Urządzenie: cuda\n"
+      "Urz\u0105dzenie: cuda\n"
      ]
     }
    ],
@@ -42,10 +49,10 @@
     "\n",
     "# Konfiguracja\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "L_EMBED = 10 # Liczba częstotliwości w Positional Encoding (dla pozycji)\n",
-    "L_DIR = 4    # Liczba częstotliwości dla kierunku\n",
+    "L_EMBED = 10 # Liczba cz\u0119stotliwo\u015bci w Positional Encoding (dla pozycji)\n",
+    "L_DIR = 4    # Liczba cz\u0119stotliwo\u015bci dla kierunku\n",
     "\n",
-    "print(f\"Urządzenie: {DEVICE}\")"
+    "print(f\"Urz\u0105dzenie: {DEVICE}\")"
    ]
   },
   {
@@ -55,9 +62,9 @@
    "source": [
     "## Krok 1: Positional Encoding (Fourier Features)\n",
     "\n",
-    "To podobny mechanizm jak w Transformerze (Notatnik 56), ale tutaj służy do czegoś innego.\n",
-    "Sieci neuronowe mają tendencję do uczenia się tylko \"niskich częstotliwości\" (gładkich kolorów).\n",
-    "Żeby nauczyć się ostrych krawędzi i tekstur, musimy \"rozdmuchać\" wejście $(x,y,z)$ do wielowymiarowego wektora sinusów.\n",
+    "To podobny mechanizm jak w Transformerze (Notatnik 56), ale tutaj s\u0142u\u017cy do czego\u015b innego.\n",
+    "Sieci neuronowe maj\u0105 tendencj\u0119 do uczenia si\u0119 tylko \"niskich cz\u0119stotliwo\u015bci\" (g\u0142adkich kolor\u00f3w).\n",
+    "\u017beby nauczy\u0107 si\u0119 ostrych kraw\u0119dzi i tekstur, musimy \"rozdmucha\u0107\" wej\u015bcie $(x,y,z)$ do wielowymiarowego wektora sinus\u00f3w.\n",
     "\n",
     "$$ \\gamma(p) = (\\sin(2^0 \\pi p), \\cos(2^0 \\pi p), ..., \\sin(2^{L-1} \\pi p), \\cos(2^{L-1} \\pi p)) $$"
    ]
@@ -72,8 +79,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wejście (x,y,z): torch.Size([1, 3])\n",
-      "Wyjście (Embedded): torch.Size([1, 63]) -> 3 + 3 * 2 * 10 = 63 wymiary\n"
+      "Wej\u015bcie (x,y,z): torch.Size([1, 3])\n",
+      "Wyj\u015bcie (Embedded): torch.Size([1, 63]) -> 3 + 3 * 2 * 10 = 63 wymiary\n"
      ]
     }
    ],
@@ -83,26 +90,26 @@
     "        super().__init__()\n",
     "        self.d_input = d_input\n",
     "        self.n_freqs = n_freqs\n",
-    "        # Częstotliwości: 2^0, 2^1, ... 2^(N-1)\n",
+    "        # Cz\u0119stotliwo\u015bci: 2^0, 2^1, ... 2^(N-1)\n",
     "        self.freq_bands = 2.**torch.linspace(0., n_freqs - 1, n_freqs)\n",
     "\n",
     "    def forward(self, x):\n",
     "        # x: [Batch, d_input]\n",
-    "        # Dla każdego kanału wejściowego tworzymy sin i cos dla każdej częstotliwości\n",
+    "        # Dla ka\u017cdego kana\u0142u wej\u015bciowego tworzymy sin i cos dla ka\u017cdej cz\u0119stotliwo\u015bci\n",
     "        embed = [x]\n",
     "        for freq in self.freq_bands.to(x.device):\n",
     "            embed.append(torch.sin(x * freq * np.pi))\n",
     "            embed.append(torch.cos(x * freq * np.pi))\n",
     "        \n",
-    "        # Sklejamy wszystko w długi wektor\n",
+    "        # Sklejamy wszystko w d\u0142ugi wektor\n",
     "        return torch.cat(embed, dim=-1)\n",
     "\n",
     "# Test\n",
-    "encoder = PositionalEncoder(d_input=3, n_freqs=L_EMBED) # Wejście (x,y,z)\n",
+    "encoder = PositionalEncoder(d_input=3, n_freqs=L_EMBED) # Wej\u015bcie (x,y,z)\n",
     "dummy_pt = torch.tensor([[0.5, 0.5, 0.5]])\n",
     "out = encoder(dummy_pt)\n",
-    "print(f\"Wejście (x,y,z): {dummy_pt.shape}\")\n",
-    "print(f\"Wyjście (Embedded): {out.shape} -> 3 + 3 * 2 * 10 = 63 wymiary\")"
+    "print(f\"Wej\u015bcie (x,y,z): {dummy_pt.shape}\")\n",
+    "print(f\"Wyj\u015bcie (Embedded): {out.shape} -> 3 + 3 * 2 * 10 = 63 wymiary\")"
    ]
   },
   {
@@ -112,15 +119,15 @@
    "source": [
     "## Krok 2: Model NeRF (MLP)\n",
     "\n",
-    "Sieć jest prosta, ale głęboka (zazwyczaj 8 warstw).\n",
-    "1.  Bierze zakodowaną pozycję ($x,y,z$).\n",
+    "Sie\u0107 jest prosta, ale g\u0142\u0119boka (zazwyczaj 8 warstw).\n",
+    "1.  Bierze zakodowan\u0105 pozycj\u0119 ($x,y,z$).\n",
     "2.  Przetwarza.\n",
-    "3.  Wypluwa **Gęstość ($\\sigma$)** (czy to ciało stałe?).\n",
+    "3.  Wypluwa **G\u0119sto\u015b\u0107 ($\\sigma$)** (czy to cia\u0142o sta\u0142e?).\n",
     "4.  Dokleja zakodowany **Kierunek patrzenia**.\n",
     "5.  Wypluwa **Kolor ($RGB$)**.\n",
     "\n",
-    "Dlaczego kierunek doklejamy na końcu?\n",
-    "Bo gęstość (kształt obiektu) jest stała, ale kolor zależy od kąta patrzenia (odblaski, lustra)!"
+    "Dlaczego kierunek doklejamy na ko\u0144cu?\n",
+    "Bo g\u0119sto\u015b\u0107 (kszta\u0142t obiektu) jest sta\u0142a, ale kolor zale\u017cy od k\u0105ta patrzenia (odblaski, lustra)!"
    ]
   },
   {
@@ -150,7 +157,7 @@
     "        in_dim_pos = d_input + d_input * 2 * L_EMBED\n",
     "        in_dim_dir = d_input_dir + d_input_dir * 2 * L_DIR\n",
     "        \n",
-    "        # Sieć Główna (Gęstość)\n",
+    "        # Sie\u0107 G\u0142\u00f3wna (G\u0119sto\u015b\u0107)\n",
     "        self.block1 = nn.Sequential(\n",
     "            nn.Linear(in_dim_pos, hidden_dim), nn.ReLU(),\n",
     "            nn.Linear(hidden_dim, hidden_dim), nn.ReLU(),\n",
@@ -158,10 +165,10 @@
     "            nn.Linear(hidden_dim, hidden_dim), nn.ReLU(),\n",
     "        )\n",
     "        \n",
-    "        # Wyjście Gęstości (Sigma) + Cechy\n",
+    "        # Wyj\u015bcie G\u0119sto\u015bci (Sigma) + Cechy\n",
     "        self.sigma_layer = nn.Linear(hidden_dim, 1 + hidden_dim) # 1 sigma + wektor cech\n",
     "        \n",
-    "        # Sieć Koloru (Zależy od kierunku!)\n",
+    "        # Sie\u0107 Koloru (Zale\u017cy od kierunku!)\n",
     "        self.rgb_layer = nn.Sequential(\n",
     "            nn.Linear(hidden_dim + in_dim_dir, hidden_dim // 2), nn.ReLU(),\n",
     "            nn.Linear(hidden_dim // 2, 3), # RGB\n",
@@ -173,12 +180,12 @@
     "        x_emb = self.embed_pos(x)\n",
     "        d_emb = self.embed_dir(d)\n",
     "        \n",
-    "        # Liczymy geometrię\n",
+    "        # Liczymy geometri\u0119\n",
     "        h = self.block1(x_emb)\n",
     "        sigma_and_feat = self.sigma_layer(h)\n",
     "        \n",
-    "        # Rozdzielamy gęstość i cechy\n",
-    "        sigma = F.relu(sigma_and_feat[:, :1]) # Gęstość musi być >= 0\n",
+    "        # Rozdzielamy g\u0119sto\u015b\u0107 i cechy\n",
+    "        sigma = F.relu(sigma_and_feat[:, :1]) # G\u0119sto\u015b\u0107 musi by\u0107 >= 0\n",
     "        features = sigma_and_feat[:, 1:]\n",
     "        \n",
     "        # Doklejamy kierunek i liczymy kolor\n",
@@ -198,16 +205,16 @@
    "source": [
     "## Krok 3: Wolumetryczne Renderowanie (Fizyka)\n",
     "\n",
-    "Mamy model, który dla punktu w kosmosie zwraca kolor i gęstość.\n",
-    "Teraz musimy \"zrobić zdjęcie\".\n",
+    "Mamy model, kt\u00f3ry dla punktu w kosmosie zwraca kolor i g\u0119sto\u015b\u0107.\n",
+    "Teraz musimy \"zrobi\u0107 zdj\u0119cie\".\n",
     "\n",
-    "Dla każdego piksela strzelamy promieniem. Na promieniu wybieramy np. 64 punkty.\n",
-    "Sumujemy ich kolory, ale uwaga: **punkty bliżej zasłaniają te dalej**.\n",
+    "Dla ka\u017cdego piksela strzelamy promieniem. Na promieniu wybieramy np. 64 punkty.\n",
+    "Sumujemy ich kolory, ale uwaga: **punkty bli\u017cej zas\u0142aniaj\u0105 te dalej**.\n",
     "\n",
-    "Wzór dyskretny:\n",
+    "Wz\u00f3r dyskretny:\n",
     "$$ C = \\sum T_i \\cdot \\alpha_i \\cdot c_i $$\n",
-    "*   $\\alpha_i = 1 - e^{-\\sigma_i \\delta_i}$: Nieprzezroczystość punktu.\n",
-    "*   $T_i$: Transmitancja (ile światła dotarło do tego punktu, nie będąc zablokowanym wcześniej)."
+    "*   $\\alpha_i = 1 - e^{-\\sigma_i \\delta_i}$: Nieprzezroczysto\u015b\u0107 punktu.\n",
+    "*   $T_i$: Transmitancja (ile \u015bwiat\u0142a dotar\u0142o do tego punktu, nie b\u0119d\u0105c zablokowanym wcze\u015bniej)."
    ]
   },
   {
@@ -220,15 +227,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model 'potrząśnięty'. Teraz powinieneś widzieć chaos.\n"
+      "Model 'potrz\u0105\u015bni\u0119ty'. Teraz powiniene\u015b widzie\u0107 chaos.\n"
      ]
     }
    ],
    "source": [
-    "# Wymuszamy losowe, silne wagi, żeby zobaczyć szum\n",
+    "# Wymuszamy losowe, silne wagi, \u017ceby zobaczy\u0107 szum\n",
     "def init_weights_crazy(m):\n",
     "    if isinstance(m, nn.Linear):\n",
-    "        # Losujemy wagi z dużą siłą (odchylenie 1.0 zamiast 0.02)\n",
+    "        # Losujemy wagi z du\u017c\u0105 si\u0142\u0105 (odchylenie 1.0 zamiast 0.02)\n",
     "        torch.nn.init.normal_(m.weight, mean=0.0, std=0.5)\n",
     "        if m.bias is not None:\n",
     "            torch.nn.init.constant_(m.bias, 0.1)\n",
@@ -236,7 +243,7 @@
     "# Aplikujemy to do modelu\n",
     "model.apply(init_weights_crazy)\n",
     "\n",
-    "print(\"Model 'potrząśnięty'. Teraz powinieneś widzieć chaos.\")"
+    "print(\"Model 'potrz\u0105\u015bni\u0119ty'. Teraz powiniene\u015b widzie\u0107 chaos.\")"
    ]
   },
   {
@@ -249,7 +256,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Silnik renderujący gotowy (Poprawiony).\n"
+      "Silnik renderuj\u0105cy gotowy (Poprawiony).\n"
      ]
     }
    ],
@@ -258,7 +265,7 @@
     "    # ray_origins: [Batch, 3]\n",
     "    # ray_directions: [Batch, 3]\n",
     "    \n",
-    "    # 1. Próbkowanie punktów wzdłuż promienia\n",
+    "    # 1. Pr\u00f3bkowanie punkt\u00f3w wzd\u0142u\u017c promienia\n",
     "    # Tworzymy 't' od near do far\n",
     "    z_vals = torch.linspace(near, far, n_samples).to(DEVICE)\n",
     "    \n",
@@ -266,42 +273,42 @@
     "    # Punkty w przestrzeni 3D: P = Origin + t * Direction\n",
     "    # ray_origins: [Batch, 1, 3]\n",
     "    # ray_directions: [Batch, 1, 3]\n",
-    "    # z_vals: [1, Samples, 1] (Używamy .view, aby wymusić ten kształt)\n",
+    "    # z_vals: [1, Samples, 1] (U\u017cywamy .view, aby wymusi\u0107 ten kszta\u0142t)\n",
     "    points = ray_origins.unsqueeze(1) + ray_directions.unsqueeze(1) * z_vals.view(1, -1, 1)\n",
     "    \n",
-    "    # Spłaszczamy do batcha, żeby wrzucić do sieci\n",
+    "    # Sp\u0142aszczamy do batcha, \u017ceby wrzuci\u0107 do sieci\n",
     "    flat_points = points.reshape(-1, 3)\n",
-    "    # Kierunki są stałe dla całego promienia, ale musimy je powielić dla każdego punktu\n",
+    "    # Kierunki s\u0105 sta\u0142e dla ca\u0142ego promienia, ale musimy je powieli\u0107 dla ka\u017cdego punktu\n",
     "    flat_dirs = ray_directions.unsqueeze(1).expand(-1, n_samples, -1).reshape(-1, 3)\n",
     "    \n",
     "    # 2. Pytamy NeRF\n",
     "    rgb, sigma = model(flat_points, flat_dirs)\n",
     "    \n",
-    "    # Przywracamy kształt [Batch, Samples]\n",
+    "    # Przywracamy kszta\u0142t [Batch, Samples]\n",
     "    rgb = rgb.reshape(-1, n_samples, 3)\n",
     "    sigma = sigma.reshape(-1, n_samples)\n",
     "    \n",
     "    # 3. Fizyka Renderowania (Volumetric Rendering)\n",
-    "    # Odległość między próbkami (delta)\n",
+    "    # Odleg\u0142o\u015b\u0107 mi\u0119dzy pr\u00f3bkami (delta)\n",
     "    dists = z_vals[1:] - z_vals[:-1]\n",
-    "    dists = torch.cat([dists, torch.tensor([1e10]).to(DEVICE)]) # Ostatni dystans nieskończony\n",
+    "    dists = torch.cat([dists, torch.tensor([1e10]).to(DEVICE)]) # Ostatni dystans niesko\u0144czony\n",
     "    \n",
-    "    # Alpha (Nieprzezroczystość w punkcie) = 1 - exp(-sigma * dist)\n",
+    "    # Alpha (Nieprzezroczysto\u015b\u0107 w punkcie) = 1 - exp(-sigma * dist)\n",
     "    alpha = 1.0 - torch.exp(-sigma * dists)\n",
     "    \n",
-    "    # Transmitancja (Ile światła przeszło przez poprzednie punkty?)\n",
-    "    # Cumprod(1 - alpha) z przesunięciem (pierwszy punkt widzi 100%)\n",
+    "    # Transmitancja (Ile \u015bwiat\u0142a przesz\u0142o przez poprzednie punkty?)\n",
+    "    # Cumprod(1 - alpha) z przesuni\u0119ciem (pierwszy punkt widzi 100%)\n",
     "    weights = alpha * torch.cumprod(torch.cat([torch.ones((alpha.shape[0], 1)).to(DEVICE), 1.-alpha + 1e-10], -1), -1)[:, :-1]\n",
     "    \n",
-    "    # Finalny kolor piksela = Suma ważona kolorów punktów\n",
+    "    # Finalny kolor piksela = Suma wa\u017cona kolor\u00f3w punkt\u00f3w\n",
     "    pixel_color = torch.sum(weights.unsqueeze(-1) * rgb, dim=1)\n",
     "    \n",
-    "    # Depth map (mapa głębokości) - średnia ważona odległości\n",
+    "    # Depth map (mapa g\u0142\u0119boko\u015bci) - \u015brednia wa\u017cona odleg\u0142o\u015bci\n",
     "    depth_map = torch.sum(weights * z_vals, dim=1)\n",
     "    \n",
     "    return pixel_color, depth_map\n",
     "\n",
-    "print(\"Silnik renderujący gotowy (Poprawiony).\")"
+    "print(\"Silnik renderuj\u0105cy gotowy (Poprawiony).\")"
    ]
   },
   {
@@ -323,24 +330,24 @@
    ],
    "source": [
     "# TEST WIZUALNY (Przed treningiem)\n",
-    "# Tworzymy \"kamerę\" i strzelamy promieniami\n",
+    "# Tworzymy \"kamer\u0119\" i strzelamy promieniami\n",
     "\n",
-    "H, W = 100, 100 # Rozdzielczość próbna\n",
+    "H, W = 100, 100 # Rozdzielczo\u015b\u0107 pr\u00f3bna\n",
     "ray_origins = torch.zeros((H*W, 3)).to(DEVICE) # Kamera w (0,0,0)\n",
-    "ray_origins[:, 2] = -2.0 # Cofamy kamerę\n",
+    "ray_origins[:, 2] = -2.0 # Cofamy kamer\u0119\n",
     "\n",
-    "# Kierunki promieni (uproszczone: strzelamy w prostokąt przed nami)\n",
+    "# Kierunki promieni (uproszczone: strzelamy w prostok\u0105t przed nami)\n",
     "x = torch.linspace(-1, 1, W)\n",
     "y = torch.linspace(-1, 1, H)\n",
     "grid_y, grid_x = torch.meshgrid(y, x, indexing='ij')\n",
     "ray_dirs = torch.stack([grid_x, grid_y, torch.ones_like(grid_x)], dim=-1).reshape(-1, 3).to(DEVICE)\n",
     "ray_dirs = ray_dirs / torch.norm(ray_dirs, dim=-1, keepdim=True) # Normalizacja\n",
     "\n",
-    "# Renderujemy! (To potrwa chwilę, bo liczymy 10000 promieni x 32 punkty)\n",
+    "# Renderujemy! (To potrwa chwil\u0119, bo liczymy 10000 promieni x 32 punkty)\n",
     "with torch.no_grad():\n",
     "    colors, depths = render_rays(model, ray_origins, ray_dirs, near=1.0, far=3.0)\n",
     "\n",
-    "# Wyświetlamy\n",
+    "# Wy\u015bwietlamy\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.imshow(colors.cpu().reshape(H, W, 3))\n",
@@ -348,7 +355,7 @@
     "\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.imshow(depths.cpu().reshape(H, W), cmap='plasma')\n",
-    "plt.title(\"Głębokość (Losowa)\")\n",
+    "plt.title(\"G\u0142\u0119boko\u015b\u0107 (Losowa)\")\n",
     "plt.show()"
    ]
   },
@@ -357,15 +364,15 @@
    "id": "33288b0e",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Długi Trening\n",
+    "## \ud83e\udde0 Podsumowanie: D\u0142ugi Trening\n",
     "\n",
-    "To, co widzisz (kolorowy szum), to **niezainicjowany mózg**.\n",
-    "W prawdziwym NeRF-ie teraz następuje faza treningu:\n",
-    "1.  Bierzemy prawdziwe zdjęcia obiektu (np. koparki Lego).\n",
-    "2.  Dla każdego piksela zdjęcia porównujemy `pixel_color` (z naszego modelu) z prawdą.\n",
-    "3.  Robimy Backpropagation przez... **promienie świetlne**! (To możliwe dzięki Autograd).\n",
+    "To, co widzisz (kolorowy szum), to **niezainicjowany m\u00f3zg**.\n",
+    "W prawdziwym NeRF-ie teraz nast\u0119puje faza treningu:\n",
+    "1.  Bierzemy prawdziwe zdj\u0119cia obiektu (np. koparki Lego).\n",
+    "2.  Dla ka\u017cdego piksela zdj\u0119cia por\u00f3wnujemy `pixel_color` (z naszego modelu) z prawd\u0105.\n",
+    "3.  Robimy Backpropagation przez... **promienie \u015bwietlne**! (To mo\u017cliwe dzi\u0119ki Autograd).\n",
     "\n",
-    "Sieć zmienia swoje wagi tak, żeby gęstość ($\\sigma$) pojawiała się tam, gdzie jest obiekt, a znikała tam, gdzie jest powietrze. W ten sposób sieć \"rzeźbi\" obiekt w 3D."
+    "Sie\u0107 zmienia swoje wagi tak, \u017ceby g\u0119sto\u015b\u0107 ($\\sigma$) pojawia\u0142a si\u0119 tam, gdzie jest obiekt, a znika\u0142a tam, gdzie jest powietrze. W ten spos\u00f3b sie\u0107 \"rze\u017abi\" obiekt w 3D."
    ]
   }
  ],
