--- a/86_PointNet_3D_PointCloud.ipynb
+++ b/86_PointNet_3D_PointCloud.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/86_PointNet_3D_PointCloud.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1b60b21a",
    "metadata": {},
    "source": [
-    "# ☁️ PointNet: Jak AI widzi chmury punktów?\n",
+    "# \u2601\ufe0f PointNet: Jak AI widzi chmury punkt\u00f3w?\n",
     "\n",
-    "Większość danych 3D to nie siatki (Mesh), ale **Chmury Punktów**.\n",
-    "To po prostu zbiór $N$ punktów $(x, y, z)$.\n",
+    "Wi\u0119kszo\u015b\u0107 danych 3D to nie siatki (Mesh), ale **Chmury Punkt\u00f3w**.\n",
+    "To po prostu zbi\u00f3r $N$ punkt\u00f3w $(x, y, z)$.\n",
     "\n",
     "**Wyzwanie:**\n",
-    "Lista punktów to **Zbiór**, a nie Sekwencja.\n",
-    "Sieć musi zrozumieć kształt \"Kuli\" niezależnie od tego, czy zaczniemy czytanie punktów od bieguna północnego, czy południowego.\n",
+    "Lista punkt\u00f3w to **Zbi\u00f3r**, a nie Sekwencja.\n",
+    "Sie\u0107 musi zrozumie\u0107 kszta\u0142t \"Kuli\" niezale\u017cnie od tego, czy zaczniemy czytanie punkt\u00f3w od bieguna p\u00f3\u0142nocnego, czy po\u0142udniowego.\n",
     "\n",
-    "**Rozwiązanie PointNet:**\n",
-    "1.  **Shared MLP:** Przepuszczamy *każdy punkt osobno* przez tę samą małą sieć. (Każdy punkt dowiaduje się czegoś o sobie).\n",
-    "2.  **Global Max Pooling:** To klucz! Bierzemy **maksymalną wartość** z wszystkich punktów dla każdej cechy.\n",
-    "    *   Max(A, B, C) to to samo co Max(C, A, B). Kolejność znika!\n",
-    "3.  **Klasyfikator:** Spłaszczony wektor (Global Feature) wrzucamy do zwykłego MLP.\n",
+    "**Rozwi\u0105zanie PointNet:**\n",
+    "1.  **Shared MLP:** Przepuszczamy *ka\u017cdy punkt osobno* przez t\u0119 sam\u0105 ma\u0142\u0105 sie\u0107. (Ka\u017cdy punkt dowiaduje si\u0119 czego\u015b o sobie).\n",
+    "2.  **Global Max Pooling:** To klucz! Bierzemy **maksymaln\u0105 warto\u015b\u0107** z wszystkich punkt\u00f3w dla ka\u017cdej cechy.\n",
+    "    *   Max(A, B, C) to to samo co Max(C, A, B). Kolejno\u015b\u0107 znika!\n",
+    "3.  **Klasyfikator:** Sp\u0142aszczony wektor (Global Feature) wrzucamy do zwyk\u0142ego MLP.\n",
     "\n",
-    "Zbudujemy sieć, która rozróżnia **Kulę** od **Sześcianu**."
+    "Zbudujemy sie\u0107, kt\u00f3ra rozr\u00f3\u017cnia **Kul\u0119** od **Sze\u015bcianu**."
    ]
   },
   {
@@ -33,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Urządzenie: cuda\n"
+      "Urz\u0105dzenie: cuda\n"
      ]
     }
    ],
@@ -47,10 +54,10 @@
     "\n",
     "# Konfiguracja\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "NUM_POINTS = 1024 # Ile punktów ma jeden obiekt?\n",
+    "NUM_POINTS = 1024 # Ile punkt\u00f3w ma jeden obiekt?\n",
     "BATCH_SIZE = 32\n",
     "\n",
-    "print(f\"Urządzenie: {DEVICE}\")"
+    "print(f\"Urz\u0105dzenie: {DEVICE}\")"
    ]
   },
   {
@@ -60,9 +67,9 @@
    "source": [
     "## Generowanie Danych 3D\n",
     "\n",
-    "Stwórzmy prosty dataset.\n",
-    "1.  **Kula:** Punkty znormalizowane (odległość od środka = 1).\n",
-    "2.  **Sześcian:** Punkty losowe w pudełku (od -1 do 1)."
+    "Stw\u00f3rzmy prosty dataset.\n",
+    "1.  **Kula:** Punkty znormalizowane (odleg\u0142o\u015b\u0107 od \u015brodka = 1).\n",
+    "2.  **Sze\u015bcian:** Punkty losowe w pude\u0142ku (od -1 do 1)."
    ]
   },
   {
@@ -97,7 +104,7 @@
     "                points = points / np.linalg.norm(points, axis=1, keepdims=True)\n",
     "                label = 0\n",
     "            else:\n",
-    "                # SZEŚCIAN (Klasa 1)\n",
+    "                # SZE\u015aCIAN (Klasa 1)\n",
     "                # Losujemy uniform -1 do 1\n",
     "                points = np.random.uniform(-1, 1, (NUM_POINTS, 3))\n",
     "                label = 1\n",
@@ -109,11 +116,11 @@
     "        return self.size\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        # PointNet oczekuje formatu: [Kanały, Liczba_Punktów] -> [3, 1024]\n",
-    "        # Dlatego robimy transpozycję (.T)\n",
+    "        # PointNet oczekuje formatu: [Kana\u0142y, Liczba_Punkt\u00f3w] -> [3, 1024]\n",
+    "        # Dlatego robimy transpozycj\u0119 (.T)\n",
     "        return torch.tensor(self.data[idx].T, dtype=torch.float32), torch.tensor(self.labels[idx], dtype=torch.long)\n",
     "\n",
-    "# Generujemy i oglądamy\n",
+    "# Generujemy i ogl\u0105damy\n",
     "dataset = ShapeDataset()\n",
     "points, label = dataset[0] # Pobieramy jeden obiekt\n",
     "\n",
@@ -122,7 +129,7 @@
     "ax = fig.add_subplot(111, projection='3d')\n",
     "points_np = points.numpy()\n",
     "ax.scatter(points_np[0], points_np[1], points_np[2], s=5)\n",
-    "ax.set_title(f\"Przykładowy obiekt (Klasa: {label})\")\n",
+    "ax.set_title(f\"Przyk\u0142adowy obiekt (Klasa: {label})\")\n",
     "plt.show()"
    ]
   },
@@ -133,17 +140,17 @@
    "source": [
     "## Architektura PointNet\n",
     "\n",
-    "Użyjemy sprytnego triku.\n",
-    "W PyTorch `nn.Conv1d` z `kernel_size=1` działa dokładnie jak **Shared MLP**.\n",
-    "Przesuwa się po każdym punkcie osobno i mnoży go przez te same wagi.\n",
+    "U\u017cyjemy sprytnego triku.\n",
+    "W PyTorch `nn.Conv1d` z `kernel_size=1` dzia\u0142a dok\u0142adnie jak **Shared MLP**.\n",
+    "Przesuwa si\u0119 po ka\u017cdym punkcie osobno i mno\u017cy go przez te same wagi.\n",
     "\n",
     "Struktura:\n",
     "1.  `Input` (3, 1024)\n",
-    "2.  `Conv1d` (64 filtry) -> Każdy punkt zamienia się w wektor 64-elementowy.\n",
-    "3.  `Conv1d` (128 filtrów) -> Każdy punkt ma 128 cech.\n",
-    "4.  `Conv1d` (1024 filtry) -> Każdy punkt ma 1024 cechy.\n",
-    "5.  **Global Max Pooling** -> Z 1024 punktów zostaje **jeden wektor globalny**.\n",
-    "6.  `Linear` -> Klasyfikacja (Kula czy Sześcian?)."
+    "2.  `Conv1d` (64 filtry) -> Ka\u017cdy punkt zamienia si\u0119 w wektor 64-elementowy.\n",
+    "3.  `Conv1d` (128 filtr\u00f3w) -> Ka\u017cdy punkt ma 128 cech.\n",
+    "4.  `Conv1d` (1024 filtry) -> Ka\u017cdy punkt ma 1024 cechy.\n",
+    "5.  **Global Max Pooling** -> Z 1024 punkt\u00f3w zostaje **jeden wektor globalny**.\n",
+    "6.  `Linear` -> Klasyfikacja (Kula czy Sze\u015bcian?)."
    ]
   },
   {
@@ -166,7 +173,7 @@
     "        super().__init__()\n",
     "        \n",
     "        # SHARED MLP (zrobione jako Conv1d z kernel=1)\n",
-    "        # To przetwarza każdy punkt niezależnie\n",
+    "        # To przetwarza ka\u017cdy punkt niezale\u017cnie\n",
     "        self.conv1 = nn.Conv1d(3, 64, 1)\n",
     "        self.conv2 = nn.Conv1d(64, 128, 1)\n",
     "        self.conv3 = nn.Conv1d(128, 1024, 1)\n",
@@ -175,10 +182,10 @@
     "        self.bn2 = nn.BatchNorm1d(128)\n",
     "        self.bn3 = nn.BatchNorm1d(1024)\n",
     "        \n",
-    "        # KLASYFIKATOR (Zwykły MLP na końcu)\n",
+    "        # KLASYFIKATOR (Zwyk\u0142y MLP na ko\u0144cu)\n",
     "        self.fc1 = nn.Linear(1024, 512)\n",
     "        self.fc2 = nn.Linear(512, 256)\n",
-    "        self.fc3 = nn.Linear(256, 2) # 2 klasy: Kula / Sześcian\n",
+    "        self.fc3 = nn.Linear(256, 2) # 2 klasy: Kula / Sze\u015bcian\n",
     "        \n",
     "        self.dropout = nn.Dropout(0.3)\n",
     "\n",
@@ -193,8 +200,8 @@
     "        # x shape teraz: [Batch, 1024, Num_Points]\n",
     "        \n",
     "        # 2. GLOBAL MAX POOLING (Symetryzacja)\n",
-    "        # Bierzemy max po wymiarze punktów (dim=2)\n",
-    "        # To sprawia, że kolejność punktów przestaje mieć znaczenie!\n",
+    "        # Bierzemy max po wymiarze punkt\u00f3w (dim=2)\n",
+    "        # To sprawia, \u017ce kolejno\u015b\u0107 punkt\u00f3w przestaje mie\u0107 znaczenie!\n",
     "        x = torch.max(x, 2, keepdim=False)[0]\n",
     "        \n",
     "        # x shape teraz: [Batch, 1024] (Global Feature Vector)\n",
@@ -227,7 +234,7 @@
       "Epoka 3, Loss: 0.0000, Acc: 100.00%\n",
       "Epoka 4, Loss: 0.0000, Acc: 100.00%\n",
       "Epoka 5, Loss: 0.0000, Acc: 100.00%\n",
-      "✅ Model nauczył się widzieć w 3D.\n"
+      "\u2705 Model nauczy\u0142 si\u0119 widzie\u0107 w 3D.\n"
      ]
     }
    ],
@@ -260,7 +267,7 @@
     "        \n",
     "    print(f\"Epoka {epoch+1}, Loss: {total_loss/len(loader):.4f}, Acc: {100 * correct / total:.2f}%\")\n",
     "\n",
-    "print(\"✅ Model nauczył się widzieć w 3D.\")"
+    "print(\"\u2705 Model nauczy\u0142 si\u0119 widzie\u0107 w 3D.\")"
    ]
   },
   {
@@ -268,15 +275,15 @@
    "id": "d8df9b62",
    "metadata": {},
    "source": [
-    "## Test Odporności na Permutacje\n",
+    "## Test Odporno\u015bci na Permutacje\n",
     "\n",
-    "Sprawdźmy, czy model naprawdę jest odporny na kolejność punktów.\n",
-    "1.  Weźmiemy obiekt (np. Sześcian).\n",
-    "2.  Przepuścimy go przez sieć -> Wynik A.\n",
-    "3.  **Wymieszamy losowo kolejność punktów** (Shuffle).\n",
-    "4.  Przepuścimy przez sieć -> Wynik B.\n",
+    "Sprawd\u017amy, czy model naprawd\u0119 jest odporny na kolejno\u015b\u0107 punkt\u00f3w.\n",
+    "1.  We\u017amiemy obiekt (np. Sze\u015bcian).\n",
+    "2.  Przepu\u015bcimy go przez sie\u0107 -> Wynik A.\n",
+    "3.  **Wymieszamy losowo kolejno\u015b\u0107 punkt\u00f3w** (Shuffle).\n",
+    "4.  Przepu\u015bcimy przez sie\u0107 -> Wynik B.\n",
     "\n",
-    "Jeśli PointNet działa poprawnie, wyniki muszą być **identyczne**."
+    "Je\u015bli PointNet dzia\u0142a poprawnie, wyniki musz\u0105 by\u0107 **identyczne**."
    ]
   },
   {
@@ -291,11 +298,11 @@
      "text": [
       "Prawdziwa klasa: 1\n",
       "------------------------------\n",
-      "Oryginał:   Kula=0.0000, Sześcian=1.0000\n",
-      "Wymieszany: Kula=0.0000, Sześcian=1.0000\n",
+      "Orygina\u0142:   Kula=0.0000, Sze\u015bcian=1.0000\n",
+      "Wymieszany: Kula=0.0000, Sze\u015bcian=1.0000\n",
       "------------------------------\n",
-      "Różnica w logitach: 0.0000000000\n",
-      "✅ IDEAŁ. Kolejność punktów nie ma znaczenia.\n"
+      "R\u00f3\u017cnica w logitach: 0.0000000000\n",
+      "\u2705 IDEA\u0141. Kolejno\u015b\u0107 punkt\u00f3w nie ma znaczenia.\n"
      ]
     }
    ],
@@ -303,10 +310,10 @@
     "model.eval()\n",
     "\n",
     "# Bierzemy jeden obiekt\n",
-    "points, label = dataset[5] # Jakiś losowy obiekt\n",
+    "points, label = dataset[5] # Jaki\u015b losowy obiekt\n",
     "points = points.to(DEVICE).unsqueeze(0) # Dodajemy batch [1, 3, 1024]\n",
     "\n",
-    "# 1. Oryginał\n",
+    "# 1. Orygina\u0142\n",
     "out_original = model(points)\n",
     "prob_original = F.softmax(out_original, dim=1)[0]\n",
     "\n",
@@ -320,17 +327,17 @@
     "\n",
     "print(f\"Prawdziwa klasa: {label}\")\n",
     "print(\"-\" * 30)\n",
-    "print(f\"Oryginał:   Kula={prob_original[0]:.4f}, Sześcian={prob_original[1]:.4f}\")\n",
-    "print(f\"Wymieszany: Kula={prob_shuffled[0]:.4f}, Sześcian={prob_shuffled[1]:.4f}\")\n",
+    "print(f\"Orygina\u0142:   Kula={prob_original[0]:.4f}, Sze\u015bcian={prob_original[1]:.4f}\")\n",
+    "print(f\"Wymieszany: Kula={prob_shuffled[0]:.4f}, Sze\u015bcian={prob_shuffled[1]:.4f}\")\n",
     "\n",
     "diff = torch.sum(torch.abs(out_original - out_shuffled)).item()\n",
     "print(\"-\" * 30)\n",
-    "print(f\"Różnica w logitach: {diff:.10f}\")\n",
+    "print(f\"R\u00f3\u017cnica w logitach: {diff:.10f}\")\n",
     "\n",
     "if diff < 1e-5:\n",
-    "    print(\"✅ IDEAŁ. Kolejność punktów nie ma znaczenia.\")\n",
+    "    print(\"\u2705 IDEA\u0141. Kolejno\u015b\u0107 punkt\u00f3w nie ma znaczenia.\")\n",
     "else:\n",
-    "    print(\"❌ Coś jest nie tak. Wyniki są różne.\")"
+    "    print(\"\u274c Co\u015b jest nie tak. Wyniki s\u0105 r\u00f3\u017cne.\")"
    ]
   },
   {
@@ -338,15 +345,15 @@
    "id": "47135cd0",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Global Feature\n",
+    "## \ud83e\udde0 Podsumowanie: Global Feature\n",
     "\n",
-    "Dzięki operacji `torch.max()`, sieć wydobyła **Globalny Wektor Cech**.\n",
-    "Nieważne, w jakiej kolejności wchodziły punkty. Ważne, że w chmurze punktów:\n",
-    "*   Znalazł się punkt bardzo daleko od środka (w rogu sześcianu).\n",
-    "*   Znalazł się punkt płaski.\n",
+    "Dzi\u0119ki operacji `torch.max()`, sie\u0107 wydoby\u0142a **Globalny Wektor Cech**.\n",
+    "Niewa\u017cne, w jakiej kolejno\u015bci wchodzi\u0142y punkty. Wa\u017cne, \u017ce w chmurze punkt\u00f3w:\n",
+    "*   Znalaz\u0142 si\u0119 punkt bardzo daleko od \u015brodka (w rogu sze\u015bcianu).\n",
+    "*   Znalaz\u0142 si\u0119 punkt p\u0142aski.\n",
     "\n",
-    "Sieć nauczyła się \"obrysu\" obiektu.\n",
-    "To fundamentalny algorytm dla **Lidarów** w samochodach autonomicznych (rozróżnianie pieszego od słupka)."
+    "Sie\u0107 nauczy\u0142a si\u0119 \"obrysu\" obiektu.\n",
+    "To fundamentalny algorytm dla **Lidar\u00f3w** w samochodach autonomicznych (rozr\u00f3\u017cnianie pieszego od s\u0142upka)."
    ]
   }
  ],
