--- a/87_Graph_Attention_Networks_GAT.ipynb
+++ b/87_Graph_Attention_Networks_GAT.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/87_Graph_Attention_Networks_GAT.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "20fc814e",
    "metadata": {},
    "source": [
-    "# 🕸️ GAT: Kogo słuchać w tłumie? (Graph Attention Networks)\n",
+    "# \ud83d\udd78\ufe0f GAT: Kogo s\u0142ucha\u0107 w t\u0142umie? (Graph Attention Networks)\n",
     "\n",
-    "Zwykły GCN to \"demokracja\" (każdy sąsiad ma 1 głos).\n",
-    "GAT to \"merytokracja\" (głosują tylko ważni).\n",
+    "Zwyk\u0142y GCN to \"demokracja\" (ka\u017cdy s\u0105siad ma 1 g\u0142os).\n",
+    "GAT to \"merytokracja\" (g\u0142osuj\u0105 tylko wa\u017cni).\n",
     "\n",
     "**Mechanizm:**\n",
-    "Dla każdej krawędzi (relacji) między węzłem $i$ a węzłem $j$ liczmy **Współczynnik Uwagi** $\\alpha_{ij}$:\n",
-    "1.  Bierzemy cechy obu węzłów ($h_i, h_j$).\n",
-    "2.  Sklejamy je i przepuszczamy przez małą sieć neuronową (Attention Mechanism $a$).\n",
-    "3.  Wynik normalizujemy Softmaxem (żeby suma uwag dla jednego węzła wynosiła 1).\n",
+    "Dla ka\u017cdej kraw\u0119dzi (relacji) mi\u0119dzy w\u0119z\u0142em $i$ a w\u0119z\u0142em $j$ liczmy **Wsp\u00f3\u0142czynnik Uwagi** $\\alpha_{ij}$:\n",
+    "1.  Bierzemy cechy obu w\u0119z\u0142\u00f3w ($h_i, h_j$).\n",
+    "2.  Sklejamy je i przepuszczamy przez ma\u0142\u0105 sie\u0107 neuronow\u0105 (Attention Mechanism $a$).\n",
+    "3.  Wynik normalizujemy Softmaxem (\u017ceby suma uwag dla jednego w\u0119z\u0142a wynosi\u0142a 1).\n",
     "\n",
     "$$ \\alpha_{ij} = \\text{Softmax}(\\text{LeakyReLU}(a^T [Wh_i || Wh_j])) $$\n",
     "\n",
-    "**Klucz:** W GAT macierz sąsiedztwa służy tylko jako **Maska**. Liczymy uwagę tylko dla tych, z którymi jesteśmy połączeni (reszta to $-\\infty$)."
+    "**Klucz:** W GAT macierz s\u0105siedztwa s\u0142u\u017cy tylko jako **Maska**. Liczymy uwag\u0119 tylko dla tych, z kt\u00f3rymi jeste\u015bmy po\u0142\u0105czeni (reszta to $-\\infty$)."
    ]
   },
   {
@@ -47,7 +54,7 @@
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "# Tworzymy prosty graf (Gwiazda)\n",
-    "# Węzeł 0 (Centrum) jest połączony z 1, 2, 3, 4\n",
+    "# W\u0119ze\u0142 0 (Centrum) jest po\u0142\u0105czony z 1, 2, 3, 4\n",
     "adj_matrix = torch.tensor([\n",
     "    [1, 1, 1, 1, 1], # 0 zna wszystkich (i siebie)\n",
     "    [1, 1, 0, 0, 0], # 1 zna 0\n",
@@ -56,10 +63,10 @@
     "    [1, 0, 0, 0, 1]  # 4 zna 0\n",
     "], dtype=torch.float32).to(DEVICE)\n",
     "\n",
-    "# Cechy węzłów (Feature Matrix)\n",
-    "# Węzeł 0: [0, 0] (Neutralny)\n",
-    "# Węzeł 1: [1, 1] (Pozytywny)\n",
-    "# Węzeł 2: [-1,-1] (Negatywny)\n",
+    "# Cechy w\u0119z\u0142\u00f3w (Feature Matrix)\n",
+    "# W\u0119ze\u0142 0: [0, 0] (Neutralny)\n",
+    "# W\u0119ze\u0142 1: [1, 1] (Pozytywny)\n",
+    "# W\u0119ze\u0142 2: [-1,-1] (Negatywny)\n",
     "# Reszta: Szum\n",
     "X = torch.tensor([\n",
     "    [0.0, 0.0],\n",
@@ -79,11 +86,11 @@
    "source": [
     "## Implementacja Warstwy GAT\n",
     "\n",
-    "To jest najtrudniejszy matematycznie moment. Musimy policzyć uwagę \"każdy z każdym\", ale tylko tam, gdzie istnieje krawędź.\n",
+    "To jest najtrudniejszy matematycznie moment. Musimy policzy\u0107 uwag\u0119 \"ka\u017cdy z ka\u017cdym\", ale tylko tam, gdzie istnieje kraw\u0119d\u017a.\n",
     "\n",
     "**Triki tensorowe:**\n",
-    "1.  **Broadcasting:** Tworzymy macierz `[N, N, 2*F]`, gdzie w każdej komórce $(i, j)$ jest sklejony wektor węzła $i$ i $j$.\n",
-    "2.  **Maskowanie:** Tam, gdzie w macierzy sąsiedztwa jest 0, wstawiamy bardzo małą liczbę (np. -1e9). Softmax zamieni to na 0."
+    "1.  **Broadcasting:** Tworzymy macierz `[N, N, 2*F]`, gdzie w ka\u017cdej kom\u00f3rce $(i, j)$ jest sklejony wektor w\u0119z\u0142a $i$ i $j$.\n",
+    "2.  **Maskowanie:** Tam, gdzie w macierzy s\u0105siedztwa jest 0, wstawiamy bardzo ma\u0142\u0105 liczb\u0119 (np. -1e9). Softmax zamieni to na 0."
    ]
   },
   {
@@ -111,7 +118,7 @@
     "        self.W = nn.Linear(in_features, out_features, bias=False)\n",
     "        \n",
     "        # 2. Wektor atencji (a)\n",
-    "        # Przyjmuje sklejone cechy (2 * out_features) i zwraca 1 liczbę (score)\n",
+    "        # Przyjmuje sklejone cechy (2 * out_features) i zwraca 1 liczb\u0119 (score)\n",
     "        self.a = nn.Linear(2 * out_features, 1, bias=False)\n",
     "        \n",
     "        self.leakyrelu = nn.LeakyReLU(0.2)\n",
@@ -123,7 +130,7 @@
     "        h = self.W(x) # [N, out_features]\n",
     "        \n",
     "        # Krok 2: Przygotowanie par (Concatenation)\n",
-    "        # Chcemy stworzyć macierz [N, N, 2*out], gdzie element (i,j) to [h_i || h_j]\n",
+    "        # Chcemy stworzy\u0107 macierz [N, N, 2*out], gdzie element (i,j) to [h_i || h_j]\n",
     "        \n",
     "        # h.repeat -> powiela wiersze\n",
     "        h_repeated_in_chunks = h.view(N, 1, self.out_features).repeat(1, N, 1)      # [N, N, F] (i-ty wiersz to h_i)\n",
@@ -132,18 +139,18 @@
     "        # Sklejamy\n",
     "        all_combinations = torch.cat([h_repeated_in_chunks, h_repeated_alternating], dim=2) # [N, N, 2F]\n",
     "        \n",
-    "        # Krok 3: Obliczenie surowych punktów uwagi (e_ij)\n",
+    "        # Krok 3: Obliczenie surowych punkt\u00f3w uwagi (e_ij)\n",
     "        e = self.leakyrelu(self.a(all_combinations).squeeze(2)) # [N, N]\n",
     "        \n",
-    "        # Krok 4: MASKOWANIE (Kluczowe dla Grafów!)\n",
-    "        # Tam gdzie nie ma krawędzi (adj=0), wstawiamy -nieskończoność\n",
+    "        # Krok 4: MASKOWANIE (Kluczowe dla Graf\u00f3w!)\n",
+    "        # Tam gdzie nie ma kraw\u0119dzi (adj=0), wstawiamy -niesko\u0144czono\u015b\u0107\n",
     "        zero_vec = -9e15 * torch.ones_like(e)\n",
     "        attention = torch.where(adj > 0, e, zero_vec)\n",
     "        \n",
     "        # Krok 5: Softmax (Normalizacja) -> Alpha_ij\n",
     "        attention = F.softmax(attention, dim=1)\n",
     "        \n",
-    "        # Krok 6: Agregacja (Ważona suma sąsiadów)\n",
+    "        # Krok 6: Agregacja (Wa\u017cona suma s\u0105siad\u00f3w)\n",
     "        # h_new = sum(alpha_ij * h_j)\n",
     "        h_prime = torch.matmul(attention, h)\n",
     "        \n",
@@ -161,10 +168,10 @@
    "source": [
     "## Symulacja \"Inteligencji\"\n",
     "\n",
-    "Ponieważ nie trenujemy tu sieci na wielkim zbiorze, **wymusimy wagi ręcznie**, żeby zobaczyć efekt.\n",
+    "Poniewa\u017c nie trenujemy tu sieci na wielkim zbiorze, **wymusimy wagi r\u0119cznie**, \u017ceby zobaczy\u0107 efekt.\n",
     "\n",
-    "Ustawimy wagi tak, żeby sieć \"lubiła\" węzły o wartościach dodatnich, a \"nienawidziła\" ujemnych.\n",
-    "Węzeł 0 (Centrum) powinien wtedy zignorować Węzeł 2 (Negatywny) i słuchać Węzła 1 (Pozytywny)."
+    "Ustawimy wagi tak, \u017ceby sie\u0107 \"lubi\u0142a\" w\u0119z\u0142y o warto\u015bciach dodatnich, a \"nienawidzi\u0142a\" ujemnych.\n",
+    "W\u0119ze\u0142 0 (Centrum) powinien wtedy zignorowa\u0107 W\u0119ze\u0142 2 (Negatywny) i s\u0142ucha\u0107 W\u0119z\u0142a 1 (Pozytywny)."
    ]
   },
   {
@@ -177,32 +184,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- CECHY PO GAT (Dla Węzła 0) ---\n",
-      "Oryginał: [0.0, 0.0]\n",
+      "--- CECHY PO GAT (Dla W\u0119z\u0142a 0) ---\n",
+      "Orygina\u0142: [0.0, 0.0]\n",
       "Nowe:     [0.5955022573471069, 0.599097490310669]\n",
-      "(Powinny być przesunięte w stronę dodatnią, bo Węzeł 1 'przekrzyczał' Węzeł 2)\n"
+      "(Powinny by\u0107 przesuni\u0119te w stron\u0119 dodatni\u0105, bo W\u0119ze\u0142 1 'przekrzycza\u0142' W\u0119ze\u0142 2)\n"
      ]
     }
    ],
    "source": [
-    "# HACK: Ręczne ustawienie wag, żeby zasymulować wytrenowany model\n",
+    "# HACK: R\u0119czne ustawienie wag, \u017ceby zasymulowa\u0107 wytrenowany model\n",
     "with torch.no_grad():\n",
     "    # Transformacja W to Identity (nie zmienia cech)\n",
     "    gat.W.weight.copy_(torch.eye(2))\n",
     "    \n",
     "    # Wektor uwagi 'a'.\n",
     "    # [1, 1, 1, 1] oznacza: sumuj wszystkie cechy.\n",
-    "    # Ponieważ Węzeł 2 ma cechy [-1, -1], to suma będzie ujemna -> LeakyReLU da mały wynik.\n",
-    "    # Węzeł 1 ma [1, 1], suma dodatnia -> LeakyReLU da duży wynik.\n",
+    "    # Poniewa\u017c W\u0119ze\u0142 2 ma cechy [-1, -1], to suma b\u0119dzie ujemna -> LeakyReLU da ma\u0142y wynik.\n",
+    "    # W\u0119ze\u0142 1 ma [1, 1], suma dodatnia -> LeakyReLU da du\u017cy wynik.\n",
     "    gat.a.weight.fill_(1.0)\n",
     "\n",
     "# Uruchomienie\n",
     "output_features, attn_weights = gat(X, adj_matrix)\n",
     "\n",
-    "print(\"--- CECHY PO GAT (Dla Węzła 0) ---\")\n",
-    "print(f\"Oryginał: {X[0].tolist()}\")\n",
+    "print(\"--- CECHY PO GAT (Dla W\u0119z\u0142a 0) ---\")\n",
+    "print(f\"Orygina\u0142: {X[0].tolist()}\")\n",
     "print(f\"Nowe:     {output_features[0].tolist()}\")\n",
-    "print(\"(Powinny być przesunięte w stronę dodatnią, bo Węzeł 1 'przekrzyczał' Węzeł 2)\")"
+    "print(\"(Powinny by\u0107 przesuni\u0119te w stron\u0119 dodatni\u0105, bo W\u0119ze\u0142 1 'przekrzycza\u0142' W\u0119ze\u0142 2)\")"
    ]
   },
   {
@@ -226,31 +233,31 @@
      "output_type": "stream",
      "text": [
       "ANALIZA:\n",
-      "Waga dla Sąsiada 1 (Pozytywny): 0.6510\n",
-      "Waga dla Sąsiada 2 (Negatywny): 0.0591\n",
-      "✅ SUKCES! GAT nauczył się ignorować 'toksycznego' sąsiada.\n"
+      "Waga dla S\u0105siada 1 (Pozytywny): 0.6510\n",
+      "Waga dla S\u0105siada 2 (Negatywny): 0.0591\n",
+      "\u2705 SUKCES! GAT nauczy\u0142 si\u0119 ignorowa\u0107 'toksycznego' s\u0105siada.\n"
      ]
     }
    ],
    "source": [
     "# WIZUALIZACJA UWAGI\n",
-    "# Zobaczmy, kogo słucha Węzeł 0 (Centrum)\n",
+    "# Zobaczmy, kogo s\u0142ucha W\u0119ze\u0142 0 (Centrum)\n",
     "\n",
     "attn_row_0 = attn_weights[0, :].detach().cpu().numpy()\n",
     "\n",
     "plt.figure(figsize=(8, 5))\n",
     "plt.bar(range(5), attn_row_0, color=['gray', 'green', 'red', 'gray', 'gray'])\n",
-    "plt.xticks(range(5), [\"Ja (0)\", \"Sąsiad 1 (+)\", \"Sąsiad 2 (-)\", \"Sąsiad 3\", \"Sąsiad 4\"])\n",
+    "plt.xticks(range(5), [\"Ja (0)\", \"S\u0105siad 1 (+)\", \"S\u0105siad 2 (-)\", \"S\u0105siad 3\", \"S\u0105siad 4\"])\n",
     "plt.ylabel(\"Waga Uwagi (Attention Score)\")\n",
-    "plt.title(\"Kogo słucha Węzeł 0?\")\n",
+    "plt.title(\"Kogo s\u0142ucha W\u0119ze\u0142 0?\")\n",
     "plt.show()\n",
     "\n",
     "print(\"ANALIZA:\")\n",
-    "print(f\"Waga dla Sąsiada 1 (Pozytywny): {attn_row_0[1]:.4f}\")\n",
-    "print(f\"Waga dla Sąsiada 2 (Negatywny): {attn_row_0[2]:.4f}\")\n",
+    "print(f\"Waga dla S\u0105siada 1 (Pozytywny): {attn_row_0[1]:.4f}\")\n",
+    "print(f\"Waga dla S\u0105siada 2 (Negatywny): {attn_row_0[2]:.4f}\")\n",
     "\n",
     "if attn_row_0[1] > attn_row_0[2]:\n",
-    "    print(\"✅ SUKCES! GAT nauczył się ignorować 'toksycznego' sąsiada.\")"
+    "    print(\"\u2705 SUKCES! GAT nauczy\u0142 si\u0119 ignorowa\u0107 'toksycznego' s\u0105siada.\")"
    ]
   },
   {
@@ -258,15 +265,15 @@
    "id": "d5e40886",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: GAT vs GCN\n",
+    "## \ud83e\udde0 Podsumowanie: GAT vs GCN\n",
     "\n",
-    "W zwykłym GCN (notatnik 58) słupki na wykresie byłyby **równe** (po 0.2 dla każdego z 5 węzłów).\n",
-    "W GAT sieć dynamicznie zmienia te słupki.\n",
+    "W zwyk\u0142ym GCN (notatnik 58) s\u0142upki na wykresie by\u0142yby **r\u00f3wne** (po 0.2 dla ka\u017cdego z 5 w\u0119z\u0142\u00f3w).\n",
+    "W GAT sie\u0107 dynamicznie zmienia te s\u0142upki.\n",
     "\n",
     "**Zastosowania:**\n",
-    "1.  **Social Media (Fake News):** GAT może nauczyć się ignorować boty (węzły o podejrzanych cechach), nawet jeśli są połączone z prawdziwymi ludźmi.\n",
-    "2.  **Chemia:** W cząsteczce niektóre wiązania (np. Podwójne) są ważniejsze dla właściwości chemicznych niż inne. GAT to wyłapuje.\n",
-    "3.  **Rekomendacje:** Nie każdy znajomy ma taki sam gust filmowy jak Ty. GAT waży wpływ znajomych na Twoje rekomendacje."
+    "1.  **Social Media (Fake News):** GAT mo\u017ce nauczy\u0107 si\u0119 ignorowa\u0107 boty (w\u0119z\u0142y o podejrzanych cechach), nawet je\u015bli s\u0105 po\u0142\u0105czone z prawdziwymi lud\u017ami.\n",
+    "2.  **Chemia:** W cz\u0105steczce niekt\u00f3re wi\u0105zania (np. Podw\u00f3jne) s\u0105 wa\u017cniejsze dla w\u0142a\u015bciwo\u015bci chemicznych ni\u017c inne. GAT to wy\u0142apuje.\n",
+    "3.  **Rekomendacje:** Nie ka\u017cdy znajomy ma taki sam gust filmowy jak Ty. GAT wa\u017cy wp\u0142yw znajomych na Twoje rekomendacje."
    ]
   }
  ],
