--- a/89_NeuralProphet_Hybrid_Time_Series.ipynb
+++ b/89_NeuralProphet_Hybrid_Time_Series.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/89_NeuralProphet_Hybrid_Time_Series.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cb81fbde",
    "metadata": {},
    "source": [
-    "# 📈 NeuralProphet: Hybryda Klasyki i Deep Learningu\n",
+    "# \ud83d\udcc8 NeuralProphet: Hybryda Klasyki i Deep Learningu\n",
     "\n",
-    "Większość sieci neuronowych to \"wszystko albo nic\" (wrzucasz dane, wypluwasz wynik).\n",
-    "Modele typu Prophet (Additive Models) działają jak klocki:\n",
+    "Wi\u0119kszo\u015b\u0107 sieci neuronowych to \"wszystko albo nic\" (wrzucasz dane, wypluwasz wynik).\n",
+    "Modele typu Prophet (Additive Models) dzia\u0142aj\u0105 jak klocki:\n",
     "1.  **Klocek Trendu:** Odpowiada za wzrost/spadek.\n",
-    "2.  **Klocek Sezonowości:** Odpowiada za cykle (używa szeregów Fouriera).\n",
-    "3.  **Klocek AR (Auto-Regresji):** Odpowiada za krótkotrwałe zależności (np. wczorajsza cena wpływa na dzisiejszą).\n",
+    "2.  **Klocek Sezonowo\u015bci:** Odpowiada za cykle (u\u017cywa szereg\u00f3w Fouriera).\n",
+    "3.  **Klocek AR (Auto-Regresji):** Odpowiada za kr\u00f3tkotrwa\u0142e zale\u017cno\u015bci (np. wczorajsza cena wp\u0142ywa na dzisiejsz\u0105).\n",
     "\n",
-    "W PyTorch możemy to zaimplementować jako **osobne warstwy `nn.Module`**, których wyniki po prostu **dodajemy** do siebie na końcu.\n",
+    "W PyTorch mo\u017cemy to zaimplementowa\u0107 jako **osobne warstwy `nn.Module`**, kt\u00f3rych wyniki po prostu **dodajemy** do siebie na ko\u0144cu.\n",
     "\n",
     "$$ \\hat{y} = T(t) + S(t) + AR(x) $$"
    ]
@@ -28,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Urządzenie: cuda\n"
+      "Urz\u0105dzenie: cuda\n"
      ]
     }
    ],
@@ -42,7 +49,7 @@
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "N_SAMPLES = 1000\n",
     "\n",
-    "print(f\"Urządzenie: {DEVICE}\")"
+    "print(f\"Urz\u0105dzenie: {DEVICE}\")"
    ]
   },
   {
@@ -52,7 +59,7 @@
    "source": [
     "## Generowanie Danych (Trend + Sezon)\n",
     "\n",
-    "Stworzymy dane, które mają wyraźne składniki, żeby sprawdzić, czy nasza sieć potrafi je potem rozdzielić."
+    "Stworzymy dane, kt\u00f3re maj\u0105 wyra\u017ane sk\u0142adniki, \u017ceby sprawdzi\u0107, czy nasza sie\u0107 potrafi je potem rozdzieli\u0107."
    ]
   },
   {
@@ -77,10 +84,10 @@
     "t = np.linspace(0, 10, N_SAMPLES)\n",
     "time_tensor = torch.tensor(t, dtype=torch.float32).view(-1, 1).to(DEVICE)\n",
     "\n",
-    "# 1. Trend (Liniowy + lekkie zagięcie)\n",
+    "# 1. Trend (Liniowy + lekkie zagi\u0119cie)\n",
     "trend = 0.5 * t + np.sin(t * 0.5)\n",
     "\n",
-    "# 2. Sezonowość (Szybka sinusoida)\n",
+    "# 2. Sezonowo\u015b\u0107 (Szybka sinusoida)\n",
     "seasonality = 2.0 * np.sin(2 * np.pi * t) # Okres = 1\n",
     "\n",
     "# Suma + Szum\n",
@@ -90,7 +97,7 @@
     "plt.figure(figsize=(12, 4))\n",
     "plt.plot(t, y_true, label='Dane (Trend + Sezon + Szum)', alpha=0.7)\n",
     "plt.plot(t, trend, label='Prawdziwy Trend', linestyle='--')\n",
-    "plt.title(\"Dane wejściowe\")\n",
+    "plt.title(\"Dane wej\u015bciowe\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -100,15 +107,15 @@
    "id": "3dfa00b6",
    "metadata": {},
    "source": [
-    "## Moduł 1: Sezonowość (Fourier Layer)\n",
+    "## Modu\u0142 1: Sezonowo\u015b\u0107 (Fourier Layer)\n",
     "\n",
-    "Jak nauczyć sieć pór roku?\n",
-    "Używamy **Szeregu Fouriera**.\n",
-    "Zamiast uczyć się \"kształtu fali\" punkt po punkcie, uczymy się **współczynników** dla sinusów i cosinusów o różnych częstotliwościach.\n",
+    "Jak nauczy\u0107 sie\u0107 p\u00f3r roku?\n",
+    "U\u017cywamy **Szeregu Fouriera**.\n",
+    "Zamiast uczy\u0107 si\u0119 \"kszta\u0142tu fali\" punkt po punkcie, uczymy si\u0119 **wsp\u00f3\u0142czynnik\u00f3w** dla sinus\u00f3w i cosinus\u00f3w o r\u00f3\u017cnych cz\u0119stotliwo\u015bciach.\n",
     "\n",
     "$$ S(t) = \\sum_{n=1}^{N} [a_n \\cos(2\\pi n t) + b_n \\sin(2\\pi n t)] $$\n",
     "\n",
-    "Sieć uczy się parametrów $a_n$ i $b_n$."
+    "Sie\u0107 uczy si\u0119 parametr\u00f3w $a_n$ i $b_n$."
    ]
   },
   {
@@ -130,7 +137,7 @@
     "    def __init__(self, n_orders=5):\n",
     "        super().__init__()\n",
     "        self.n_orders = n_orders\n",
-    "        # Uczymy się wag dla sin i cos (2 * n_orders parametrów)\n",
+    "        # Uczymy si\u0119 wag dla sin i cos (2 * n_orders parametr\u00f3w)\n",
     "        self.weights = nn.Linear(2 * n_orders, 1, bias=False)\n",
     "\n",
     "    def forward(self, t):\n",
@@ -143,7 +150,7 @@
     "            \n",
     "        features = torch.cat(features, dim=1) # [Batch, 2*N]\n",
     "        \n",
-    "        # Mnożymy przez wyuczone wagi\n",
+    "        # Mno\u017cymy przez wyuczone wagi\n",
     "        return self.weights(features)\n",
     "\n",
     "# Test\n",
@@ -157,12 +164,12 @@
    "id": "b67299d9",
    "metadata": {},
    "source": [
-    "## Moduł 2: Trend (Piecewise Linear / MLP)\n",
+    "## Modu\u0142 2: Trend (Piecewise Linear / MLP)\n",
     "\n",
-    "W oryginalnym Prophecie trend to \"łamana\" (Piecewise Linear).\n",
-    "W NeuralProphet możemy użyć po prostu małej sieci MLP, która nauczy się ogólnego kształtu (Growth).\n",
+    "W oryginalnym Prophecie trend to \"\u0142amana\" (Piecewise Linear).\n",
+    "W NeuralProphet mo\u017cemy u\u017cy\u0107 po prostu ma\u0142ej sieci MLP, kt\u00f3ra nauczy si\u0119 og\u00f3lnego kszta\u0142tu (Growth).\n",
     "\n",
-    "Dla uproszczenia użyjemy tu prostego MLP z dwiema warstwami."
+    "Dla uproszczenia u\u017cyjemy tu prostego MLP z dwiema warstwami."
    ]
   },
   {
@@ -192,12 +199,12 @@
    "id": "c5893d8c",
    "metadata": {},
    "source": [
-    "## Model Hybrydowy (Składanie Klocków)\n",
+    "## Model Hybrydowy (Sk\u0142adanie Klock\u00f3w)\n",
     "\n",
-    "Nasz model to po prostu suma wyjść z modułów.\n",
+    "Nasz model to po prostu suma wyj\u015b\u0107 z modu\u0142\u00f3w.\n",
     "$$ Output = Trend(t) + Seasonality(t) $$\n",
     "\n",
-    "*Uwaga: W pełnym NeuralProphet dochodzi jeszcze moduł AR (AutoRegresja), który patrzy na przeszłe $y$, ale tu skupiamy się na dekompozycji czasu $t$.*"
+    "*Uwaga: W pe\u0142nym NeuralProphet dochodzi jeszcze modu\u0142 AR (AutoRegresja), kt\u00f3ry patrzy na przesz\u0142e $y$, ale tu skupiamy si\u0119 na dekompozycji czasu $t$.*"
    ]
   },
   {
@@ -268,7 +275,7 @@
    ],
    "source": [
     "# TRENING\n",
-    "# NeuralProphet uczy się bardzo szybko, bo ma mało parametrów.\n",
+    "# NeuralProphet uczy si\u0119 bardzo szybko, bo ma ma\u0142o parametr\u00f3w.\n",
     "\n",
     "epochs = 500\n",
     "loss_history = []\n",
@@ -276,7 +283,7 @@
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
     "    \n",
-    "    # Forward (zwraca sumę oraz komponenty osobno)\n",
+    "    # Forward (zwraca sum\u0119 oraz komponenty osobno)\n",
     "    y_pred, trend_pred, season_pred = model(time_tensor)\n",
     "    \n",
     "    loss = loss_fn(y_pred, y_tensor)\n",
@@ -311,7 +318,7 @@
     }
    ],
    "source": [
-    "# DEKOMPOZYCJA WIZUALNA (Magia Addytywności)\n",
+    "# DEKOMPOZYCJA WIZUALNA (Magia Addytywno\u015bci)\n",
     "\n",
     "with torch.no_grad():\n",
     "    y_pred, trend_pred, season_pred = model(time_tensor)\n",
@@ -322,10 +329,10 @@
     "\n",
     "fig, ax = plt.subplots(3, 1, figsize=(10, 10), sharex=True)\n",
     "\n",
-    "# 1. Całość\n",
+    "# 1. Ca\u0142o\u015b\u0107\n",
     "ax[0].plot(t, y_true, label='Prawda', color='gray', alpha=0.5)\n",
     "ax[0].plot(t, y_pred, label='Model (Suma)', color='red')\n",
-    "ax[0].set_title(\"1. Model vs Rzeczywistość\")\n",
+    "ax[0].set_title(\"1. Model vs Rzeczywisto\u015b\u0107\")\n",
     "ax[0].legend()\n",
     "\n",
     "# 2. Trend\n",
@@ -334,10 +341,10 @@
     "ax[1].set_title(\"2. Komponent Trendu\")\n",
     "ax[1].legend()\n",
     "\n",
-    "# 3. Sezonowość\n",
+    "# 3. Sezonowo\u015b\u0107\n",
     "ax[2].plot(t, seasonality, label='Prawdziwy Sezon', color='black', linestyle='--')\n",
     "ax[2].plot(t, season_pred, label='Wykryty Sezon (Fourier)', color='green')\n",
-    "ax[2].set_title(\"3. Komponent Sezonowości\")\n",
+    "ax[2].set_title(\"3. Komponent Sezonowo\u015bci\")\n",
     "ax[2].legend()\n",
     "\n",
     "plt.show()"
@@ -348,20 +355,20 @@
    "id": "81d74359",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Dlaczego to jest potężne?\n",
+    "## \ud83e\udde0 Podsumowanie: Dlaczego to jest pot\u0119\u017cne?\n",
     "\n",
-    "Spójrz na wykresy. Sieć neuronowa **sama rozdzieliła** sygnał na dwie części.\n",
-    "*   MLP \"zjadł\" powolne zmiany (Trend).\n",
-    "*   Warstwa Fouriera \"zjadła\" szybkie cykle (Sezon).\n",
+    "Sp\u00f3jrz na wykresy. Sie\u0107 neuronowa **sama rozdzieli\u0142a** sygna\u0142 na dwie cz\u0119\u015bci.\n",
+    "*   MLP \"zjad\u0142\" powolne zmiany (Trend).\n",
+    "*   Warstwa Fouriera \"zjad\u0142a\" szybkie cykle (Sezon).\n",
     "\n",
     "**Zastosowanie w biznesie:**\n",
-    "Gdy prezes pyta: *\"Jaka będzie sprzedaż w grudniu?\"*, model odpowiada:\n",
-    "*\"Będzie wysoka (1000 sztuk), z czego:*\n",
-    "*   *800 sztuk wynika z tego, że firma rośnie (Trend).*\n",
-    "*   *200 sztuk wynika z tego, że idą Święta (Sezon).*\n",
-    "*   *Gdyby nie święta, sprzedalibyśmy 800.\"*\n",
+    "Gdy prezes pyta: *\"Jaka b\u0119dzie sprzeda\u017c w grudniu?\"*, model odpowiada:\n",
+    "*\"B\u0119dzie wysoka (1000 sztuk), z czego:*\n",
+    "*   *800 sztuk wynika z tego, \u017ce firma ro\u015bnie (Trend).*\n",
+    "*   *200 sztuk wynika z tego, \u017ce id\u0105 \u015awi\u0119ta (Sezon).*\n",
+    "*   *Gdyby nie \u015bwi\u0119ta, sprzedaliby\u015bmy 800.\"*\n",
     "\n",
-    "Tego wyjaśnienia nie da Ci zwykły LSTM ani Transformer. Dlatego hybrydy (NeuralProphet) są tak popularne w forecastingu."
+    "Tego wyja\u015bnienia nie da Ci zwyk\u0142y LSTM ani Transformer. Dlatego hybrydy (NeuralProphet) s\u0105 tak popularne w forecastingu."
    ]
   }
  ],
