--- a/92_Counterfactual_Explanations.ipynb
+++ b/92_Counterfactual_Explanations.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/92_Counterfactual_Explanations.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c15d687",
    "metadata": {},
    "source": [
-    "# 🔄 Counterfactual Explanations: \"Co by było, gdyby?\"\n",
+    "# \ud83d\udd04 Counterfactual Explanations: \"Co by by\u0142o, gdyby?\"\n",
     "\n",
-    "LIME i SHAP odpowiadają na pytanie: *\"Dlaczego tak?\"*.\n",
-    "Counterfactuals odpowiadają na pytanie: *\"Co zrobić, żeby było inaczej?\"*.\n",
+    "LIME i SHAP odpowiadaj\u0105 na pytanie: *\"Dlaczego tak?\"*.\n",
+    "Counterfactuals odpowiadaj\u0105 na pytanie: *\"Co zrobi\u0107, \u017ceby by\u0142o inaczej?\"*.\n",
     "\n",
     "To kluczowe w prawie (GDPR/RODO) i biznesie.\n",
-    "Przykład:\n",
+    "Przyk\u0142ad:\n",
     "*   **Stan obecny:** Klient X, Zarobki 3000, Wiek 20 -> Kredyt: ODMOWA.\n",
     "*   **Counterfactual:** Klient X, Zarobki **3500**, Wiek 20 -> Kredyt: ZGODA.\n",
     "\n",
-    "Szukamy nowego punktu $x'$, który:\n",
-    "1.  Daje inny wynik niż $x$ (Przekracza próg decyzyjny).\n",
-    "2.  Jest jak najbliżej oryginału $x$ (Minimalna zmiana - ang. *Sparsity*).\n",
+    "Szukamy nowego punktu $x'$, kt\u00f3ry:\n",
+    "1.  Daje inny wynik ni\u017c $x$ (Przekracza pr\u00f3g decyzyjny).\n",
+    "2.  Jest jak najbli\u017cej orygina\u0142u $x$ (Minimalna zmiana - ang. *Sparsity*).\n",
     "\n",
-    "Zastosujemy to do diagnozy medycznej (zbiór Breast Cancer). Znajdziemy najmniejszą zmianę w wynikach badań, która zmieni diagnozę z \"Złośliwy\" na \"Łagodny\"."
+    "Zastosujemy to do diagnozy medycznej (zbi\u00f3r Breast Cancer). Znajdziemy najmniejsz\u0105 zmian\u0119 w wynikach bada\u0144, kt\u00f3ra zmieni diagnoz\u0119 z \"Z\u0142o\u015bliwy\" na \"\u0141agodny\"."
    ]
   },
   {
@@ -64,10 +71,10 @@
    "id": "9775f730",
    "metadata": {},
    "source": [
-    "## Wybór Pacjenta\n",
+    "## Wyb\u00f3r Pacjenta\n",
     "\n",
-    "Wybierzmy pacjenta, który ma diagnozę **Malignant (0 - Złośliwy)**.\n",
-    "Chcemy znaleźć, co musiałoby się zmienić w jego wynikach, żeby model uznał go za **Benign (1 - Łagodny)**."
+    "Wybierzmy pacjenta, kt\u00f3ry ma diagnoz\u0119 **Malignant (0 - Z\u0142o\u015bliwy)**.\n",
+    "Chcemy znale\u017a\u0107, co musia\u0142oby si\u0119 zmieni\u0107 w jego wynikach, \u017ceby model uzna\u0142 go za **Benign (1 - \u0141agodny)**."
    ]
   },
   {
@@ -81,8 +88,8 @@
      "output_type": "stream",
      "text": [
       "Pacjent ID: 0\n",
-      "Diagnoza: malignant (Pewność: 0.98)\n",
-      "Cel: Zmienić diagnozę na 'benign' (1).\n"
+      "Diagnoza: malignant (Pewno\u015b\u0107: 0.98)\n",
+      "Cel: Zmieni\u0107 diagnoz\u0119 na 'benign' (1).\n"
      ]
     }
    ],
@@ -91,20 +98,20 @@
     "malignant_indices = np.where(y == 0)[0]\n",
     "patient_idx = malignant_indices[0] # Bierzemy pierwszego z brzegu\n",
     "\n",
-    "# Wyciągamy dane jako Serię pandas\n",
+    "# Wyci\u0105gamy dane jako Seri\u0119 pandas\n",
     "patient_data = X.iloc[patient_idx]\n",
     "\n",
     "# --- POPRAWKA (Fix Warning) ---\n",
-    "# Zamieniamy pojedynczą serię na DataFrame (1 wiersz), żeby zachować nazwy kolumn.\n",
-    "# Scikit-learn przestanie krzyczeć.\n",
+    "# Zamieniamy pojedyncz\u0105 seri\u0119 na DataFrame (1 wiersz), \u017ceby zachowa\u0107 nazwy kolumn.\n",
+    "# Scikit-learn przestanie krzycze\u0107.\n",
     "patient_df_row = patient_data.to_frame().T\n",
     "\n",
     "original_pred = model.predict(patient_df_row)[0]\n",
     "original_prob = model.predict_proba(patient_df_row)[0]\n",
     "\n",
     "print(f\"Pacjent ID: {patient_idx}\")\n",
-    "print(f\"Diagnoza: {target_names[original_pred]} (Pewność: {original_prob[original_pred]:.2f})\")\n",
-    "print(\"Cel: Zmienić diagnozę na 'benign' (1).\")"
+    "print(f\"Diagnoza: {target_names[original_pred]} (Pewno\u015b\u0107: {original_prob[original_pred]:.2f})\")\n",
+    "print(\"Cel: Zmieni\u0107 diagnoz\u0119 na 'benign' (1).\")"
    ]
   },
   {
@@ -114,13 +121,13 @@
    "source": [
     "## Algorytm: Greedy Counterfactual Search\n",
     "\n",
-    "Ponieważ Random Forest nie jest różniczkowalny (nie ma gradientu), użyjemy metody **zachłannej (Greedy)**.\n",
+    "Poniewa\u017c Random Forest nie jest r\u00f3\u017cniczkowalny (nie ma gradientu), u\u017cyjemy metody **zach\u0142annej (Greedy)**.\n",
     "\n",
-    "1.  Sprawdź ważność cech (Feature Importance) - wiemy, które cechy model lubi najbardziej.\n",
-    "2.  Iteruj po najważniejszych cechach.\n",
-    "3.  Zmieniaj ich wartość (np. zmniejszaj/zwiększaj o odchylenie standardowe).\n",
-    "4.  Sprawdzaj, czy decyzja modelu się zmieniła.\n",
-    "5.  Jeśli tak -> STOP. Mamy to."
+    "1.  Sprawd\u017a wa\u017cno\u015b\u0107 cech (Feature Importance) - wiemy, kt\u00f3re cechy model lubi najbardziej.\n",
+    "2.  Iteruj po najwa\u017cniejszych cechach.\n",
+    "3.  Zmieniaj ich warto\u015b\u0107 (np. zmniejszaj/zwi\u0119kszaj o odchylenie standardowe).\n",
+    "4.  Sprawdzaj, czy decyzja modelu si\u0119 zmieni\u0142a.\n",
+    "5.  Je\u015bli tak -> STOP. Mamy to."
    ]
   },
   {
@@ -134,11 +141,11 @@
      "output_type": "stream",
      "text": [
       "Szukanie kontrfaktu (Strategia Kumulacyjna)... Klasa startowa: 0\n",
-      "   -> Zatrzymujemy zmianę w 'worst concave points' (Pewność spadła do 0.84)\n",
-      "   -> Zatrzymujemy zmianę w 'mean concave points' (Pewność spadła do 0.68)\n",
-      "   -> Zatrzymujemy zmianę w 'worst radius' (Pewność spadła do 0.54)\n",
-      "   -> Zatrzymujemy zmianę w 'mean perimeter' (Pewność spadła do 0.52)\n",
-      "✅ SUKCES! Przełamano decyzję.\n",
+      "   -> Zatrzymujemy zmian\u0119 w 'worst concave points' (Pewno\u015b\u0107 spad\u0142a do 0.84)\n",
+      "   -> Zatrzymujemy zmian\u0119 w 'mean concave points' (Pewno\u015b\u0107 spad\u0142a do 0.68)\n",
+      "   -> Zatrzymujemy zmian\u0119 w 'worst radius' (Pewno\u015b\u0107 spad\u0142a do 0.54)\n",
+      "   -> Zatrzymujemy zmian\u0119 w 'mean perimeter' (Pewno\u015b\u0107 spad\u0142a do 0.52)\n",
+      "\u2705 SUKCES! Prze\u0142amano decyzj\u0119.\n",
       "   Ostatnia zmiana: worst area (Krok 2)\n"
      ]
     }
@@ -147,34 +154,34 @@
     "def generate_counterfactual(model, instance, dataset_std, step_size=0.5, max_steps=50):\n",
     "    \"\"\"\n",
     "    Ulepszony generator: Zmienia cechy KUMULATYWNIE.\n",
-    "    Jeśli zmiana jednej cechy nie wystarcza, zostawia ją zmienioną i bierze się za kolejną.\n",
+    "    Je\u015bli zmiana jednej cechy nie wystarcza, zostawia j\u0105 zmienion\u0105 i bierze si\u0119 za kolejn\u0105.\n",
     "    \"\"\"\n",
-    "    # Kopiujemy instancję na start\n",
+    "    # Kopiujemy instancj\u0119 na start\n",
     "    best_cf = instance.copy()\n",
     "    \n",
-    "    # Pobieramy ważność cech\n",
+    "    # Pobieramy wa\u017cno\u015b\u0107 cech\n",
     "    importances = model.feature_importances_\n",
-    "    sorted_indices = np.argsort(importances)[::-1] # Od najważniejszych\n",
+    "    sorted_indices = np.argsort(importances)[::-1] # Od najwa\u017cniejszych\n",
     "    feature_names = instance.index\n",
     "    \n",
-    "    # Sprawdzamy klasę oryginału\n",
+    "    # Sprawdzamy klas\u0119 orygina\u0142u\n",
     "    instance_df = instance.to_frame().T\n",
     "    original_class = model.predict(instance_df)[0]\n",
     "    \n",
     "    print(f\"Szukanie kontrfaktu (Strategia Kumulacyjna)... Klasa startowa: {original_class}\")\n",
     "    \n",
-    "    # Pętla po najważniejszych cechach\n",
+    "    # P\u0119tla po najwa\u017cniejszych cechach\n",
     "    for feature_idx in sorted_indices:\n",
     "        feature_name = feature_names[feature_idx]\n",
     "        std = dataset_std[feature_name]\n",
     "        \n",
-    "        # Próbujemy ruszyć tę cechę w obu kierunkach\n",
+    "        # Pr\u00f3bujemy ruszy\u0107 t\u0119 cech\u0119 w obu kierunkach\n",
     "        for direction in [-1, 1]:\n",
-    "            # Pracujemy na KOPII aktualnie najlepszego rozwiązania (nie resetujemy do zera!)\n",
+    "            # Pracujemy na KOPII aktualnie najlepszego rozwi\u0105zania (nie resetujemy do zera!)\n",
     "            current_cf = best_cf.copy()\n",
     "            \n",
     "            for step in range(max_steps):\n",
-    "                # Zmiana wartości\n",
+    "                # Zmiana warto\u015bci\n",
     "                change = direction * step_size * std\n",
     "                current_cf[feature_name] += change\n",
     "                \n",
@@ -183,28 +190,28 @@
     "                new_pred = model.predict(current_cf_df)[0]\n",
     "                \n",
     "                if new_pred != original_class:\n",
-    "                    print(f\"✅ SUKCES! Przełamano decyzję.\")\n",
+    "                    print(f\"\u2705 SUKCES! Prze\u0142amano decyzj\u0119.\")\n",
     "                    print(f\"   Ostatnia zmiana: {feature_name} (Krok {step+1})\")\n",
     "                    return current_cf\n",
     "            \n",
-    "            # Jeśli ta cecha w tym kierunku ZMNIEJSZYŁA pewność modelu (nawet jeśli nie przełączyła klasy),\n",
-    "            # to ją zachowujemy! (Heurystyka)\n",
-    "            # Sprawdźmy prawdopodobieństwo starej klasy\n",
+    "            # Je\u015bli ta cecha w tym kierunku ZMNIEJSZY\u0141A pewno\u015b\u0107 modelu (nawet je\u015bli nie prze\u0142\u0105czy\u0142a klasy),\n",
+    "            # to j\u0105 zachowujemy! (Heurystyka)\n",
+    "            # Sprawd\u017amy prawdopodobie\u0144stwo starej klasy\n",
     "            old_prob = model.predict_proba(best_cf.to_frame().T)[0][original_class]\n",
     "            new_prob = model.predict_proba(current_cf.to_frame().T)[0][original_class]\n",
     "            \n",
     "            if new_prob < old_prob:\n",
-    "                print(f\"   -> Zatrzymujemy zmianę w '{feature_name}' (Pewność spadła do {new_prob:.2f})\")\n",
-    "                best_cf = current_cf # Nadpisujemy bazę!\n",
-    "                break # Idziemy do następnej cechy\n",
+    "                print(f\"   -> Zatrzymujemy zmian\u0119 w '{feature_name}' (Pewno\u015b\u0107 spad\u0142a do {new_prob:.2f})\")\n",
+    "                best_cf = current_cf # Nadpisujemy baz\u0119!\n",
+    "                break # Idziemy do nast\u0119pnej cechy\n",
     "                \n",
-    "    print(\"❌ Nie udało się mimo prób.\")\n",
+    "    print(\"\u274c Nie uda\u0142o si\u0119 mimo pr\u00f3b.\")\n",
     "    return None\n",
     "\n",
-    "# Potrzebujemy odchyleń standardowych\n",
+    "# Potrzebujemy odchyle\u0144 standardowych\n",
     "std_devs = X.std()\n",
     "\n",
-    "# Uruchamiamy (z większym krokiem dla pewności)\n",
+    "# Uruchamiamy (z wi\u0119kszym krokiem dla pewno\u015bci)\n",
     "counterfactual = generate_counterfactual(model, patient_data, std_devs, step_size=1.0)"
    ]
   },
@@ -220,9 +227,9 @@
      "text": [
       "\n",
       "Nowa Diagnoza: benign\n",
-      "Pewność 'benign' (1): 0.58\n",
+      "Pewno\u015b\u0107 'benign' (1): 0.58\n",
       "\n",
-      "--- RECEPTA (Co zmienić?) ---\n"
+      "--- RECEPTA (Co zmieni\u0107?) ---\n"
      ]
     },
     {
@@ -246,7 +253,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Oryginał</th>\n",
+       "      <th>Orygina\u0142</th>\n",
        "      <th>Zalecane</th>\n",
        "      <th>Zmiana</th>\n",
        "    </tr>\n",
@@ -287,7 +294,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                       Oryginał     Zalecane       Zmiana\n",
+       "                       Orygina\u0142     Zalecane       Zmiana\n",
        "mean perimeter         122.8000 -1092.149052 -1214.949052\n",
        "mean concave points      0.1471    -1.793042    -1.940142\n",
        "worst radius            25.3800  -216.282079  -241.662079\n",
@@ -314,25 +321,25 @@
     "\n",
     "if counterfactual is not None:\n",
     "    # --- POPRAWKA: Konwersja na DataFrame ---\n",
-    "    # To jest ten moment, który generował ostrzeżenia.\n",
-    "    # Zamieniamy wynik na DataFrame, żeby model widział nazwy kolumn.\n",
+    "    # To jest ten moment, kt\u00f3ry generowa\u0142 ostrze\u017cenia.\n",
+    "    # Zamieniamy wynik na DataFrame, \u017ceby model widzia\u0142 nazwy kolumn.\n",
     "    cf_df = counterfactual.to_frame().T\n",
     "    \n",
-    "    # Nowa predykcja (już na DataFrame)\n",
+    "    # Nowa predykcja (ju\u017c na DataFrame)\n",
     "    new_prob = model.predict_proba(cf_df)[0]\n",
     "    new_class = model.predict(cf_df)[0]\n",
     "    \n",
     "    print(f\"\\nNowa Diagnoza: {target_names[new_class]}\")\n",
-    "    print(f\"Pewność 'benign' (1): {new_prob[1]:.2f}\")\n",
+    "    print(f\"Pewno\u015b\u0107 'benign' (1): {new_prob[1]:.2f}\")\n",
     "    \n",
-    "    # Rysujemy różnice\n",
+    "    # Rysujemy r\u00f3\u017cnice\n",
     "    diff = counterfactual - patient_data\n",
-    "    # Filtrujemy tylko te cechy, które się zmieniły\n",
+    "    # Filtrujemy tylko te cechy, kt\u00f3re si\u0119 zmieni\u0142y\n",
     "    changed_features = diff[diff != 0]\n",
     "    \n",
-    "    print(\"\\n--- RECEPTA (Co zmienić?) ---\")\n",
+    "    print(\"\\n--- RECEPTA (Co zmieni\u0107?) ---\")\n",
     "    results_df = pd.DataFrame({\n",
-    "        'Oryginał': patient_data[changed_features.index],\n",
+    "        'Orygina\u0142': patient_data[changed_features.index],\n",
     "        'Zalecane': counterfactual[changed_features.index],\n",
     "        'Zmiana': changed_features\n",
     "    })\n",
@@ -343,10 +350,10 @@
     "    colors = ['green' if x > 0 else 'red' for x in changed_features]\n",
     "    changed_features.plot(kind='barh', color=colors)\n",
     "    plt.title(\"Zmiana wymagana do zmiany decyzji\")\n",
-    "    plt.xlabel(\"Wartość zmiany\")\n",
+    "    plt.xlabel(\"Warto\u015b\u0107 zmiany\")\n",
     "    plt.show()\n",
     "else:\n",
-    "    print(\"Brak rozwiązania do wizualizacji.\")"
+    "    print(\"Brak rozwi\u0105zania do wizualizacji.\")"
    ]
   },
   {
@@ -354,15 +361,15 @@
    "id": "683e1819",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Actionable Insights\n",
+    "## \ud83e\udde0 Podsumowanie: Actionable Insights\n",
     "\n",
-    "Czym to się różni od Feature Importance?\n",
-    "*   **Feature Importance:** \"Dla modelu ważny jest `worst perimeter`\". (Informacja teoretyczna).\n",
-    "*   **Counterfactual:** \"Jeśli Twój `worst perimeter` spadnie o 15.3, model zmieni zdanie\". (Informacja operacyjna).\n",
+    "Czym to si\u0119 r\u00f3\u017cni od Feature Importance?\n",
+    "*   **Feature Importance:** \"Dla modelu wa\u017cny jest `worst perimeter`\". (Informacja teoretyczna).\n",
+    "*   **Counterfactual:** \"Je\u015bli Tw\u00f3j `worst perimeter` spadnie o 15.3, model zmieni zdanie\". (Informacja operacyjna).\n",
     "\n",
     "**Wnioski dla biznesu:**\n",
-    "To narzędzie daje klientowi **plan działania**.\n",
-    "Zamiast mówić: \"Masz zły profil\", mówisz: \"Zwiększ obroty o 10% LUB wydłuż historię kredytową o rok, a dostaniesz pożyczkę\"."
+    "To narz\u0119dzie daje klientowi **plan dzia\u0142ania**.\n",
+    "Zamiast m\u00f3wi\u0107: \"Masz z\u0142y profil\", m\u00f3wisz: \"Zwi\u0119ksz obroty o 10% LUB wyd\u0142u\u017c histori\u0119 kredytow\u0105 o rok, a dostaniesz po\u017cyczk\u0119\"."
    ]
   }
  ],
