--- a/93_Fairness_and_Bias_Detection.ipynb
+++ b/93_Fairness_and_Bias_Detection.ipynb
@@ -2,26 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/93_Fairness_and_Bias_Detection.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab13e761",
    "metadata": {},
    "source": [
-    "# ⚖️ Fairness & Bias: Czy Twój model jest rasistą?\n",
+    "# \u2696\ufe0f Fairness & Bias: Czy Tw\u00f3j model jest rasist\u0105?\n",
     "\n",
-    "W danych historycznych często ukryte są uprzedzenia (np. w latach 70. rzadziej zatrudniano kobiety na stanowiska kierownicze).\n",
-    "Jeśli nauczysz model na takich danych, **nauczy się on dyskryminować**.\n",
+    "W danych historycznych cz\u0119sto ukryte s\u0105 uprzedzenia (np. w latach 70. rzadziej zatrudniano kobiety na stanowiska kierownicze).\n",
+    "Je\u015bli nauczysz model na takich danych, **nauczy si\u0119 on dyskryminowa\u0107**.\n",
     "\n",
-    "**Kluczowe pojęcia:**\n",
-    "1.  **Protected Attribute (Cecha Chroniona):** Płeć, Wiek, Rasa. Tego nie wolno używać do dyskryminacji.\n",
-    "2.  **Privileged Group:** Grupa uprzywilejowana (np. Mężczyźni w starych danych).\n",
+    "**Kluczowe poj\u0119cia:**\n",
+    "1.  **Protected Attribute (Cecha Chroniona):** P\u0142e\u0107, Wiek, Rasa. Tego nie wolno u\u017cywa\u0107 do dyskryminacji.\n",
+    "2.  **Privileged Group:** Grupa uprzywilejowana (np. M\u0119\u017cczy\u017ani w starych danych).\n",
     "3.  **Unprivileged Group:** Grupa dyskryminowana (np. Kobiety).\n",
     "\n",
     "**Metryka: Disparate Impact (DI)**\n",
     "Stosunek szansy na sukces w obu grupach.\n",
     "$$ DI = \\frac{P(\\text{Sukces} | \\text{Dyskryminowani})}{P(\\text{Sukces} | \\text{Uprzywilejowani})} $$\n",
     "\n",
-    "*   Zasada prawna (USA): Jeśli $DI < 0.8$ (80%), to mamy do czynienia z nielegalną dyskryminacją.\n",
+    "*   Zasada prawna (USA): Je\u015bli $DI < 0.8$ (80%), to mamy do czynienia z nielegaln\u0105 dyskryminacj\u0105.\n",
     "\n",
-    "Stworzymy symulację banku, który dyskryminuje ze względu na Wiek."
+    "Stworzymy symulacj\u0119 banku, kt\u00f3ry dyskryminuje ze wzgl\u0119du na Wiek."
    ]
   },
   {
@@ -34,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- DANE (Z ukrytą dyskryminacją) ---\n",
+      "--- DANE (Z ukryt\u0105 dyskryminacj\u0105) ---\n",
       "       Zarobki  Historia  Wiek_Chroniony  Kredyt\n",
       "0  5512.633964  0.760348               0       0\n",
       "1  7814.256259  0.812302               1       1\n",
@@ -42,7 +49,7 @@
       "3  4134.644517  0.349316               0       0\n",
       "4  3652.377993  0.591994               0       0\n",
       "\n",
-      "Średnia przyznawalność kredytu: 41.30%\n"
+      "\u015arednia przyznawalno\u015b\u0107 kredytu: 41.30%\n"
      ]
     }
    ],
@@ -55,12 +62,12 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
     "\n",
     "# 1. GENERUJEMY DANE (Symulacja Banku)\n",
-    "# 1000 klientów ubiegających się o kredyt\n",
+    "# 1000 klient\u00f3w ubiegaj\u0105cych si\u0119 o kredyt\n",
     "np.random.seed(42)\n",
     "n = 1000\n",
     "\n",
-    "# Cecha Chroniona: WIEK (0 = Młodzi < 25 lat, 1 = Starsi >= 25 lat)\n",
-    "# Załóżmy, że bank historycznie nie lubi młodych.\n",
+    "# Cecha Chroniona: WIEK (0 = M\u0142odzi < 25 lat, 1 = Starsi >= 25 lat)\n",
+    "# Za\u0142\u00f3\u017cmy, \u017ce bank historycznie nie lubi m\u0142odych.\n",
     "wiek = np.random.randint(0, 2, n) # 0 lub 1\n",
     "\n",
     "# Inne cechy (Zarobki, Historia)\n",
@@ -68,23 +75,23 @@
     "historia = np.random.normal(0.5, 0.2, n)\n",
     "\n",
     "# TWORZYMY TARGET (Decyzja o kredycie)\n",
-    "# Wzór: Zarobki mają znaczenie, ALE Wiek ma ogromny, niesprawiedliwy wpływ.\n",
-    "# Młodzi (0) mają odjęte punkty karne (-2000 wirtualnych punktów).\n",
+    "# Wz\u00f3r: Zarobki maj\u0105 znaczenie, ALE Wiek ma ogromny, niesprawiedliwy wp\u0142yw.\n",
+    "# M\u0142odzi (0) maj\u0105 odj\u0119te punkty karne (-2000 wirtualnych punkt\u00f3w).\n",
     "score = (zarobki * 0.5) + (historia * 2000) + (wiek * 2000) + np.random.normal(0, 500, n)\n",
     "\n",
-    "# Próg przyznania kredytu\n",
+    "# Pr\u00f3g przyznania kredytu\n",
     "decyzja = (score > 5000).astype(int)\n",
     "\n",
     "df = pd.DataFrame({\n",
     "    'Zarobki': zarobki,\n",
     "    'Historia': historia,\n",
-    "    'Wiek_Chroniony': wiek, # 0=Młodzi (Unprivileged), 1=Starsi (Privileged)\n",
+    "    'Wiek_Chroniony': wiek, # 0=M\u0142odzi (Unprivileged), 1=Starsi (Privileged)\n",
     "    'Kredyt': decyzja\n",
     "})\n",
     "\n",
-    "print(\"--- DANE (Z ukrytą dyskryminacją) ---\")\n",
+    "print(\"--- DANE (Z ukryt\u0105 dyskryminacj\u0105) ---\")\n",
     "print(df.head())\n",
-    "print(f\"\\nŚrednia przyznawalność kredytu: {df['Kredyt'].mean():.2%}\")"
+    "print(f\"\\n\u015arednia przyznawalno\u015b\u0107 kredytu: {df['Kredyt'].mean():.2%}\")"
    ]
   },
   {
@@ -95,7 +102,7 @@
     "## Trening Modelu\n",
     "\n",
     "Wytrenujemy model.\n",
-    "Nawet jeśli nie usuniemy kolumny `Wiek`, model nauczy się z niej korzystać (bo w danych historycznych wiek był kluczowy)."
+    "Nawet je\u015bli nie usuniemy kolumny `Wiek`, model nauczy si\u0119 z niej korzysta\u0107 (bo w danych historycznych wiek by\u0142 kluczowy)."
    ]
   },
   {
@@ -108,8 +115,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dokładność modelu: 100.00%\n",
-      "Model działa świetnie matematycznie. Ale czy jest uczciwy?\n"
+      "Dok\u0142adno\u015b\u0107 modelu: 100.00%\n",
+      "Model dzia\u0142a \u015bwietnie matematycznie. Ale czy jest uczciwy?\n"
      ]
     }
    ],
@@ -121,11 +128,11 @@
     "model = RandomForestClassifier(random_state=42)\n",
     "model.fit(X, y)\n",
     "\n",
-    "# Robimy predykcję dla wszystkich\n",
+    "# Robimy predykcj\u0119 dla wszystkich\n",
     "y_pred = model.predict(X)\n",
     "\n",
-    "print(f\"Dokładność modelu: {accuracy_score(y, y_pred):.2%}\")\n",
-    "print(\"Model działa świetnie matematycznie. Ale czy jest uczciwy?\")"
+    "print(f\"Dok\u0142adno\u015b\u0107 modelu: {accuracy_score(y, y_pred):.2%}\")\n",
+    "print(\"Model dzia\u0142a \u015bwietnie matematycznie. Ale czy jest uczciwy?\")"
    ]
   },
   {
@@ -135,9 +142,9 @@
    "source": [
     "## Metryka 1: Disparate Impact (DI)\n",
     "\n",
-    "Sprawdźmy, jaki procent Młodych dostał kredyt, a jaki procent Starszych.\n",
+    "Sprawd\u017amy, jaki procent M\u0142odych dosta\u0142 kredyt, a jaki procent Starszych.\n",
     "\n",
-    "$$ DI = \\frac{\\% \\text{Młodych z kredytem}}{\\% \\text{Starszych z kredytem}} $$"
+    "$$ DI = \\frac{\\% \\text{M\u0142odych z kredytem}}{\\% \\text{Starszych z kredytem}} $$"
    ]
   },
   {
@@ -151,27 +158,27 @@
      "output_type": "stream",
      "text": [
       "Sukces w grupie Starszych: 72.16%\n",
-      "Sukces w grupie Młodych:   9.18%\n",
+      "Sukces w grupie M\u0142odych:   9.18%\n",
       "------------------------------\n",
       "Disparate Impact: 0.13\n",
-      "🚨 ALARM: Dyskryminacja! (Wynik poniżej 0.8)\n"
+      "\ud83d\udea8 ALARM: Dyskryminacja! (Wynik poni\u017cej 0.8)\n"
      ]
     }
    ],
    "source": [
-    "# Dodajemy predykcję do DataFrame, żeby łatwo liczyć\n",
+    "# Dodajemy predykcj\u0119 do DataFrame, \u017ceby \u0142atwo liczy\u0107\n",
     "df['Predykcja'] = y_pred\n",
     "\n",
     "# Grupa Uprzywilejowana (Starsi, Wiek=1)\n",
     "priv = df[df['Wiek_Chroniony'] == 1]\n",
     "priv_rate = priv['Predykcja'].mean()\n",
     "\n",
-    "# Grupa Dyskryminowana (Młodzi, Wiek=0)\n",
+    "# Grupa Dyskryminowana (M\u0142odzi, Wiek=0)\n",
     "unpriv = df[df['Wiek_Chroniony'] == 0]\n",
     "unpriv_rate = unpriv['Predykcja'].mean()\n",
     "\n",
     "print(f\"Sukces w grupie Starszych: {priv_rate:.2%}\")\n",
-    "print(f\"Sukces w grupie Młodych:   {unpriv_rate:.2%}\")\n",
+    "print(f\"Sukces w grupie M\u0142odych:   {unpriv_rate:.2%}\")\n",
     "\n",
     "# Disparate Impact\n",
     "di = unpriv_rate / priv_rate\n",
@@ -180,9 +187,9 @@
     "print(f\"Disparate Impact: {di:.2f}\")\n",
     "\n",
     "if di < 0.8:\n",
-    "    print(\"🚨 ALARM: Dyskryminacja! (Wynik poniżej 0.8)\")\n",
+    "    print(\"\ud83d\udea8 ALARM: Dyskryminacja! (Wynik poni\u017cej 0.8)\")\n",
     "else:\n",
-    "    print(\"✅ JEST OK.\")"
+    "    print(\"\u2705 JEST OK.\")"
    ]
   },
   {
@@ -192,13 +199,13 @@
    "source": [
     "## Metryka 2: Equal Opportunity Difference\n",
     "\n",
-    "Samo DI to nie wszystko. Może młodzi po prostu mniej zarabiają i słusznie nie dostają kredytów?\n",
+    "Samo DI to nie wszystko. Mo\u017ce m\u0142odzi po prostu mniej zarabiaj\u0105 i s\u0142usznie nie dostaj\u0105 kredyt\u00f3w?\n",
     "\n",
-    "Ta metryka sprawdza: **\"Jeśli ktoś zasłużył na kredyt (w rzeczywistości spłacił), to czy model mu go dał?\"**\n",
-    "Czyli porównujemy **True Positive Rate (TPR)**.\n",
+    "Ta metryka sprawdza: **\"Je\u015bli kto\u015b zas\u0142u\u017cy\u0142 na kredyt (w rzeczywisto\u015bci sp\u0142aci\u0142), to czy model mu go da\u0142?\"**\n",
+    "Czyli por\u00f3wnujemy **True Positive Rate (TPR)**.\n",
     "\n",
     "$$ EOD = TPR_{unpriv} - TPR_{priv} $$\n",
-    "Jeśli wynik jest bliski 0, to jest sprawiedliwie."
+    "Je\u015bli wynik jest bliski 0, to jest sprawiedliwie."
    ]
   },
   {
@@ -211,37 +218,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TPR Starsi (Mieli dostać i dostali): 100.00%\n",
-      "TPR Młodzi (Mieli dostać i dostali): 100.00%\n",
-      "Różnica (Equal Opportunity Difference): 0.00\n",
+      "TPR Starsi (Mieli dosta\u0107 i dostali): 100.00%\n",
+      "TPR M\u0142odzi (Mieli dosta\u0107 i dostali): 100.00%\n",
+      "R\u00f3\u017cnica (Equal Opportunity Difference): 0.00\n",
       "------------------------------\n",
-      "✅ JEST OK.\n"
+      "\u2705 JEST OK.\n"
      ]
     }
    ],
    "source": [
     "def get_tpr(y_true, y_pred):\n",
     "    tn, fp, fn, tp = confusion_matrix(y_true, y_pred).ravel()\n",
-    "    tpr = tp / (tp + fn) # Ile % zasługujących dostało kredyt?\n",
+    "    tpr = tp / (tp + fn) # Ile % zas\u0142uguj\u0105cych dosta\u0142o kredyt?\n",
     "    return tpr\n",
     "\n",
     "# TPR dla Starszych\n",
     "tpr_priv = get_tpr(priv['Kredyt'], priv['Predykcja'])\n",
     "\n",
-    "# TPR dla Młodych\n",
+    "# TPR dla M\u0142odych\n",
     "tpr_unpriv = get_tpr(unpriv['Kredyt'], unpriv['Predykcja'])\n",
     "\n",
     "diff = tpr_unpriv - tpr_priv\n",
     "\n",
-    "print(f\"TPR Starsi (Mieli dostać i dostali): {tpr_priv:.2%}\")\n",
-    "print(f\"TPR Młodzi (Mieli dostać i dostali): {tpr_unpriv:.2%}\")\n",
-    "print(f\"Różnica (Equal Opportunity Difference): {diff:.2f}\")\n",
+    "print(f\"TPR Starsi (Mieli dosta\u0107 i dostali): {tpr_priv:.2%}\")\n",
+    "print(f\"TPR M\u0142odzi (Mieli dosta\u0107 i dostali): {tpr_unpriv:.2%}\")\n",
+    "print(f\"R\u00f3\u017cnica (Equal Opportunity Difference): {diff:.2f}\")\n",
     "\n",
     "print(\"-\" * 30)\n",
     "if abs(diff) > 0.1:\n",
-    "    print(\"🚨 ALARM: Model częściej odmawia Młodym, którzy na to zasłużyli!\")\n",
+    "    print(\"\ud83d\udea8 ALARM: Model cz\u0119\u015bciej odmawia M\u0142odym, kt\u00f3rzy na to zas\u0142u\u017cyli!\")\n",
     "else:\n",
-    "    print(\"✅ JEST OK.\")"
+    "    print(\"\u2705 JEST OK.\")"
    ]
   },
   {
@@ -249,16 +256,16 @@
    "id": "14a4d605",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Bias w danych\n",
+    "## \ud83e\udde0 Podsumowanie: Bias w danych\n",
     "\n",
-    "Co wykazały testy?\n",
-    "1.  **Disparate Impact:** Wynik rzędu **0.15** (Koszmar!). Młodzi mają 6x mniejszą szansę na kredyt.\n",
-    "2.  **Equal Opportunity:** Różnica jest spora. Nawet bogaty, solidny młody człowiek jest odrzucany przez model, bo model nauczył się ogólnej reguły \"Młody = Ryzyko\".\n",
+    "Co wykaza\u0142y testy?\n",
+    "1.  **Disparate Impact:** Wynik rz\u0119du **0.15** (Koszmar!). M\u0142odzi maj\u0105 6x mniejsz\u0105 szans\u0119 na kredyt.\n",
+    "2.  **Equal Opportunity:** R\u00f3\u017cnica jest spora. Nawet bogaty, solidny m\u0142ody cz\u0142owiek jest odrzucany przez model, bo model nauczy\u0142 si\u0119 og\u00f3lnej regu\u0142y \"M\u0142ody = Ryzyko\".\n",
     "\n",
-    "**Co z tym zrobić?**\n",
-    "1.  **Pre-processing:** Usunąć kolumnę `Wiek` (ale uwaga na Proxy - np. \"Liczba lat pracy\" jest skorelowana z wiekiem!).\n",
-    "2.  **Reweighting:** Zwiększyć wagi dla Młodych podczas treningu.\n",
-    "3.  **Post-processing:** Ręcznie zmienić próg odcięcia dla Młodych (np. dawać kredyt już od 40% pewności, a nie 50%)."
+    "**Co z tym zrobi\u0107?**\n",
+    "1.  **Pre-processing:** Usun\u0105\u0107 kolumn\u0119 `Wiek` (ale uwaga na Proxy - np. \"Liczba lat pracy\" jest skorelowana z wiekiem!).\n",
+    "2.  **Reweighting:** Zwi\u0119kszy\u0107 wagi dla M\u0142odych podczas treningu.\n",
+    "3.  **Post-processing:** R\u0119cznie zmieni\u0107 pr\u00f3g odci\u0119cia dla M\u0142odych (np. dawa\u0107 kredyt ju\u017c od 40% pewno\u015bci, a nie 50%)."
    ]
   }
  ],
