--- a/94_Causal_Inference_Do_Calculus.ipynb
+++ b/94_Causal_Inference_Do_Calculus.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/94_Causal_Inference_Do_Calculus.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8ee1ca1e",
    "metadata": {},
    "source": [
-    "# 📉 Causal Inference: Korelacja to nie Przyczynowość\n",
+    "# \ud83d\udcc9 Causal Inference: Korelacja to nie Przyczynowo\u015b\u0107\n",
     "\n",
-    "Standardowe ML odpowiada na pytanie: *\"Co widzę?\"*.\n",
-    "Causal Inference odpowiada na pytanie: *\"Co się stanie, jeśli to zrobię?\"* (Interwencja).\n",
+    "Standardowe ML odpowiada na pytanie: *\"Co widz\u0119?\"*.\n",
+    "Causal Inference odpowiada na pytanie: *\"Co si\u0119 stanie, je\u015bli to zrobi\u0119?\"* (Interwencja).\n",
     "\n",
     "**Scenariusz (Lek vs Wyzdrowienie):**\n",
     "Mamy dane ze szpitala.\n",
-    "1.  **Treatment (T):** Czy pacjent wziął lek?\n",
-    "2.  **Outcome (Y):** Czy wyzdrowiał?\n",
-    "3.  **Confounder (Z):** Stan pacjenta (Lekki / Ciężki). To jest nasza \"zmienna zakłócająca\".\n",
+    "1.  **Treatment (T):** Czy pacjent wzi\u0105\u0142 lek?\n",
+    "2.  **Outcome (Y):** Czy wyzdrowia\u0142?\n",
+    "3.  **Confounder (Z):** Stan pacjenta (Lekki / Ci\u0119\u017cki). To jest nasza \"zmienna zak\u0142\u00f3caj\u0105ca\".\n",
     "\n",
-    "Problem: Lekarze częściej dają lek pacjentom w stanie ciężkim.\n",
-    "Przez to w statystykach lek wygląda na \"zabójczy\" (bo biorą go ci, którzy i tak mają małe szanse), mimo że w rzeczywistości pomaga.\n",
+    "Problem: Lekarze cz\u0119\u015bciej daj\u0105 lek pacjentom w stanie ci\u0119\u017ckim.\n",
+    "Przez to w statystykach lek wygl\u0105da na \"zab\u00f3jczy\" (bo bior\u0105 go ci, kt\u00f3rzy i tak maj\u0105 ma\u0142e szanse), mimo \u017ce w rzeczywisto\u015bci pomaga.\n",
     "\n",
-    "To klasyczny przykład, gdzie `model.predict()` kłamie."
+    "To klasyczny przyk\u0142ad, gdzie `model.predict()` k\u0142amie."
    ]
   },
   {
@@ -112,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Liczba pacjentów: 1000\n"
+      "Liczba pacjent\u00f3w: 1000\n"
      ]
     }
    ],
@@ -126,20 +133,20 @@
     "np.random.seed(42)\n",
     "n = 1000\n",
     "\n",
-    "# Zmienna Z: Stan pacjenta (0 = Lekki, 1 = Ciężki)\n",
-    "# 50% pacjentów jest w stanie ciężkim\n",
+    "# Zmienna Z: Stan pacjenta (0 = Lekki, 1 = Ci\u0119\u017cki)\n",
+    "# 50% pacjent\u00f3w jest w stanie ci\u0119\u017ckim\n",
     "Z = np.random.binomial(1, 0.5, n)\n",
     "\n",
-    "# Zmienna T: Decyzja o leku (Zależy od stanu Z!)\n",
-    "# Jeśli stan Lekki (0) -> 10% szans na lek.\n",
-    "# Jeśli stan Ciężki (1) -> 90% szans na lek (Lekarze ratują życie).\n",
+    "# Zmienna T: Decyzja o leku (Zale\u017cy od stanu Z!)\n",
+    "# Je\u015bli stan Lekki (0) -> 10% szans na lek.\n",
+    "# Je\u015bli stan Ci\u0119\u017cki (1) -> 90% szans na lek (Lekarze ratuj\u0105 \u017cycie).\n",
     "prob_T = np.where(Z == 0, 0.1, 0.9)\n",
     "T = np.random.binomial(1, prob_T)\n",
     "\n",
     "# Zmienna Y: Wyzdrowienie\n",
     "# Bazowa szansa: 70%.\n",
-    "# Wpływ Leku (T): +10% (TO JEST PRAWDZIWY EFEKT, KTÓREGO SZUKAMY).\n",
-    "# Wpływ Stanu Ciężkiego (Z): -40% (Ciężko chorym trudniej wyzdrowieć).\n",
+    "# Wp\u0142yw Leku (T): +10% (TO JEST PRAWDZIWY EFEKT, KT\u00d3REGO SZUKAMY).\n",
+    "# Wp\u0142yw Stanu Ci\u0119\u017ckiego (Z): -40% (Ci\u0119\u017cko chorym trudniej wyzdrowie\u0107).\n",
     "prob_Y = 0.7 + (0.1 * T) - (0.4 * Z)\n",
     "Y = np.random.binomial(1, prob_Y)\n",
     "\n",
@@ -147,7 +154,7 @@
     "\n",
     "print(\"--- DANE ZE SZPITALA ---\")\n",
     "display(df.head())\n",
-    "print(f\"Liczba pacjentów: {n}\")"
+    "print(f\"Liczba pacjent\u00f3w: {n}\")"
    ]
   },
   {
@@ -155,12 +162,12 @@
    "id": "13d292c5",
    "metadata": {},
    "source": [
-    "## Podejście 1: Naiwne (Korelacja)\n",
+    "## Podej\u015bcie 1: Naiwne (Korelacja)\n",
     "\n",
-    "Liczymy średnią wyzdrowień dla tych, co wzięli lek i dla tych, co nie wzięli.\n",
+    "Liczymy \u015bredni\u0105 wyzdrowie\u0144 dla tych, co wzi\u0119li lek i dla tych, co nie wzi\u0119li.\n",
     "$$ ATE_{naive} = E[Y|T=1] - E[Y|T=0] $$\n",
     "\n",
-    "Spodziewamy się wyniku ujemnego (paradoks), mimo że lek dodaje +10% szans."
+    "Spodziewamy si\u0119 wyniku ujemnego (paradoks), mimo \u017ce lek dodaje +10% szans."
    ]
   },
   {
@@ -177,15 +184,15 @@
       "Wyzdrowienia bez leku: 67.33%\n",
       "------------------------------\n",
       "Naiwny Efekt Leku: -22.75%\n",
-      "😱 WNIOSEK: Lek szkodzi! (To kłamstwo wynikające z danych).\n"
+      "\ud83d\ude31 WNIOSEK: Lek szkodzi! (To k\u0142amstwo wynikaj\u0105ce z danych).\n"
      ]
     }
    ],
    "source": [
-    "# Średnia wyzdrowień z lekiem\n",
+    "# \u015arednia wyzdrowie\u0144 z lekiem\n",
     "mean_with_drug = df[df['Lek (T)'] == 1]['Wyzdrowienie (Y)'].mean()\n",
     "\n",
-    "# Średnia wyzdrowień bez leku\n",
+    "# \u015arednia wyzdrowie\u0144 bez leku\n",
     "mean_without_drug = df[df['Lek (T)'] == 0]['Wyzdrowienie (Y)'].mean()\n",
     "\n",
     "naive_effect = mean_with_drug - mean_without_drug\n",
@@ -196,7 +203,7 @@
     "print(f\"Naiwny Efekt Leku: {naive_effect:.2%}\")\n",
     "\n",
     "if naive_effect < 0:\n",
-    "    print(\"😱 WNIOSEK: Lek szkodzi! (To kłamstwo wynikające z danych).\")"
+    "    print(\"\ud83d\ude31 WNIOSEK: Lek szkodzi! (To k\u0142amstwo wynikaj\u0105ce z danych).\")"
    ]
   },
   {
@@ -204,18 +211,18 @@
    "id": "9141010b",
    "metadata": {},
    "source": [
-    "## Podejście 2: Causal Inference (Stratyfikacja)\n",
+    "## Podej\u015bcie 2: Causal Inference (Stratyfikacja)\n",
     "\n",
-    "Musimy odciąć wpływ zmiennej $Z$ (Stan).\n",
-    "Używamy **Adjustment Formula** (Wzór na interwencję):\n",
+    "Musimy odci\u0105\u0107 wp\u0142yw zmiennej $Z$ (Stan).\n",
+    "U\u017cywamy **Adjustment Formula** (Wz\u00f3r na interwencj\u0119):\n",
     "$$ P(Y=1 | do(T=1)) = \\sum_z P(Y=1 | T=1, Z=z) \\cdot P(Z=z) $$\n",
     "\n",
     "Po ludzku:\n",
-    "1.  Sprawdź skuteczność leku w grupie \"Stan Lekki\".\n",
-    "2.  Sprawdź skuteczność leku w grupie \"Stan Ciężki\".\n",
-    "3.  Oblicz średnią ważoną tych skuteczności, używając proporcji populacji.\n",
+    "1.  Sprawd\u017a skuteczno\u015b\u0107 leku w grupie \"Stan Lekki\".\n",
+    "2.  Sprawd\u017a skuteczno\u015b\u0107 leku w grupie \"Stan Ci\u0119\u017cki\".\n",
+    "3.  Oblicz \u015bredni\u0105 wa\u017con\u0105 tych skuteczno\u015bci, u\u017cywaj\u0105c proporcji populacji.\n",
     "\n",
-    "Dzięki temu symulujemy sytuację, w której lek byłby rozdawany losowo (jak w testach klinicznych), a nie według decyzji lekarza."
+    "Dzi\u0119ki temu symulujemy sytuacj\u0119, w kt\u00f3rej lek by\u0142by rozdawany losowo (jak w testach klinicznych), a nie wed\u0142ug decyzji lekarza."
    ]
   },
   {
@@ -229,33 +236,33 @@
      "output_type": "stream",
      "text": [
       "Efekt w grupie lekkiej:  7.51%\n",
-      "Efekt w grupie ciężkiej: -0.69%\n",
-      "(Tu już widać prawdę - lek pomaga w obu grupach!)\n",
+      "Efekt w grupie ci\u0119\u017ckiej: -0.69%\n",
+      "(Tu ju\u017c wida\u0107 prawd\u0119 - lek pomaga w obu grupach!)\n",
       "------------------------------\n",
       "Prawdziwy (Przyczynowy) Efekt Leku: 3.43%\n",
-      "🎯 To jest bliskie +10%, które zaszyliśmy w danych!\n"
+      "\ud83c\udfaf To jest bliskie +10%, kt\u00f3re zaszyli\u015bmy w danych!\n"
      ]
     }
    ],
    "source": [
-    "# 1. Obliczamy P(Z) - jak często występuje dany stan w populacji?\n",
+    "# 1. Obliczamy P(Z) - jak cz\u0119sto wyst\u0119puje dany stan w populacji?\n",
     "p_z0 = len(df[df['Stan (Z)'] == 0]) / n\n",
     "p_z1 = len(df[df['Stan (Z)'] == 1]) / n\n",
     "\n",
-    "# 2. Obliczamy skuteczność w grupach (Conditional Means)\n",
+    "# 2. Obliczamy skuteczno\u015b\u0107 w grupach (Conditional Means)\n",
     "# Grupa Lekka (Z=0)\n",
     "e_y_t1_z0 = df[(df['Lek (T)']==1) & (df['Stan (Z)']==0)]['Wyzdrowienie (Y)'].mean()\n",
     "e_y_t0_z0 = df[(df['Lek (T)']==0) & (df['Stan (Z)']==0)]['Wyzdrowienie (Y)'].mean()\n",
     "\n",
-    "# Grupa Ciężka (Z=1)\n",
+    "# Grupa Ci\u0119\u017cka (Z=1)\n",
     "e_y_t1_z1 = df[(df['Lek (T)']==1) & (df['Stan (Z)']==1)]['Wyzdrowienie (Y)'].mean()\n",
     "e_y_t0_z1 = df[(df['Lek (T)']==0) & (df['Stan (Z)']==1)]['Wyzdrowienie (Y)'].mean()\n",
     "\n",
     "print(f\"Efekt w grupie lekkiej:  {e_y_t1_z0 - e_y_t0_z0:.2%}\")\n",
-    "print(f\"Efekt w grupie ciężkiej: {e_y_t1_z1 - e_y_t0_z1:.2%}\")\n",
-    "print(\"(Tu już widać prawdę - lek pomaga w obu grupach!)\")\n",
+    "print(f\"Efekt w grupie ci\u0119\u017ckiej: {e_y_t1_z1 - e_y_t0_z1:.2%}\")\n",
+    "print(\"(Tu ju\u017c wida\u0107 prawd\u0119 - lek pomaga w obu grupach!)\")\n",
     "\n",
-    "# 3. Adjustment Formula (Średnia ważona)\n",
+    "# 3. Adjustment Formula (\u015arednia wa\u017cona)\n",
     "# P(Y|do(T=1))\n",
     "do_t1 = (e_y_t1_z0 * p_z0) + (e_y_t1_z1 * p_z1)\n",
     "# P(Y|do(T=0))\n",
@@ -265,7 +272,7 @@
     "\n",
     "print(\"-\" * 30)\n",
     "print(f\"Prawdziwy (Przyczynowy) Efekt Leku: {causal_effect:.2%}\")\n",
-    "print(\"🎯 To jest bliskie +10%, które zaszyliśmy w danych!\")"
+    "print(\"\ud83c\udfaf To jest bliskie +10%, kt\u00f3re zaszyli\u015bmy w danych!\")"
    ]
   },
   {
@@ -275,13 +282,13 @@
    "source": [
     "## Wizualizacja: Graf Przyczynowy (DAG)\n",
     "\n",
-    "W Causal Inference rysujemy grafy (Directed Acyclic Graphs), żeby wiedzieć, co wpływa na co.\n",
+    "W Causal Inference rysujemy grafy (Directed Acyclic Graphs), \u017ceby wiedzie\u0107, co wp\u0142ywa na co.\n",
     "W naszym przypadku:\n",
-    "*   $Z \\to T$ (Stan wpływa na decyzję o leku).\n",
-    "*   $Z \\to Y$ (Stan wpływa na wyzdrowienie).\n",
-    "*   $T \\to Y$ (Lek wpływa na wyzdrowienie).\n",
+    "*   $Z \\to T$ (Stan wp\u0142ywa na decyzj\u0119 o leku).\n",
+    "*   $Z \\to Y$ (Stan wp\u0142ywa na wyzdrowienie).\n",
+    "*   $T \\to Y$ (Lek wp\u0142ywa na wyzdrowienie).\n",
     "\n",
-    "Zmienna $Z$ jest tzw. **Confounderem** (Mąciwoda). Musimy ją \"zablokować\" (kontrolować), żeby zobaczyć czystą strzałkę $T \\to Y$."
+    "Zmienna $Z$ jest tzw. **Confounderem** (M\u0105ciwoda). Musimy j\u0105 \"zablokowa\u0107\" (kontrolowa\u0107), \u017ceby zobaczy\u0107 czyst\u0105 strza\u0142k\u0119 $T \\to Y$."
    ]
   },
   {
@@ -305,7 +312,7 @@
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Konfiguracja wykresu (Większy i z marginesami)\n",
+    "# Konfiguracja wykresu (Wi\u0119kszy i z marginesami)\n",
     "plt.figure(figsize=(12, 8))\n",
     "ax = plt.gca()\n",
     "\n",
@@ -315,19 +322,19 @@
     "G.add_node('Lek (T)')\n",
     "G.add_node('Wyzdrowienie (Y)')\n",
     "\n",
-    "# Pozycje (Trójkąt)\n",
+    "# Pozycje (Tr\u00f3jk\u0105t)\n",
     "pos = {\n",
-    "    'Stan (Z)': (0, 1),      # Góra\n",
-    "    'Lek (T)': (-1, 0),      # Lewy dół\n",
-    "    'Wyzdrowienie (Y)': (1, 0) # Prawy dół\n",
+    "    'Stan (Z)': (0, 1),      # G\u00f3ra\n",
+    "    'Lek (T)': (-1, 0),      # Lewy d\u00f3\u0142\n",
+    "    'Wyzdrowienie (Y)': (1, 0) # Prawy d\u00f3\u0142\n",
     "}\n",
     "\n",
-    "# 2. Rysowanie Węzłów (Nodes)\n",
+    "# 2. Rysowanie W\u0119z\u0142\u00f3w (Nodes)\n",
     "nx.draw_networkx_nodes(G, pos, node_size=6000, node_color='#f0f0f0', edgecolors='black', linewidths=2)\n",
     "nx.draw_networkx_labels(G, pos, font_size=11, font_weight='bold')\n",
     "\n",
-    "# 3. Rysowanie Krawędzi \"Złych\" (Confounding Paths)\n",
-    "# Używamy connectionstyle=\"arc3,rad=0.2\", żeby łuk był wyraźniejszy i nie wchodził na napisy\n",
+    "# 3. Rysowanie Kraw\u0119dzi \"Z\u0142ych\" (Confounding Paths)\n",
+    "# U\u017cywamy connectionstyle=\"arc3,rad=0.2\", \u017ceby \u0142uk by\u0142 wyra\u017aniejszy i nie wchodzi\u0142 na napisy\n",
     "nx.draw_networkx_edges(G, pos, \n",
     "                       edgelist=[('Stan (Z)', 'Lek (T)'), ('Stan (Z)', 'Wyzdrowienie (Y)')],\n",
     "                       edge_color='red', \n",
@@ -336,7 +343,7 @@
     "                       arrowsize=25, \n",
     "                       connectionstyle=\"arc3,rad=0.2\")\n",
     "\n",
-    "# 4. Rysowanie Krawędzi \"Dobrej\" (Causal Path)\n",
+    "# 4. Rysowanie Kraw\u0119dzi \"Dobrej\" (Causal Path)\n",
     "nx.draw_networkx_edges(G, pos, \n",
     "                       edgelist=[('Lek (T)', 'Wyzdrowienie (Y)')],\n",
     "                       edge_color='green', \n",
@@ -344,8 +351,8 @@
     "                       arrowsize=40,\n",
     "                       connectionstyle=\"arc3,rad=0\")\n",
     "\n",
-    "# --- POPRAWKA: Ręczne ustawienie granic wykresu (Padding) ---\n",
-    "# Rozszerzamy granice, żeby zmieścić duże kółka i napisy\n",
+    "# --- POPRAWKA: R\u0119czne ustawienie granic wykresu (Padding) ---\n",
+    "# Rozszerzamy granice, \u017ceby zmie\u015bci\u0107 du\u017ce k\u00f3\u0142ka i napisy\n",
     "ax.set_xlim(-1.5, 1.5)\n",
     "ax.set_ylim(-0.5, 1.4)\n",
     "\n",
@@ -353,8 +360,8 @@
     "plt.title(\"DAG: Struktura Przyczynowa (Confounder Z)\", fontsize=16, pad=20)\n",
     "plt.axis('off') # Ukrywamy osie\n",
     "\n",
-    "# Dodatkowe opisy (Przesunięte w bezpieczne miejsca)\n",
-    "plt.text(0, 1.25, \"Confounder (Mąciwoda)\\nFałszuje wynik\", ha='center', color='red', fontsize=12, fontweight='bold')\n",
+    "# Dodatkowe opisy (Przesuni\u0119te w bezpieczne miejsca)\n",
+    "plt.text(0, 1.25, \"Confounder (M\u0105ciwoda)\\nFa\u0142szuje wynik\", ha='center', color='red', fontsize=12, fontweight='bold')\n",
     "plt.text(0, -0.3, \"Prawdziwy Efekt Przyczynowy\\n(Tylko to nas interesuje)\", ha='center', color='green', fontsize=12, fontweight='bold')\n",
     "\n",
     "plt.tight_layout()\n",
@@ -366,16 +373,16 @@
    "id": "5cba42c4",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Drabina Pearla\n",
+    "## \ud83e\udde0 Podsumowanie: Drabina Pearla\n",
     "\n",
-    "Judea Pearl (ojciec tej dziedziny) wyróżnił 3 szczeble drabiny:\n",
-    "1.  **Asocjacja (Widzenie):** Co mówią dane? (Naiwna statystyka: Lek szkodzi).\n",
-    "2.  **Interwencja (Robienie):** Co się stanie, jak podam lek? (Causal Inference: Lek pomaga).\n",
-    "3.  **Kontrfakty (Wyobrażanie):** Co by było, gdyby ten pacjent nie wziął leku? (Notebook 92).\n",
+    "Judea Pearl (ojciec tej dziedziny) wyr\u00f3\u017cni\u0142 3 szczeble drabiny:\n",
+    "1.  **Asocjacja (Widzenie):** Co m\u00f3wi\u0105 dane? (Naiwna statystyka: Lek szkodzi).\n",
+    "2.  **Interwencja (Robienie):** Co si\u0119 stanie, jak podam lek? (Causal Inference: Lek pomaga).\n",
+    "3.  **Kontrfakty (Wyobra\u017canie):** Co by by\u0142o, gdyby ten pacjent nie wzi\u0105\u0142 leku? (Notebook 92).\n",
     "\n",
-    "**Wniosek inżynierski:**\n",
+    "**Wniosek in\u017cynierski:**\n",
     "Zanim wrzucisz dane do XGBoosta, narysuj na kartce graf przyczynowy.\n",
-    "Jeśli pominiesz Confoundera (np. Stan Pacjenta, Sezonowość w sprzedaży), Twój model nauczy się bzdur i na produkcji doprowadzi do katastrofy."
+    "Je\u015bli pominiesz Confoundera (np. Stan Pacjenta, Sezonowo\u015b\u0107 w sprzeda\u017cy), Tw\u00f3j model nauczy si\u0119 bzdur i na produkcji doprowadzi do katastrofy."
    ]
   }
  ],
