--- a/95_Model_Pruning_Optimization.ipynb
+++ b/95_Model_Pruning_Optimization.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/95_Model_Pruning_Optimization.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a72e4bb",
    "metadata": {},
    "source": [
-    "# ✂️ Model Pruning: Odchudzanie Sieci\n",
+    "# \u2702\ufe0f Model Pruning: Odchudzanie Sieci\n",
     "\n",
-    "Większość wag w sieci neuronowej jest bliska zeru i nie wnosi nic do decyzji.\n",
-    "Możemy je usunąć (ustawić na stałe 0).\n",
+    "Wi\u0119kszo\u015b\u0107 wag w sieci neuronowej jest bliska zeru i nie wnosi nic do decyzji.\n",
+    "Mo\u017cemy je usun\u0105\u0107 (ustawi\u0107 na sta\u0142e 0).\n",
     "\n",
     "**Rodzaje Pruningu:**\n",
-    "1.  **Unstructured (Niestrukturalny):** Zerujemy pojedyncze wagi, gdziekolwiek są małe.\n",
-    "    *   *Zaleta:* Można usunąć bardzo dużo wag (np. 95%).\n",
-    "    *   *Wada:* Karty graficzne tego nie lubią (macierze rzadkie są trudne do obliczania).\n",
-    "2.  **Structured (Strukturalny):** Zerujemy całe neurony lub kanały.\n",
+    "1.  **Unstructured (Niestrukturalny):** Zerujemy pojedyncze wagi, gdziekolwiek s\u0105 ma\u0142e.\n",
+    "    *   *Zaleta:* Mo\u017cna usun\u0105\u0107 bardzo du\u017co wag (np. 95%).\n",
+    "    *   *Wada:* Karty graficzne tego nie lubi\u0105 (macierze rzadkie s\u0105 trudne do obliczania).\n",
+    "2.  **Structured (Strukturalny):** Zerujemy ca\u0142e neurony lub kana\u0142y.\n",
     "    *   *Zaleta:* Model fizycznie przyspiesza (mniejsze macierze).\n",
-    "    *   *Wada:* Trudniej utrzymać jakość (Accuracy).\n",
+    "    *   *Wada:* Trudniej utrzyma\u0107 jako\u015b\u0107 (Accuracy).\n",
     "\n",
-    "W tym notatniku zastosujemy **Global Unstructured Pruning**. Usuniemy 50% wag z całej sieci i zobaczymy, czy nadal rozpoznaje cyfry."
+    "W tym notatniku zastosujemy **Global Unstructured Pruning**. Usuniemy 50% wag z ca\u0142ej sieci i zobaczymy, czy nadal rozpoznaje cyfry."
    ]
   },
   {
@@ -31,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model gotowy. Na razie jest pełny (gęsty).\n"
+      "Model gotowy. Na razie jest pe\u0142ny (g\u0119sty).\n"
      ]
     }
    ],
@@ -63,7 +70,7 @@
     "        return self.fc3(x)\n",
     "\n",
     "model = Net().to(DEVICE)\n",
-    "print(\"Model gotowy. Na razie jest pełny (gęsty).\")"
+    "print(\"Model gotowy. Na razie jest pe\u0142ny (g\u0119sty).\")"
    ]
   },
   {
@@ -73,7 +80,7 @@
    "source": [
     "## Trening Bazowy\n",
     "\n",
-    "Najpierw musimy nauczyć sieć czegokolwiek, żeby miała co tracić.\n",
+    "Najpierw musimy nauczy\u0107 sie\u0107 czegokolwiek, \u017ceby mia\u0142a co traci\u0107.\n",
     "Szybki trening na MNIST."
    ]
   },
@@ -87,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🚀 Trenowanie modelu bazowego...\n",
-      "Accuracy przed cięciem: 97.36%\n"
+      "\ud83d\ude80 Trenowanie modelu bazowego...\n",
+      "Accuracy przed ci\u0119ciem: 97.36%\n"
      ]
     }
    ],
@@ -126,10 +133,10 @@
     "            correct += pred.eq(target).sum().item()\n",
     "    return 100. * correct / len(test_loader.dataset)\n",
     "\n",
-    "print(\"🚀 Trenowanie modelu bazowego...\")\n",
+    "print(\"\ud83d\ude80 Trenowanie modelu bazowego...\")\n",
     "train(epochs=2)\n",
     "acc_original = evaluate()\n",
-    "print(f\"Accuracy przed cięciem: {acc_original:.2f}%\")"
+    "print(f\"Accuracy przed ci\u0119ciem: {acc_original:.2f}%\")"
    ]
   },
   {
@@ -137,14 +144,14 @@
    "id": "54298156",
    "metadata": {},
    "source": [
-    "## Pruning (Cięcie)\n",
+    "## Pruning (Ci\u0119cie)\n",
     "\n",
-    "Użyjemy `torch.nn.utils.prune`.\n",
-    "Zastosujemy strategię **L1 Unstructured**:\n",
-    "*\"Znajdź 50% wag o najmniejszej wartości bezwzględnej (najbliższych zera) i je zabij\".*\n",
+    "U\u017cyjemy `torch.nn.utils.prune`.\n",
+    "Zastosujemy strategi\u0119 **L1 Unstructured**:\n",
+    "*\"Znajd\u017a 50% wag o najmniejszej warto\u015bci bezwzgl\u0119dnej (najbli\u017cszych zera) i je zabij\".*\n",
     "\n",
-    "PyTorch nie usuwa wag fizycznie (bo to zepsułoby strukturę tensora).\n",
-    "Tworzy **Maskę (0/1)**. Waga staje się `weight_orig * mask`."
+    "PyTorch nie usuwa wag fizycznie (bo to zepsu\u0142oby struktur\u0119 tensora).\n",
+    "Tworzy **Mask\u0119 (0/1)**. Waga staje si\u0119 `weight_orig * mask`."
    ]
   },
   {
@@ -157,29 +164,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✂️ Przycięto 50% wag.\n",
-      "Globalna rzadkość modelu: 50.00%\n"
+      "\u2702\ufe0f Przyci\u0119to 50% wag.\n",
+      "Globalna rzadko\u015b\u0107 modelu: 50.00%\n"
      ]
     }
    ],
    "source": [
-    "# Wybieramy warstwy do przycięcia (wszystkie liniowe)\n",
+    "# Wybieramy warstwy do przyci\u0119cia (wszystkie liniowe)\n",
     "parameters_to_prune = (\n",
     "    (model.fc1, 'weight'),\n",
     "    (model.fc2, 'weight'),\n",
     "    (model.fc3, 'weight'),\n",
     ")\n",
     "\n",
-    "# Tniemy 50% najsłabszych połączeń GLOBALNIE (czyli może usunąć więcej z fc1 niż z fc3)\n",
+    "# Tniemy 50% najs\u0142abszych po\u0142\u0105cze\u0144 GLOBALNIE (czyli mo\u017ce usun\u0105\u0107 wi\u0119cej z fc1 ni\u017c z fc3)\n",
     "prune.global_unstructured(\n",
     "    parameters_to_prune,\n",
     "    pruning_method=prune.L1Unstructured,\n",
-    "    amount=0.5, # 50% do usunięcia\n",
+    "    amount=0.5, # 50% do usuni\u0119cia\n",
     ")\n",
     "\n",
-    "print(\"✂️ Przycięto 50% wag.\")\n",
+    "print(\"\u2702\ufe0f Przyci\u0119to 50% wag.\")\n",
     "\n",
-    "# Sprawdźmy rzadkość (Sparsity)\n",
+    "# Sprawd\u017amy rzadko\u015b\u0107 (Sparsity)\n",
     "def measure_sparsity(model):\n",
     "    sum_zeros = 0\n",
     "    sum_elements = 0\n",
@@ -189,8 +196,8 @@
     "            sum_elements += module.weight.nelement()\n",
     "    return 100. * sum_zeros / sum_elements\n",
     "\n",
-    "print(f\"Globalna rzadkość modelu: {measure_sparsity(model):.2f}%\")\n",
-    "# Powinno być 50% (lub blisko, bo globalnie)"
+    "print(f\"Globalna rzadko\u015b\u0107 modelu: {measure_sparsity(model):.2f}%\")\n",
+    "# Powinno by\u0107 50% (lub blisko, bo globalnie)"
    ]
   },
   {
@@ -198,11 +205,11 @@
    "id": "a2ddda3a",
    "metadata": {},
    "source": [
-    "## Wizualizacja: Co się stało z wagami?\n",
+    "## Wizualizacja: Co si\u0119 sta\u0142o z wagami?\n",
     "\n",
     "Narysujemy histogram wag.\n",
-    "Powinieneś zobaczyć normalny rozkład (Gauusa), ale z **ogromną dziurą w środku** (na zerze).\n",
-    "To są te usunięte wagi."
+    "Powiniene\u015b zobaczy\u0107 normalny rozk\u0142ad (Gauusa), ale z **ogromn\u0105 dziur\u0105 w \u015brodku** (na zerze).\n",
+    "To s\u0105 te usuni\u0119te wagi."
    ]
   },
   {
@@ -225,7 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Widzisz? Wagi bliskie 0 zniknęły (są dokładnie zerem).\n"
+      "Widzisz? Wagi bliskie 0 znikn\u0119\u0142y (s\u0105 dok\u0142adnie zerem).\n"
      ]
     }
    ],
@@ -235,13 +242,13 @@
     "\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.hist(weights, bins=100, color='purple', alpha=0.7)\n",
-    "plt.title(\"Rozkład wag po przycięciu (Pruning)\")\n",
-    "plt.xlabel(\"Wartość wagi\")\n",
+    "plt.title(\"Rozk\u0142ad wag po przyci\u0119ciu (Pruning)\")\n",
+    "plt.xlabel(\"Warto\u015b\u0107 wagi\")\n",
     "plt.ylabel(\"Liczba wag\")\n",
-    "plt.yscale('log') # Skala logarytmiczna, żeby lepiej widzieć\n",
+    "plt.yscale('log') # Skala logarytmiczna, \u017ceby lepiej widzie\u0107\n",
     "plt.show()\n",
     "\n",
-    "print(\"Widzisz? Wagi bliskie 0 zniknęły (są dokładnie zerem).\")"
+    "print(\"Widzisz? Wagi bliskie 0 znikn\u0119\u0142y (s\u0105 dok\u0142adnie zerem).\")"
    ]
   },
   {
@@ -255,27 +262,27 @@
      "output_type": "stream",
      "text": [
       "------------------------------\n",
-      "Accuracy Oryginał: 97.36%\n",
-      "Accuracy Po cięciu (50%): 97.37%\n",
-      "✅ SUKCES! Usunęliśmy połowę mózgu, a on dalej działa!\n",
+      "Accuracy Orygina\u0142: 97.36%\n",
+      "Accuracy Po ci\u0119ciu (50%): 97.37%\n",
+      "\u2705 SUKCES! Usun\u0119li\u015bmy po\u0142ow\u0119 m\u00f3zgu, a on dalej dzia\u0142a!\n",
       "Maski scalone z wagami. Model jest gotowy do zapisu.\n"
      ]
     }
    ],
    "source": [
-    "# Sprawdźmy, czy model zgłupiał\n",
+    "# Sprawd\u017amy, czy model zg\u0142upia\u0142\n",
     "acc_pruned = evaluate()\n",
     "\n",
     "print(\"-\" * 30)\n",
-    "print(f\"Accuracy Oryginał: {acc_original:.2f}%\")\n",
-    "print(f\"Accuracy Po cięciu (50%): {acc_pruned:.2f}%\")\n",
+    "print(f\"Accuracy Orygina\u0142: {acc_original:.2f}%\")\n",
+    "print(f\"Accuracy Po ci\u0119ciu (50%): {acc_pruned:.2f}%\")\n",
     "\n",
     "if acc_original - acc_pruned < 2.0:\n",
-    "    print(\"✅ SUKCES! Usunęliśmy połowę mózgu, a on dalej działa!\")\n",
+    "    print(\"\u2705 SUKCES! Usun\u0119li\u015bmy po\u0142ow\u0119 m\u00f3zgu, a on dalej dzia\u0142a!\")\n",
     "else:\n",
-    "    print(\"⚠️ Spadek jakości. Trzeba by zrobić Fine-Tuning (dotrenować resztę wag).\")\n",
+    "    print(\"\u26a0\ufe0f Spadek jako\u015bci. Trzeba by zrobi\u0107 Fine-Tuning (dotrenowa\u0107 reszt\u0119 wag).\")\n",
     "    \n",
-    "# Fizyczne usunięcie masek (uczynienie zmian trwałymi)\n",
+    "# Fizyczne usuni\u0119cie masek (uczynienie zmian trwa\u0142ymi)\n",
     "for module, param in parameters_to_prune:\n",
     "    prune.remove(module, param)\n",
     "    \n",
@@ -287,18 +294,18 @@
    "id": "6d57759d",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Loteria Biletowa\n",
+    "## \ud83e\udde0 Podsumowanie: Loteria Biletowa\n",
     "\n",
-    "Dlaczego to działa?\n",
-    "Istnieje **Hipoteza Biletów na Loterię (Lottery Ticket Hypothesis)**.\n",
-    "Mówi ona, że w dużej, losowej sieci neuronowej istnieje **mała pod-sieć**, która po wytrenowaniu działa tak samo dobrze jak duża. Reszta to \"przegrane losy\", które są zbędne.\n",
+    "Dlaczego to dzia\u0142a?\n",
+    "Istnieje **Hipoteza Bilet\u00f3w na Loteri\u0119 (Lottery Ticket Hypothesis)**.\n",
+    "M\u00f3wi ona, \u017ce w du\u017cej, losowej sieci neuronowej istnieje **ma\u0142a pod-sie\u0107**, kt\u00f3ra po wytrenowaniu dzia\u0142a tak samo dobrze jak du\u017ca. Reszta to \"przegrane losy\", kt\u00f3re s\u0105 zb\u0119dne.\n",
     "\n",
-    "Pruning pozwala nam znaleźć ten \"zwycięski los\".\n",
+    "Pruning pozwala nam znale\u017a\u0107 ten \"zwyci\u0119ski los\".\n",
     "\n",
     "**Zastosowanie:**\n",
-    "1.  Połącz Pruning (usuwanie zer) z kompresją pliku (zip/sparse tensors).\n",
-    "2.  Twój model 100MB zmieni się w 10MB.\n",
-    "3.  Idealne do wysyłania aktualizacji aplikacji mobilnych (mniejszy download)."
+    "1.  Po\u0142\u0105cz Pruning (usuwanie zer) z kompresj\u0105 pliku (zip/sparse tensors).\n",
+    "2.  Tw\u00f3j model 100MB zmieni si\u0119 w 10MB.\n",
+    "3.  Idealne do wysy\u0142ania aktualizacji aplikacji mobilnych (mniejszy download)."
    ]
   }
  ],
