--- a/96_ONNX_Runtime_Deployment.ipynb
+++ b/96_ONNX_Runtime_Deployment.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/96_ONNX_Runtime_Deployment.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9912f3a7",
    "metadata": {},
    "source": [
-    "# 📦 ONNX: Uniwersalny format modeli (Production Ready)\n",
+    "# \ud83d\udce6 ONNX: Uniwersalny format modeli (Production Ready)\n",
     "\n",
-    "PyTorch jest świetny do nauki i treningu (elastyczny, dynamiczny).\n",
-    "Ale na produkcji (w aplikacji klienta) nie chcemy instalować 2GB biblioteki PyTorch.\n",
+    "PyTorch jest \u015bwietny do nauki i treningu (elastyczny, dynamiczny).\n",
+    "Ale na produkcji (w aplikacji klienta) nie chcemy instalowa\u0107 2GB biblioteki PyTorch.\n",
     "\n",
     "**ONNX (Open Neural Network Exchange)** to standard zapisu grafu obliczeniowego.\n",
-    "Działa na zasadzie **Tracingu (Śledzenia):**\n",
-    "1.  Wpuszczamy do modelu przykładowe dane (Dummy Input).\n",
-    "2.  ONNX \"nagrywa\" wszystkie operacje matematyczne, jakie się wykonały.\n",
+    "Dzia\u0142a na zasadzie **Tracingu (\u015aledzenia):**\n",
+    "1.  Wpuszczamy do modelu przyk\u0142adowe dane (Dummy Input).\n",
+    "2.  ONNX \"nagrywa\" wszystkie operacje matematyczne, jakie si\u0119 wykona\u0142y.\n",
     "3.  Zapisuje to jako statyczny graf w pliku `.onnx`.\n",
     "\n",
     "**Zalety:**\n",
-    "*   **Przenośność:** Uruchomisz to w C++, C#, Java, JavaScript.\n",
-    "*   **Szybkość:** ONNX Runtime jest mocno zoptymalizowany pod konkretny sprzęt (AVX na CPU, TensorRT na NVIDIA)."
+    "*   **Przeno\u015bno\u015b\u0107:** Uruchomisz to w C++, C#, Java, JavaScript.\n",
+    "*   **Szybko\u015b\u0107:** ONNX Runtime jest mocno zoptymalizowany pod konkretny sprz\u0119t (AVX na CPU, TensorRT na NVIDIA)."
    ]
   },
   {
@@ -52,7 +59,7 @@
     "        x = self.fc2(x)\n",
     "        return self.softmax(x)\n",
     "\n",
-    "# Inicjalizacja i przejście w tryb eval (Ważne! Wyłącza dropout itp.)\n",
+    "# Inicjalizacja i przej\u015bcie w tryb eval (Wa\u017cne! Wy\u0142\u0105cza dropout itp.)\n",
     "model = SimpleModel()\n",
     "model.eval()\n",
     "\n",
@@ -66,11 +73,11 @@
    "source": [
     "## Eksport do ONNX (Tracing)\n",
     "\n",
-    "To jest kluczowy moment. Musimy podać `dummy_input` (atrapę danych), żeby ONNX wiedział, jaki kształt mają wejścia.\n",
+    "To jest kluczowy moment. Musimy poda\u0107 `dummy_input` (atrap\u0119 danych), \u017ceby ONNX wiedzia\u0142, jaki kszta\u0142t maj\u0105 wej\u015bcia.\n",
     "\n",
-    "**Ważne:** Użyjemy `dynamic_axes`.\n",
-    "Domyślnie ONNX zapamiętuje sztywny rozmiar (np. Batch=1). Jeśli na produkcji przyjdzie Batch=32, model wywali błąd.\n",
-    "Oznaczając oś 0 jako dynamiczną, mówimy: *\"Tu może być dowolna liczba wierszy\"*."
+    "**Wa\u017cne:** U\u017cyjemy `dynamic_axes`.\n",
+    "Domy\u015blnie ONNX zapami\u0119tuje sztywny rozmiar (np. Batch=1). Je\u015bli na produkcji przyjdzie Batch=32, model wywali b\u0142\u0105d.\n",
+    "Oznaczaj\u0105c o\u015b 0 jako dynamiczn\u0105, m\u00f3wimy: *\"Tu mo\u017ce by\u0107 dowolna liczba wierszy\"*."
    ]
   },
   {
@@ -85,17 +92,17 @@
      "text": [
       "Eksportowanie modelu do ONNX (Opset 18)...\n",
       "[torch.onnx] Obtain model graph for `SimpleModel([...]` with `torch.export.export(..., strict=False)`...\n",
-      "[torch.onnx] Obtain model graph for `SimpleModel([...]` with `torch.export.export(..., strict=False)`... ✅\n",
+      "[torch.onnx] Obtain model graph for `SimpleModel([...]` with `torch.export.export(..., strict=False)`... \u2705\n",
       "[torch.onnx] Run decomposition...\n",
-      "[torch.onnx] Run decomposition... ✅\n",
+      "[torch.onnx] Run decomposition... \u2705\n",
       "[torch.onnx] Translate the graph into ONNX...\n",
-      "[torch.onnx] Translate the graph into ONNX... ✅\n",
-      "✅ Sukces! Model wyeksportowany do: simple_model.onnx\n"
+      "[torch.onnx] Translate the graph into ONNX... \u2705\n",
+      "\u2705 Sukces! Model wyeksportowany do: simple_model.onnx\n"
      ]
     }
    ],
    "source": [
-    "# Przykładowe dane\n",
+    "# Przyk\u0142adowe dane\n",
     "dummy_input = torch.randn(1, 10)\n",
     "onnx_path = \"simple_model.onnx\"\n",
     "\n",
@@ -106,13 +113,13 @@
     "    dummy_input,\n",
     "    onnx_path,\n",
     "    export_params=True,\n",
-    "    opset_version=18,  # ⬅️ Zmienione z 17 na 18\n",
+    "    opset_version=18,  # \u2b05\ufe0f Zmienione z 17 na 18\n",
     "    dynamo=True,\n",
     "    input_names=['input'],\n",
     "    output_names=['output']\n",
     ")\n",
     "\n",
-    "print(f\"✅ Sukces! Model wyeksportowany do: {onnx_path}\")"
+    "print(f\"\u2705 Sukces! Model wyeksportowany do: {onnx_path}\")"
    ]
   },
   {
@@ -123,10 +130,10 @@
     "## Inference w ONNX Runtime\n",
     "\n",
     "Teraz zapominamy o PyTorchu.\n",
-    "Wyobraź sobie, że jesteś na serwerze produkcyjnym, gdzie jest tylko lekki `onnxruntime`.\n",
+    "Wyobra\u017a sobie, \u017ce jeste\u015b na serwerze produkcyjnym, gdzie jest tylko lekki `onnxruntime`.\n",
     "\n",
     "Uruchomimy model z pliku.\n",
-    "Zauważ, że wejście musi być w formacie **NumPy** (nie Tensor)."
+    "Zauwa\u017c, \u017ce wej\u015bcie musi by\u0107 w formacie **NumPy** (nie Tensor)."
    ]
   },
   {
@@ -145,11 +152,11 @@
     }
    ],
    "source": [
-    "# Tworzymy sesję (silnik)\n",
+    "# Tworzymy sesj\u0119 (silnik)\n",
     "ort_session = ort.InferenceSession(onnx_path)\n",
     "\n",
     "# --- POPRAWKA ---\n",
-    "# Zmieniamy rozmiar batcha z 5 na 1, żeby pasował do tego, co zapamiętał model\n",
+    "# Zmieniamy rozmiar batcha z 5 na 1, \u017ceby pasowa\u0142 do tego, co zapami\u0119ta\u0142 model\n",
     "x_numpy = np.random.randn(1, 10).astype(np.float32)\n",
     "\n",
     "# Uruchomienie (Run)\n",
@@ -157,7 +164,7 @@
     "ort_outs = ort_session.run(None, ort_inputs)\n",
     "\n",
     "print(\"--- WYNIK Z ONNX RUNTIME ---\")\n",
-    "print(ort_outs[0]) # To są prawdopodobieństwa (Softmax)"
+    "print(ort_outs[0]) # To s\u0105 prawdopodobie\u0144stwa (Softmax)"
    ]
   },
   {
@@ -167,8 +174,8 @@
    "source": [
     "## Weryfikacja (Czy to to samo?)\n",
     "\n",
-    "Sprawdźmy, czy ONNX zwraca dokładnie te same liczby co PyTorch.\n",
-    "Różnice mogą się pojawić na poziomie $10^{-7}$ (kwestia precyzji float), ale powinny być minimalne."
+    "Sprawd\u017amy, czy ONNX zwraca dok\u0142adnie te same liczby co PyTorch.\n",
+    "R\u00f3\u017cnice mog\u0105 si\u0119 pojawi\u0107 na poziomie $10^{-7}$ (kwestia precyzji float), ale powinny by\u0107 minimalne."
    ]
   },
   {
@@ -181,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Czy wyniki są identyczne? True\n"
+      "Czy wyniki s\u0105 identyczne? True\n"
      ]
     }
    ],
@@ -193,14 +200,14 @@
     "# Wynik ONNX\n",
     "onnx_out = ort_outs[0]\n",
     "\n",
-    "# Porównanie\n",
-    "# np.allclose sprawdza czy liczby są blisko siebie z tolerancją\n",
+    "# Por\u00f3wnanie\n",
+    "# np.allclose sprawdza czy liczby s\u0105 blisko siebie z tolerancj\u0105\n",
     "is_match = np.allclose(torch_out.numpy(), onnx_out, rtol=1e-03, atol=1e-05)\n",
     "\n",
-    "print(f\"Czy wyniki są identyczne? {is_match}\")\n",
+    "print(f\"Czy wyniki s\u0105 identyczne? {is_match}\")\n",
     "\n",
     "if not is_match:\n",
-    "    print(\"Różnica:\", np.abs(torch_out.numpy() - onnx_out).max())"
+    "    print(\"R\u00f3\u017cnica:\", np.abs(torch_out.numpy() - onnx_out).max())"
    ]
   },
   {
@@ -210,7 +217,7 @@
    "source": [
     "## Benchmark: PyTorch vs ONNX (CPU)\n",
     "\n",
-    "ONNX Runtime jest zazwyczaj szybszy na procesorach CPU, bo używa instrukcji wektorowych (AVX) lepiej niż PyTorch (który jest optymalizowany głównie pod GPU)."
+    "ONNX Runtime jest zazwyczaj szybszy na procesorach CPU, bo u\u017cywa instrukcji wektorowych (AVX) lepiej ni\u017c PyTorch (kt\u00f3ry jest optymalizowany g\u0142\u00f3wnie pod GPU)."
    ]
   },
   {
@@ -223,19 +230,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rozpoczynam wyścig (1000 powtórzeń pojedynczego zapytania)...\n",
+      "Rozpoczynam wy\u015bcig (1000 powt\u00f3rze\u0144 pojedynczego zapytania)...\n",
       "PyTorch Time: 0.0260 s\n",
       "ONNX Time:    0.0080 s\n",
-      "🚀 Przyspieszenie: 3.26x\n"
+      "\ud83d\ude80 Przyspieszenie: 3.26x\n"
      ]
     }
    ],
    "source": [
-    "# Generujemy 1 próbkę (zamiast 10000), żeby pasowało do modelu\n",
+    "# Generujemy 1 pr\u00f3bk\u0119 (zamiast 10000), \u017ceby pasowa\u0142o do modelu\n",
     "input_data = np.random.randn(1, 10).astype(np.float32)\n",
     "torch_input = torch.from_numpy(input_data)\n",
     "\n",
-    "print(\"Rozpoczynam wyścig (1000 powtórzeń pojedynczego zapytania)...\")\n",
+    "print(\"Rozpoczynam wy\u015bcig (1000 powt\u00f3rze\u0144 pojedynczego zapytania)...\")\n",
     "\n",
     "# 1. Czas PyTorch\n",
     "start = time.time()\n",
@@ -256,11 +263,11 @@
     "print(f\"PyTorch Time: {torch_time:.4f} s\")\n",
     "print(f\"ONNX Time:    {onnx_time:.4f} s\")\n",
     "\n",
-    "# Zabezpieczenie przed dzieleniem przez zero (gdyby było super szybko)\n",
+    "# Zabezpieczenie przed dzieleniem przez zero (gdyby by\u0142o super szybko)\n",
     "if onnx_time > 0:\n",
-    "    print(f\"🚀 Przyspieszenie: {torch_time / onnx_time:.2f}x\")\n",
+    "    print(f\"\ud83d\ude80 Przyspieszenie: {torch_time / onnx_time:.2f}x\")\n",
     "else:\n",
-    "    print(\"ONNX był tak szybki, że zegar pokazał 0!\")"
+    "    print(\"ONNX by\u0142 tak szybki, \u017ce zegar pokaza\u0142 0!\")"
    ]
   },
   {
@@ -268,14 +275,14 @@
    "id": "91e1e53b",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Gdzie tego użyć?\n",
+    "## \ud83e\udde0 Podsumowanie: Gdzie tego u\u017cy\u0107?\n",
     "\n",
-    "1.  **Deployment w chmurze:** Kontenery Docker z ONNX Runtime są lżejsze (nie mają całego PyTorcha).\n",
-    "2.  **Edge AI:** Modele na telefony (Android/iOS) konwertuje się do ONNX, a potem np. do TFLite lub CoreML (często przez ONNX jako krok pośredni).\n",
-    "3.  **Przeglądarka:** Możesz użyć `ONNX Runtime Web` i uruchomić model w JavaScript bezpośrednio w Chrome użytkownika (bez wysyłania danych na serwer!).\n",
+    "1.  **Deployment w chmurze:** Kontenery Docker z ONNX Runtime s\u0105 l\u017cejsze (nie maj\u0105 ca\u0142ego PyTorcha).\n",
+    "2.  **Edge AI:** Modele na telefony (Android/iOS) konwertuje si\u0119 do ONNX, a potem np. do TFLite lub CoreML (cz\u0119sto przez ONNX jako krok po\u015bredni).\n",
+    "3.  **Przegl\u0105darka:** Mo\u017cesz u\u017cy\u0107 `ONNX Runtime Web` i uruchomi\u0107 model w JavaScript bezpo\u015brednio w Chrome u\u017cytkownika (bez wysy\u0142ania danych na serwer!).\n",
     "\n",
     "**Wada:**\n",
-    "ONNX to graf **statyczny**. Jeśli Twój model w PyTorch ma pętle `for` o zmiennej długości albo skomplikowane instrukcje `if-else` zależne od danych, eksport może być trudny (wymaga `torch.jit.script`)."
+    "ONNX to graf **statyczny**. Je\u015bli Tw\u00f3j model w PyTorch ma p\u0119tle `for` o zmiennej d\u0142ugo\u015bci albo skomplikowane instrukcje `if-else` zale\u017cne od danych, eksport mo\u017ce by\u0107 trudny (wymaga `torch.jit.script`)."
    ]
   }
  ],
