--- a/97_Federated_Learning_Simulation.ipynb
+++ b/97_Federated_Learning_Simulation.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/97_Federated_Learning_Simulation.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cfe0f6bf",
    "metadata": {},
    "source": [
-    "# 🤝 Federated Learning: Trening bez patrzenia na dane\n",
+    "# \ud83e\udd1d Federated Learning: Trening bez patrzenia na dane\n",
     "\n",
-    "W klasycznym ML wszystkie dane są na jednym serwerze.\n",
-    "W Federated Learning (FL) dane są rozproszone na tysiącach urządzeń (Klientów).\n",
+    "W klasycznym ML wszystkie dane s\u0105 na jednym serwerze.\n",
+    "W Federated Learning (FL) dane s\u0105 rozproszone na tysi\u0105cach urz\u0105dze\u0144 (Klient\u00f3w).\n",
     "\n",
     "**Algorytm FedAvg (Federated Averaging):**\n",
     "1.  **Global Server:** Inicjalizuje model globalny.\n",
-    "2.  **Broadcast:** Wysyła kopię modelu do wybranych klientów (np. 10 telefonów).\n",
-    "3.  **Local Update:** Każdy klient trenuje model na swoich prywatnych danych (np. przez 1 epokę).\n",
-    "4.  **Aggregation:** Klienci odsyłają nowe wagi. Serwer liczy średnią arytmetyczną wag.\n",
-    "5.  **Update:** Model globalny jest aktualizowany średnią. Powrót do kroku 2.\n",
+    "2.  **Broadcast:** Wysy\u0142a kopi\u0119 modelu do wybranych klient\u00f3w (np. 10 telefon\u00f3w).\n",
+    "3.  **Local Update:** Ka\u017cdy klient trenuje model na swoich prywatnych danych (np. przez 1 epok\u0119).\n",
+    "4.  **Aggregation:** Klienci odsy\u0142aj\u0105 nowe wagi. Serwer liczy \u015bredni\u0105 arytmetyczn\u0105 wag.\n",
+    "5.  **Update:** Model globalny jest aktualizowany \u015bredni\u0105. Powr\u00f3t do kroku 2.\n",
     "\n",
-    "**Zaleta:** Serwer nigdy nie widzi zdjęcia Twojego kota, ale uczy się rozpoznawać koty."
+    "**Zaleta:** Serwer nigdy nie widzi zdj\u0119cia Twojego kota, ale uczy si\u0119 rozpoznawa\u0107 koty."
    ]
   },
   {
@@ -45,9 +52,9 @@
     "\n",
     "# Konfiguracja\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "NUM_CLIENTS = 5      # Symulujemy 5 szpitali/telefonów\n",
+    "NUM_CLIENTS = 5      # Symulujemy 5 szpitali/telefon\u00f3w\n",
     "ROUNDS = 5           # Ile razy serwer pobierze wagi?\n",
-    "LOCAL_EPOCHS = 1     # Ile każdy klient uczy się u siebie?\n",
+    "LOCAL_EPOCHS = 1     # Ile ka\u017cdy klient uczy si\u0119 u siebie?\n",
     "\n",
     "print(f\"Symulacja FL na: {DEVICE}\")"
    ]
@@ -59,8 +66,8 @@
    "source": [
     "## Symulacja Danych Rozproszonych\n",
     "\n",
-    "Podzielimy zbiór MNIST na 5 części. Każda część trafi do innego \"Klienta\".\n",
-    "W prawdziwym życiu te dane byłyby na fizycznie innych urządzeniach."
+    "Podzielimy zbi\u00f3r MNIST na 5 cz\u0119\u015bci. Ka\u017cda cz\u0119\u015b\u0107 trafi do innego \"Klienta\".\n",
+    "W prawdziwym \u017cyciu te dane by\u0142yby na fizycznie innych urz\u0105dzeniach."
    ]
   },
   {
@@ -73,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dane podzielone. Każdy z 5 klientów ma 12000 prywatnych zdjęć.\n"
+      "Dane podzielone. Ka\u017cdy z 5 klient\u00f3w ma 12000 prywatnych zdj\u0119\u0107.\n"
      ]
     }
    ],
@@ -82,16 +89,16 @@
     "full_train_dataset = datasets.MNIST('data', train=True, download=True, transform=transforms.ToTensor())\n",
     "test_dataset = datasets.MNIST('data', train=False, transform=transforms.ToTensor())\n",
     "\n",
-    "# Dzielimy na 5 klientów\n",
+    "# Dzielimy na 5 klient\u00f3w\n",
     "data_per_client = len(full_train_dataset) // NUM_CLIENTS\n",
     "lengths = [data_per_client] * NUM_CLIENTS\n",
     "client_datasets = random_split(full_train_dataset, lengths)\n",
     "\n",
-    "# Tworzymy DataLoadery dla każdego klienta\n",
+    "# Tworzymy DataLoadery dla ka\u017cdego klienta\n",
     "client_loaders = [DataLoader(ds, batch_size=32, shuffle=True) for ds in client_datasets]\n",
     "test_loader = DataLoader(test_dataset, batch_size=1000)\n",
     "\n",
-    "print(f\"Dane podzielone. Każdy z {NUM_CLIENTS} klientów ma {len(client_datasets[0])} prywatnych zdjęć.\")"
+    "print(f\"Dane podzielone. Ka\u017cdy z {NUM_CLIENTS} klient\u00f3w ma {len(client_datasets[0])} prywatnych zdj\u0119\u0107.\")"
    ]
   },
   {
@@ -101,8 +108,8 @@
    "source": [
     "## Model i Logika Lokalnego Treningu\n",
     "\n",
-    "Definiujemy prostą sieć.\n",
-    "Funkcja `train_local` symuluje to, co dzieje się na telefonie użytkownika. Pobiera model, trenuje go chwilę i zwraca **nowy stan wag** (`state_dict`)."
+    "Definiujemy prost\u0105 sie\u0107.\n",
+    "Funkcja `train_local` symuluje to, co dzieje si\u0119 na telefonie u\u017cytkownika. Pobiera model, trenuje go chwil\u0119 i zwraca **nowy stan wag** (`state_dict`)."
    ]
   },
   {
@@ -134,9 +141,9 @@
     "\n",
     "def train_local(global_model, client_loader):\n",
     "    \"\"\"\n",
-    "    To dzieje się na urządzeniu klienta (Edge).\n",
+    "    To dzieje si\u0119 na urz\u0105dzeniu klienta (Edge).\n",
     "    \"\"\"\n",
-    "    # Kopiujemy model globalny (żeby nie psuć oryginału w pamięci Pythona)\n",
+    "    # Kopiujemy model globalny (\u017ceby nie psu\u0107 orygina\u0142u w pami\u0119ci Pythona)\n",
     "    local_model = copy.deepcopy(global_model)\n",
     "    local_model.train()\n",
     "    \n",
@@ -153,7 +160,7 @@
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            \n",
-    "    # Zwracamy WAGI (state_dict), a nie cały obiekt\n",
+    "    # Zwracamy WAGI (state_dict), a nie ca\u0142y obiekt\n",
     "    return local_model.state_dict()\n",
     "\n",
     "# Inicjalizacja modelu globalnego (Serwer)\n",
@@ -169,10 +176,10 @@
     "## Algorytm FedAvg (Agregacja)\n",
     "\n",
     "To jest serce serwera.\n",
-    "1.  Pobieramy słowniki wag od wszystkich klientów.\n",
-    "2.  Dla każdej wagi (np. `fc1.weight`) liczymy średnią:\n",
+    "1.  Pobieramy s\u0142owniki wag od wszystkich klient\u00f3w.\n",
+    "2.  Dla ka\u017cdej wagi (np. `fc1.weight`) liczymy \u015bredni\u0105:\n",
     "    $$ W_{global} = \\frac{1}{N} \\sum_{i=1}^{N} W_{client\\_i} $$\n",
-    "3.  Wgrywamy uśrednione wagi do modelu globalnego."
+    "3.  Wgrywamy u\u015brednione wagi do modelu globalnego."
    ]
   },
   {
@@ -192,21 +199,21 @@
    "source": [
     "def federated_averaging(global_model, client_weights):\n",
     "    \"\"\"\n",
-    "    Serwer uśrednia wagi otrzymane od klientów.\n",
+    "    Serwer u\u015brednia wagi otrzymane od klient\u00f3w.\n",
     "    \"\"\"\n",
     "    # Pobieramy szablon wag z modelu globalnego\n",
     "    global_dict = global_model.state_dict()\n",
     "    \n",
-    "    # Dla każdego klucza (warstwy) w modelu...\n",
+    "    # Dla ka\u017cdego klucza (warstwy) w modelu...\n",
     "    for key in global_dict.keys():\n",
-    "        # Pobieramy tę konkretną wagę od wszystkich klientów i robimy listę\n",
-    "        # client_weights to lista słowników\n",
+    "        # Pobieramy t\u0119 konkretn\u0105 wag\u0119 od wszystkich klient\u00f3w i robimy list\u0119\n",
+    "        # client_weights to lista s\u0142ownik\u00f3w\n",
     "        all_weights_for_key = [client_w[key].float() for client_w in client_weights]\n",
     "        \n",
-    "        # Liczymy średnią (stack -> mean)\n",
+    "        # Liczymy \u015bredni\u0105 (stack -> mean)\n",
     "        averaged_weight = torch.stack(all_weights_for_key).mean(dim=0)\n",
     "        \n",
-    "        # Aktualizujemy słownik globalny\n",
+    "        # Aktualizujemy s\u0142ownik globalny\n",
     "        global_dict[key] = averaged_weight\n",
     "        \n",
     "    # Wgrywamy nowe wagi do modelu globalnego\n",
@@ -241,24 +248,24 @@
       "Accuracy na starcie (losowe wagi): 10.68%\n",
       "\n",
       "--- RUNDA 1 ---\n",
-      "✅ Wszyscy klienci odesłali wagi.\n",
-      "📊 Global Accuracy po agregacji: 79.37%\n",
+      "\u2705 Wszyscy klienci odes\u0142ali wagi.\n",
+      "\ud83d\udcca Global Accuracy po agregacji: 79.37%\n",
       "\n",
       "--- RUNDA 2 ---\n",
-      "✅ Wszyscy klienci odesłali wagi.\n",
-      "📊 Global Accuracy po agregacji: 85.08%\n",
+      "\u2705 Wszyscy klienci odes\u0142ali wagi.\n",
+      "\ud83d\udcca Global Accuracy po agregacji: 85.08%\n",
       "\n",
       "--- RUNDA 3 ---\n",
-      "✅ Wszyscy klienci odesłali wagi.\n",
-      "📊 Global Accuracy po agregacji: 87.40%\n",
+      "\u2705 Wszyscy klienci odes\u0142ali wagi.\n",
+      "\ud83d\udcca Global Accuracy po agregacji: 87.40%\n",
       "\n",
       "--- RUNDA 4 ---\n",
-      "✅ Wszyscy klienci odesłali wagi.\n",
-      "📊 Global Accuracy po agregacji: 88.61%\n",
+      "\u2705 Wszyscy klienci odes\u0142ali wagi.\n",
+      "\ud83d\udcca Global Accuracy po agregacji: 88.61%\n",
       "\n",
       "--- RUNDA 5 ---\n",
-      "✅ Wszyscy klienci odesłali wagi.\n",
-      "📊 Global Accuracy po agregacji: 89.21%\n"
+      "\u2705 Wszyscy klienci odes\u0142ali wagi.\n",
+      "\ud83d\udcca Global Accuracy po agregacji: 89.21%\n"
      ]
     },
     {
@@ -273,7 +280,7 @@
     }
    ],
    "source": [
-    "# GŁÓWNA PĘTLA SYMULACJI\n",
+    "# G\u0141\u00d3WNA P\u0118TLA SYMULACJI\n",
     "print(f\"Start FedAvg na {ROUNDS} rund...\")\n",
     "print(f\"Accuracy na starcie (losowe wagi): {evaluate(global_model):.2f}%\")\n",
     "\n",
@@ -284,13 +291,13 @@
     "    \n",
     "    client_weights_list = []\n",
     "    \n",
-    "    # 1. Wysyłamy model do klientów i czekamy na ich trening\n",
+    "    # 1. Wysy\u0142amy model do klient\u00f3w i czekamy na ich trening\n",
     "    for i in range(NUM_CLIENTS):\n",
-    "        print(f\"📡 Klient {i+1} trenuje...\", end=\"\\r\")\n",
+    "        print(f\"\ud83d\udce1 Klient {i+1} trenuje...\", end=\"\\r\")\n",
     "        wagi_klienta = train_local(global_model, client_loaders[i])\n",
     "        client_weights_list.append(wagi_klienta)\n",
     "    \n",
-    "    print(f\"✅ Wszyscy klienci odesłali wagi.\")\n",
+    "    print(f\"\u2705 Wszyscy klienci odes\u0142ali wagi.\")\n",
     "    \n",
     "    # 2. Agregacja na serwerze\n",
     "    federated_averaging(global_model, client_weights_list)\n",
@@ -298,12 +305,12 @@
     "    # 3. Test modelu globalnego\n",
     "    acc = evaluate(global_model)\n",
     "    history.append(acc)\n",
-    "    print(f\"📊 Global Accuracy po agregacji: {acc:.2f}%\")\n",
+    "    print(f\"\ud83d\udcca Global Accuracy po agregacji: {acc:.2f}%\")\n",
     "\n",
     "# Wykres\n",
     "import matplotlib.pyplot as plt\n",
     "plt.plot(range(1, ROUNDS+1), history, marker='o')\n",
-    "plt.title(\"Federated Learning: Zysk wiedzy z rundy na rundę\")\n",
+    "plt.title(\"Federated Learning: Zysk wiedzy z rundy na rund\u0119\")\n",
     "plt.xlabel(\"Runda FedAvg\")\n",
     "plt.ylabel(\"Accuracy\")\n",
     "plt.show()"
@@ -314,16 +321,16 @@
    "id": "01d3dab4",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Inteligencja roju\n",
+    "## \ud83e\udde0 Podsumowanie: Inteligencja roju\n",
     "\n",
-    "Zauważ, co się stało:\n",
-    "1.  Model globalny nigdy nie widział danych.\n",
-    "2.  Modele lokalne widziały tylko 1/5 danych.\n",
-    "3.  Mimo to, po wymianie wag, model globalny osiąga wysoką skuteczność (często >90%).\n",
+    "Zauwa\u017c, co si\u0119 sta\u0142o:\n",
+    "1.  Model globalny nigdy nie widzia\u0142 danych.\n",
+    "2.  Modele lokalne widzia\u0142y tylko 1/5 danych.\n",
+    "3.  Mimo to, po wymianie wag, model globalny osi\u0105ga wysok\u0105 skuteczno\u015b\u0107 (cz\u0119sto >90%).\n",
     "\n",
     "**Wyzwania w produkcji:**\n",
-    "*   **Non-IID Data:** Co jeśli jeden klient ma same zdjęcia kotów, a drugi same zdjęcia psów? Średnia z ich wag może wyjść bez sensu. (Wymaga zaawansowanych technik np. FedProx).\n",
-    "*   **Komunikacja:** Przesyłanie wag modelu (np. 100MB) z miliona telefonów zatyka sieć. (Stosuje się kompresję i LoRA)."
+    "*   **Non-IID Data:** Co je\u015bli jeden klient ma same zdj\u0119cia kot\u00f3w, a drugi same zdj\u0119cia ps\u00f3w? \u015arednia z ich wag mo\u017ce wyj\u015b\u0107 bez sensu. (Wymaga zaawansowanych technik np. FedProx).\n",
+    "*   **Komunikacja:** Przesy\u0142anie wag modelu (np. 100MB) z miliona telefon\u00f3w zatyka sie\u0107. (Stosuje si\u0119 kompresj\u0119 i LoRA)."
    ]
   }
  ],
