--- a/98_Adversarial_Attacks_FGSM.ipynb
+++ b/98_Adversarial_Attacks_FGSM.ipynb
@@ -2,26 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/98_Adversarial_Attacks_FGSM.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eeb5fb64",
    "metadata": {},
    "source": [
-    "# 🏴‍☠️ Adversarial Attacks: Jak zhakować sieć neuronową? (FGSM)\n",
+    "# \ud83c\udff4\u200d\u2620\ufe0f Adversarial Attacks: Jak zhakowa\u0107 sie\u0107 neuronow\u0105? (FGSM)\n",
     "\n",
-    "Sieci neuronowe są bardzo wrażliwe na małe zmiany w wejściu.\n",
+    "Sieci neuronowe s\u0105 bardzo wra\u017cliwe na ma\u0142e zmiany w wej\u015bciu.\n",
     "Metoda **FGSM (Fast Gradient Sign Method)** to \"Anti-Learning\".\n",
     "\n",
     "**Normalny Trening:**\n",
     "$$ W_{new} = W - \\alpha \\cdot \\nabla_W Loss $$\n",
-    "(Zmieniamy wagi w dół zbocza błędu).\n",
+    "(Zmieniamy wagi w d\u00f3\u0142 zbocza b\u0142\u0119du).\n",
     "\n",
     "**Atak FGSM:**\n",
     "$$ X_{hacked} = X + \\epsilon \\cdot \\text{sign}(\\nabla_X Loss) $$\n",
-    "(Zmieniamy obrazek $X$ w GÓRĘ zbocza błędu).\n",
+    "(Zmieniamy obrazek $X$ w G\u00d3R\u0118 zbocza b\u0142\u0119du).\n",
     "\n",
-    "Dodajemy do obrazka szum, który wygląda jak \"kierunek największego błędu\".\n",
-    "Dla człowieka to wygląda jak lekki szum. Dla sieci to wygląda jak cechy zupełnie innej klasy (np. małpy).\n",
+    "Dodajemy do obrazka szum, kt\u00f3ry wygl\u0105da jak \"kierunek najwi\u0119kszego b\u0142\u0119du\".\n",
+    "Dla cz\u0142owieka to wygl\u0105da jak lekki szum. Dla sieci to wygl\u0105da jak cechy zupe\u0142nie innej klasy (np. ma\u0142py).\n",
     "\n",
-    "Użyjemy wytrenowanego modelu **ResNet18** (ImageNet)."
+    "U\u017cyjemy wytrenowanego modelu **ResNet18** (ImageNet)."
    ]
   },
   {
@@ -34,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model załadowany na cuda. Gotowy do bycia oszukanym.\n"
+      "Model za\u0142adowany na cuda. Gotowy do bycia oszukanym.\n"
      ]
     }
    ],
@@ -52,13 +59,13 @@
     "\n",
     "# Konfiguracja\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "EPSILON = 0.05 # Siła ataku (im więcej, tym bardziej widoczny szum)\n",
+    "EPSILON = 0.05 # Si\u0142a ataku (im wi\u0119cej, tym bardziej widoczny szum)\n",
     "\n",
-    "# 1. ŁADUJEMY MODEL (ResNet18 - Pretrained)\n",
+    "# 1. \u0141ADUJEMY MODEL (ResNet18 - Pretrained)\n",
     "model = models.resnet18(weights='IMAGENET1K_V1').to(DEVICE)\n",
-    "model.eval() # Ważne: Wyłączamy Dropout i BatchNorm!\n",
+    "model.eval() # Wa\u017cne: Wy\u0142\u0105czamy Dropout i BatchNorm!\n",
     "\n",
-    "print(f\"Model załadowany na {DEVICE}. Gotowy do bycia oszukanym.\")"
+    "print(f\"Model za\u0142adowany na {DEVICE}. Gotowy do bycia oszukanym.\")"
    ]
   },
   {
@@ -68,8 +75,8 @@
    "source": [
     "## Pobranie i Przygotowanie Obrazka\n",
     "\n",
-    "Pobierzemy z internetu zdjęcie (np. Labradora).\n",
-    "Musimy je znormalizować tak, jak oczekuje tego ImageNet (średnia i odchylenie)."
+    "Pobierzemy z internetu zdj\u0119cie (np. Labradora).\n",
+    "Musimy je znormalizowa\u0107 tak, jak oczekuje tego ImageNet (\u015brednia i odchylenie)."
    ]
   },
   {
@@ -97,20 +104,20 @@
     }
    ],
    "source": [
-    "# Link do zdjęcia (Golden Retriever)\n",
+    "# Link do zdj\u0119cia (Golden Retriever)\n",
     "url = \"https://upload.wikimedia.org/wikipedia/commons/9/93/Golden_Retriever_Carlos_%2810581910556%29.jpg\"\n",
     "\n",
-    "# Zapasowy link (gdyby Wikipedia blokowała)\n",
+    "# Zapasowy link (gdyby Wikipedia blokowa\u0142a)\n",
     "backup_url = \"https://raw.githubusercontent.com/pytorch/hub/master/images/dog.jpg\"\n",
     "\n",
-    "# Nagłówek, żeby udawać przeglądarkę (Wiki blokuje boty bez User-Agent)\n",
+    "# Nag\u0142\u00f3wek, \u017ceby udawa\u0107 przegl\u0105dark\u0119 (Wiki blokuje boty bez User-Agent)\n",
     "headers = {\"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64)\"}\n",
     "\n",
     "try:\n",
     "    response = requests.get(url, headers=headers, timeout=5)\n",
-    "    response.raise_for_status() # Sprawdź czy nie ma błędu 403/404\n",
+    "    response.raise_for_status() # Sprawd\u017a czy nie ma b\u0142\u0119du 403/404\n",
     "except Exception as e:\n",
-    "    print(f\"⚠️ Błąd pobierania z Wiki: {e}. Używam linku zapasowego...\")\n",
+    "    print(f\"\u26a0\ufe0f B\u0142\u0105d pobierania z Wiki: {e}. U\u017cywam linku zapasowego...\")\n",
     "    response = requests.get(backup_url)\n",
     "\n",
     "img_pil = Image.open(BytesIO(response.content))\n",
@@ -121,20 +128,20 @@
     "    transforms.ToTensor(),\n",
     "])\n",
     "\n",
-    "# Normalizacja (Musimy mieć możliwość jej cofnięcia do wyświetlania!)\n",
+    "# Normalizacja (Musimy mie\u0107 mo\u017cliwo\u015b\u0107 jej cofni\u0119cia do wy\u015bwietlania!)\n",
     "normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
     "\n",
     "# Przygotowanie tensora\n",
     "img_tensor = preprocess(img_pil).unsqueeze(0).to(DEVICE)\n",
-    "img_tensor.requires_grad = True # KLUCZOWE: Chcemy liczyć pochodną względem OBRAZKA!\n",
+    "img_tensor.requires_grad = True # KLUCZOWE: Chcemy liczy\u0107 pochodn\u0105 wzgl\u0119dem OBRAZKA!\n",
     "\n",
-    "# Nakładamy normalizację\n",
+    "# Nak\u0142adamy normalizacj\u0119\n",
     "input_tensor = normalize(img_tensor)\n",
     "\n",
     "print(\"Obrazek gotowy.\")\n",
     "plt.imshow(img_pil)\n",
     "plt.axis('off')\n",
-    "plt.title(\"Oryginał (Dla człowieka)\")\n",
+    "plt.title(\"Orygina\u0142 (Dla cz\u0142owieka)\")\n",
     "plt.show()"
    ]
   },
@@ -149,21 +156,21 @@
      "output_type": "stream",
      "text": [
       "Predykcja przed atakiem: English setter (ID: 212)\n",
-      "Pewność: 0.6288\n"
+      "Pewno\u015b\u0107: 0.6288\n"
      ]
     }
    ],
    "source": [
-    "# SPRAWDŹMY CO WIDZI MODEL TERAZ\n",
+    "# SPRAWD\u0179MY CO WIDZI MODEL TERAZ\n",
     "output = model(input_tensor)\n",
     "pred_idx = output.argmax(dim=1).item()\n",
     "\n",
-    "# Pobierzmy etykiety ImageNet (żeby widzieć nazwy, a nie numery)\n",
+    "# Pobierzmy etykiety ImageNet (\u017ceby widzie\u0107 nazwy, a nie numery)\n",
     "labels_url = \"https://raw.githubusercontent.com/pytorch/hub/master/imagenet_classes.txt\"\n",
     "labels = requests.get(labels_url).text.splitlines()\n",
     "\n",
     "print(f\"Predykcja przed atakiem: {labels[pred_idx]} (ID: {pred_idx})\")\n",
-    "print(f\"Pewność: {F.softmax(output, dim=1)[0, pred_idx].item():.4f}\")"
+    "print(f\"Pewno\u015b\u0107: {F.softmax(output, dim=1)[0, pred_idx].item():.4f}\")"
    ]
   },
   {
@@ -173,10 +180,10 @@
    "source": [
     "## Przeprowadzenie Ataku (FGSM)\n",
     "\n",
-    "1.  Liczymy **Loss** (Błąd). Mówimy modelowi: \"To jest Golden Retriever (klasa 207)\".\n",
-    "2.  Liczymy **Gradient** względem pikseli wejściowych (`loss.backward()`).\n",
-    "3.  Bierzemy **Znak Gradientu** (`sign()`). To nam mówi: \"żeby zwiększyć błąd, ten piksel trzeba rozjaśnić, a tamten ściemnić\".\n",
-    "4.  Tworzymy **Zaszumiony Obraz**: Oryginał + Epsilon * Znak."
+    "1.  Liczymy **Loss** (B\u0142\u0105d). M\u00f3wimy modelowi: \"To jest Golden Retriever (klasa 207)\".\n",
+    "2.  Liczymy **Gradient** wzgl\u0119dem pikseli wej\u015bciowych (`loss.backward()`).\n",
+    "3.  Bierzemy **Znak Gradientu** (`sign()`). To nam m\u00f3wi: \"\u017ceby zwi\u0119kszy\u0107 b\u0142\u0105d, ten piksel trzeba rozja\u015bni\u0107, a tamten \u015bciemni\u0107\".\n",
+    "4.  Tworzymy **Zaszumiony Obraz**: Orygina\u0142 + Epsilon * Znak."
    ]
   },
   {
@@ -194,13 +201,13 @@
     }
    ],
    "source": [
-    "# 1. Funkcja celu (Chcemy zmylić model co do poprawnej klasy)\n",
+    "# 1. Funkcja celu (Chcemy zmyli\u0107 model co do poprawnej klasy)\n",
     "target = torch.tensor([pred_idx]).to(DEVICE)\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
     "\n",
     "loss = loss_fn(output, target)\n",
     "\n",
-    "# 2. Obliczamy gradient (względem obrazka!)\n",
+    "# 2. Obliczamy gradient (wzgl\u0119dem obrazka!)\n",
     "model.zero_grad()\n",
     "loss.backward()\n",
     "\n",
@@ -208,14 +215,14 @@
     "data_grad = img_tensor.grad.data\n",
     "\n",
     "# 3. FGSM Attack\n",
-    "# sign_data_grad = kierunek, w którym błąd rośnie najszybciej\n",
+    "# sign_data_grad = kierunek, w kt\u00f3rym b\u0142\u0105d ro\u015bnie najszybciej\n",
     "sign_data_grad = data_grad.sign()\n",
     "\n",
     "# Tworzymy zaszumiony obrazek\n",
     "# x_adv = x + epsilon * sign(grad)\n",
     "perturbed_image = img_tensor + EPSILON * sign_data_grad\n",
     "\n",
-    "# Clipowanie (Piksele muszą być w zakresie 0-1)\n",
+    "# Clipowanie (Piksele musz\u0105 by\u0107 w zakresie 0-1)\n",
     "perturbed_image = torch.clamp(perturbed_image, 0, 1)\n",
     "\n",
     "print(\"Atak wykonany.\")"
@@ -228,8 +235,8 @@
    "source": [
     "## Wynik Ataku\n",
     "\n",
-    "Teraz przepuścimy ten zaszumiony obrazek przez ten sam model.\n",
-    "Spodziewamy się, że model kompletnie zgłupieje."
+    "Teraz przepu\u015bcimy ten zaszumiony obrazek przez ten sam model.\n",
+    "Spodziewamy si\u0119, \u017ce model kompletnie zg\u0142upieje."
    ]
   },
   {
@@ -244,13 +251,13 @@
      "text": [
       "------------------------------\n",
       "Stara klasa: English setter\n",
-      "NOWA KLASA:  Labrador retriever 😱\n",
-      "Pewność modelu: 28.78%\n"
+      "NOWA KLASA:  Labrador retriever \ud83d\ude31\n",
+      "Pewno\u015b\u0107 modelu: 28.78%\n"
      ]
     }
    ],
    "source": [
-    "# Musimy znowu znormalizować ten zaszumiony obrazek przed podaniem do sieci\n",
+    "# Musimy znowu znormalizowa\u0107 ten zaszumiony obrazek przed podaniem do sieci\n",
     "perturbed_input = normalize(perturbed_image)\n",
     "\n",
     "# Predykcja na zhakowanym obrazku\n",
@@ -260,8 +267,8 @@
     "\n",
     "print(\"-\" * 30)\n",
     "print(f\"Stara klasa: {labels[pred_idx]}\")\n",
-    "print(f\"NOWA KLASA:  {labels[pred_adv_idx]} 😱\")\n",
-    "print(f\"Pewność modelu: {confidence_adv:.2%}\")"
+    "print(f\"NOWA KLASA:  {labels[pred_adv_idx]} \ud83d\ude31\")\n",
+    "print(f\"Pewno\u015b\u0107 modelu: {confidence_adv:.2%}\")"
    ]
   },
   {
@@ -282,24 +289,24 @@
     }
    ],
    "source": [
-    "# WIZUALIZACJA PORÓWNAWCZA\n",
-    "# Funkcja do odwracania normalizacji (żeby wyświetlić tensor jako ładny obrazek)\n",
+    "# WIZUALIZACJA POR\u00d3WNAWCZA\n",
+    "# Funkcja do odwracania normalizacji (\u017ceby wy\u015bwietli\u0107 tensor jako \u0142adny obrazek)\n",
     "def denormalize(tensor):\n",
     "    return tensor.squeeze().detach().cpu().permute(1, 2, 0).numpy()\n",
     "\n",
     "fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
     "\n",
-    "# 1. Oryginał\n",
+    "# 1. Orygina\u0142\n",
     "ax[0].imshow(denormalize(img_tensor))\n",
-    "ax[0].set_title(f\"Oryginał\\n({labels[pred_idx]})\")\n",
+    "ax[0].set_title(f\"Orygina\u0142\\n({labels[pred_idx]})\")\n",
     "ax[0].axis('off')\n",
     "\n",
-    "# 2. Szum (Wzmocniony, żeby było go widać)\n",
+    "# 2. Szum (Wzmocniony, \u017ceby by\u0142o go wida\u0107)\n",
     "noise = denormalize(sign_data_grad)\n",
-    "# Skalujemy szum do 0-1 dla wyświetlenia\n",
+    "# Skalujemy szum do 0-1 dla wy\u015bwietlenia\n",
     "noise = (noise - noise.min()) / (noise.max() - noise.min())\n",
     "ax[1].imshow(noise, cmap='gray')\n",
-    "ax[1].set_title(\"Wzór Ataku (Noise)\\n(Niewidoczny dla oka)\")\n",
+    "ax[1].set_title(\"Wz\u00f3r Ataku (Noise)\\n(Niewidoczny dla oka)\")\n",
     "ax[1].axis('off')\n",
     "\n",
     "# 3. Atak\n",
@@ -315,17 +322,17 @@
    "id": "992d61ca",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Dlaczego to straszne?\n",
+    "## \ud83e\udde0 Podsumowanie: Dlaczego to straszne?\n",
     "\n",
-    "Spójrz na obrazek nr 1 i nr 3. Dla Ciebie (człowieka) są **identyczne**. To nadal pies.\n",
+    "Sp\u00f3jrz na obrazek nr 1 i nr 3. Dla Ciebie (cz\u0142owieka) s\u0105 **identyczne**. To nadal pies.\n",
     "Dla modelu (AI) obrazek nr 3 to np. \"Kort tenisowy\" albo \"Samolot\".\n",
     "\n",
     "**Konsekwencje:**\n",
-    "1.  **Autonomiczne auta:** Naklejenie specjalnej naklejki (szumu) na znak STOP może sprawić, że Tesla zobaczy go jako ograniczenie prędkości 100 km/h.\n",
-    "2.  **FaceID:** Odpowiedni makijaż lub okulary mogą oszukać system rozpoznawania twarzy.\n",
+    "1.  **Autonomiczne auta:** Naklejenie specjalnej naklejki (szumu) na znak STOP mo\u017ce sprawi\u0107, \u017ce Tesla zobaczy go jako ograniczenie pr\u0119dko\u015bci 100 km/h.\n",
+    "2.  **FaceID:** Odpowiedni makija\u017c lub okulary mog\u0105 oszuka\u0107 system rozpoznawania twarzy.\n",
     "\n",
     "**Obrona:**\n",
-    "Trenowanie modelu na przykładach zaszumionych (Adversarial Training). To działa jak szczepionka."
+    "Trenowanie modelu na przyk\u0142adach zaszumionych (Adversarial Training). To dzia\u0142a jak szczepionka."
    ]
   }
  ],
