--- a/90_Isolation_Forest_Anomaly_Detection.ipynb
+++ b/90_Isolation_Forest_Anomaly_Detection.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ef0e3c41",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/90_Isolation_Forest_Anomaly_Detection.ipynb\" target=\"_parent\">\n",
+    "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c484d4de",
    "metadata": {},
    "source": [
