--- a/91_LIME_Model_Explainability.ipynb
+++ b/91_LIME_Model_Explainability.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "aa672ecd",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/91_LIME_Model_Explainability.ipynb\" target=\"_parent\">\n",
+    "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1a2d0e36",
    "metadata": {},
    "source": [
