--- a/99_Neural_Architecture_Search_NAS.ipynb
+++ b/99_Neural_Architecture_Search_NAS.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/99_Neural_Architecture_Search_NAS.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b69ed36c",
    "metadata": {},
    "source": [
-    "# 🧬 NAS: Gdy AI projektuje AI (Neural Architecture Search)\n",
+    "# \ud83e\uddec NAS: Gdy AI projektuje AI (Neural Architecture Search)\n",
     "\n",
-    "Projektowanie sieci neuronowych to czarna magia. Dlaczego ResNet ma akurat tyle warstw? Bo ktoś tak sprawdził i zadziałało.\n",
+    "Projektowanie sieci neuronowych to czarna magia. Dlaczego ResNet ma akurat tyle warstw? Bo kto\u015b tak sprawdzi\u0142 i zadzia\u0142a\u0142o.\n",
     "\n",
     "**NAS (Neural Architecture Search)** automatyzuje ten proces.\n",
-    "Traktujemy architekturę sieci jako **Genom**.\n",
-    "*   Genom: `[64, 128, 64]` -> Oznacza sieć z 3 warstwami ukrytymi o takich rozmiarach.\n",
-    "*   Genom: `[16]` -> Malutka sieć z 1 warstwą.\n",
+    "Traktujemy architektur\u0119 sieci jako **Genom**.\n",
+    "*   Genom: `[64, 128, 64]` -> Oznacza sie\u0107 z 3 warstwami ukrytymi o takich rozmiarach.\n",
+    "*   Genom: `[16]` -> Malutka sie\u0107 z 1 warstw\u0105.\n",
     "\n",
-    "Zastosujemy **Ewolucję**:\n",
-    "1.  **Populacja:** Losujemy 10 różnych architektur.\n",
-    "2.  **Fitness:** Trenujemy każdą przez 1 epokę na MNIST. Wynik Accuracy to jej siła.\n",
-    "3.  **Mutacja:** Bierzemy najlepszą sieć i losowo zmieniamy liczbę neuronów lub dodajemy warstwę."
+    "Zastosujemy **Ewolucj\u0119**:\n",
+    "1.  **Populacja:** Losujemy 10 r\u00f3\u017cnych architektur.\n",
+    "2.  **Fitness:** Trenujemy ka\u017cd\u0105 przez 1 epok\u0119 na MNIST. Wynik Accuracy to jej si\u0142a.\n",
+    "3.  **Mutacja:** Bierzemy najlepsz\u0105 sie\u0107 i losowo zmieniamy liczb\u0119 neuron\u00f3w lub dodajemy warstw\u0119."
    ]
   },
   {
@@ -30,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Urządzenie: cuda\n"
+      "Urz\u0105dzenie: cuda\n"
      ]
     }
    ],
@@ -46,8 +53,8 @@
     "\n",
     "# Konfiguracja\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "POPULATION_SIZE = 5  # Mała populacja dla szybkości\n",
-    "GENERATIONS = 3      # Krótka ewolucja\n",
+    "POPULATION_SIZE = 5  # Ma\u0142a populacja dla szybko\u015bci\n",
+    "GENERATIONS = 3      # Kr\u00f3tka ewolucja\n",
     "EPOCHS_PER_NET = 1   # Szybki test (tylko 1 epoka)\n",
     "\n",
     "# Dane (MNIST)\n",
@@ -60,7 +67,7 @@
     "    batch_size=1000, shuffle=False\n",
     ")\n",
     "\n",
-    "print(f\"Urządzenie: {DEVICE}\")"
+    "print(f\"Urz\u0105dzenie: {DEVICE}\")"
    ]
   },
   {
@@ -68,10 +75,10 @@
    "id": "fe0ed16d",
    "metadata": {},
    "source": [
-    "## Dynamiczna Sieć (Budowniczy)\n",
+    "## Dynamiczna Sie\u0107 (Budowniczy)\n",
     "\n",
-    "Musimy napisać klasę, która nie ma sztywnej struktury w `__init__`.\n",
-    "Zamiast tego przyjmuje listę `architecture` (np. `[100, 50]`) i dynamicznie buduje warstwy za pomocą `nn.ModuleList`."
+    "Musimy napisa\u0107 klas\u0119, kt\u00f3ra nie ma sztywnej struktury w `__init__`.\n",
+    "Zamiast tego przyjmuje list\u0119 `architecture` (np. `[100, 50]`) i dynamicznie buduje warstwy za pomoc\u0105 `nn.ModuleList`."
    ]
   },
   {
@@ -84,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Przykładowa architektura:\n",
+      "Przyk\u0142adowa architektura:\n",
       "DynamicNet(\n",
       "  (layers): ModuleList(\n",
       "    (0): Linear(in_features=784, out_features=128, bias=True)\n",
@@ -104,27 +111,27 @@
     "        self.architecture = architecture\n",
     "        self.layers = nn.ModuleList()\n",
     "        \n",
-    "        # Wejście: 784 (MNIST 28x28)\n",
+    "        # Wej\u015bcie: 784 (MNIST 28x28)\n",
     "        input_dim = 784\n",
     "        \n",
     "        # Budujemy warstwy ukryte na podstawie genotypu\n",
     "        for hidden_dim in architecture:\n",
     "            self.layers.append(nn.Linear(input_dim, hidden_dim))\n",
     "            self.layers.append(nn.ReLU())\n",
-    "            input_dim = hidden_dim # Wyjście tej warstwy to wejście następnej\n",
+    "            input_dim = hidden_dim # Wyj\u015bcie tej warstwy to wej\u015bcie nast\u0119pnej\n",
     "            \n",
-    "        # Warstwa wyjściowa (zawsze 10 klas)\n",
+    "        # Warstwa wyj\u015bciowa (zawsze 10 klas)\n",
     "        self.output_layer = nn.Linear(input_dim, 10)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = x.view(-1, 784) # Spłaszczamy obrazek\n",
+    "        x = x.view(-1, 784) # Sp\u0142aszczamy obrazek\n",
     "        for layer in self.layers:\n",
     "            x = layer(x)\n",
     "        return self.output_layer(x)\n",
     "\n",
-    "# Test: Stwórzmy losową sieć\n",
+    "# Test: Stw\u00f3rzmy losow\u0105 sie\u0107\n",
     "dummy_net = DynamicNet([128, 64]) # 2 warstwy\n",
-    "print(\"Przykładowa architektura:\")\n",
+    "print(\"Przyk\u0142adowa architektura:\")\n",
     "print(dummy_net)"
    ]
   },
@@ -135,13 +142,13 @@
    "source": [
     "## Funkcja Oceny (Fitness)\n",
     "\n",
-    "To funkcja, która:\n",
-    "1.  Bierze architekturę (listę).\n",
+    "To funkcja, kt\u00f3ra:\n",
+    "1.  Bierze architektur\u0119 (list\u0119).\n",
     "2.  Buduje model.\n",
     "3.  Trenuje go szybko (1 epoka).\n",
     "4.  Zwraca Accuracy na zbiorze testowym.\n",
     "\n",
-    "To będzie nasz \"koszt życia\" dla danego osobnika."
+    "To b\u0119dzie nasz \"koszt \u017cycia\" dla danego osobnika."
    ]
   },
   {
@@ -152,7 +159,7 @@
    "outputs": [],
    "source": [
     "def evaluate_architecture(arch):\n",
-    "    print(f\"🧬 Testuję architekturę: {arch} ...\", end=\" \")\n",
+    "    print(f\"\ud83e\uddec Testuj\u0119 architektur\u0119: {arch} ...\", end=\" \")\n",
     "    \n",
     "    # Budowa modelu\n",
     "    model = DynamicNet(arch).to(DEVICE)\n",
@@ -169,7 +176,7 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        # Przerywamy po 100 batchach dla szybkości demo (opcjonalne)\n",
+    "        # Przerywamy po 100 batchach dla szybko\u015bci demo (opcjonalne)\n",
     "        if batch_idx > 100: break \n",
     "\n",
     "    # Szybka ewaluacja\n",
@@ -196,9 +203,9 @@
     "\n",
     "1.  **Inicjalizacja:** Tworzymy losowe \"mutanty\" (np. `[30]`, `[100, 100]`).\n",
     "2.  **Mutacja:**\n",
-    "    *   Zmień liczbę neuronów w warstwie (np. $50 \\to 60$).\n",
-    "    *   Dodaj nową warstwę.\n",
-    "    *   Usuń warstwę.\n",
+    "    *   Zmie\u0144 liczb\u0119 neuron\u00f3w w warstwie (np. $50 \\to 60$).\n",
+    "    *   Dodaj now\u0105 warstw\u0119.\n",
+    "    *   Usu\u0144 warstw\u0119.\n",
     "\n",
     "Uruchamiamy proces na 3 pokolenia."
    ]
@@ -215,36 +222,36 @@
      "text": [
       "\n",
       "--- POKOLENIE 1 ---\n",
-      "🧬 Testuję architekturę: [38, 38, 87] ... -> Accuracy: 82.71%\n",
-      "🧬 Testuję architekturę: [103, 63, 39] ... -> Accuracy: 83.12%\n",
-      "🧬 Testuję architekturę: [115] ... -> Accuracy: 87.85%\n",
-      "🧬 Testuję architekturę: [58, 47, 62] ... -> Accuracy: 84.56%\n",
-      "🧬 Testuję architekturę: [111, 42, 52] ... -> Accuracy: 83.59%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [38, 38, 87] ... -> Accuracy: 82.71%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [103, 63, 39] ... -> Accuracy: 83.12%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [115] ... -> Accuracy: 87.85%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [58, 47, 62] ... -> Accuracy: 84.56%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [111, 42, 52] ... -> Accuracy: 83.59%\n",
       "Najlepsi w tym pokoleniu: [[115], [58, 47, 62]]\n",
       "\n",
       "--- POKOLENIE 2 ---\n",
-      "🧬 Testuję architekturę: [115] ... -> Accuracy: 88.93%\n",
-      "🧬 Testuję architekturę: [58, 47, 62] ... -> Accuracy: 83.35%\n",
-      "🧬 Testuję architekturę: [58, 47] ... -> Accuracy: 87.13%\n",
-      "🧬 Testuję architekturę: [58, 47, 123, 62] ... -> Accuracy: 82.78%\n",
-      "🧬 Testuję architekturę: [154] ... -> Accuracy: 89.01%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [115] ... -> Accuracy: 88.93%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [58, 47, 62] ... -> Accuracy: 83.35%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [58, 47] ... -> Accuracy: 87.13%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [58, 47, 123, 62] ... -> Accuracy: 82.78%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [154] ... -> Accuracy: 89.01%\n",
       "Najlepsi w tym pokoleniu: [[154], [115]]\n",
       "\n",
       "--- POKOLENIE 3 ---\n",
-      "🧬 Testuję architekturę: [154] ... -> Accuracy: 88.28%\n",
-      "🧬 Testuję architekturę: [115] ... -> Accuracy: 88.20%\n",
-      "🧬 Testuję architekturę: [38, 154] ... -> Accuracy: 87.34%\n",
-      "🧬 Testuję architekturę: [77] ... -> Accuracy: 87.56%\n",
-      "🧬 Testuję architekturę: [157] ... -> Accuracy: 89.10%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [154] ... -> Accuracy: 88.28%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [115] ... -> Accuracy: 88.20%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [38, 154] ... -> Accuracy: 87.34%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [77] ... -> Accuracy: 87.56%\n",
+      "\ud83e\uddec Testuj\u0119 architektur\u0119: [157] ... -> Accuracy: 89.10%\n",
       "Najlepsi w tym pokoleniu: [[157], [154]]\n",
       "------------------------------\n",
-      "🏆 ZWYCIĘZCA NAS: [157]\n",
+      "\ud83c\udfc6 ZWYCI\u0118ZCA NAS: [157]\n",
       "Wynik: 89.10%\n"
      ]
     }
    ],
    "source": [
-    "# 1. Populacja początkowa (losowe listy)\n",
+    "# 1. Populacja pocz\u0105tkowa (losowe listy)\n",
     "population = [\n",
     "    [random.randint(32, 128) for _ in range(random.randint(1, 3))]\n",
     "    for _ in range(POPULATION_SIZE)\n",
@@ -256,21 +263,21 @@
     "    choice = random.random()\n",
     "    \n",
     "    if choice < 0.33 and len(new_arch) > 1:\n",
-    "        # Usuń warstwę\n",
+    "        # Usu\u0144 warstw\u0119\n",
     "        new_arch.pop(random.randint(0, len(new_arch)-1))\n",
     "    elif choice < 0.66:\n",
-    "        # Zmień rozmiar warstwy\n",
+    "        # Zmie\u0144 rozmiar warstwy\n",
     "        idx = random.randint(0, len(new_arch)-1)\n",
     "        new_arch[idx] = int(new_arch[idx] * random.uniform(0.5, 1.5))\n",
     "    else:\n",
-    "        # Dodaj warstwę\n",
+    "        # Dodaj warstw\u0119\n",
     "        new_arch.insert(random.randint(0, len(new_arch)), random.randint(32, 128))\n",
     "        \n",
-    "    # Zabezpieczenie przed pustą siecią\n",
+    "    # Zabezpieczenie przed pust\u0105 sieci\u0105\n",
     "    if len(new_arch) == 0: return [32]\n",
     "    return new_arch\n",
     "\n",
-    "# GŁÓWNA PĘTLA NAS\n",
+    "# G\u0141\u00d3WNA P\u0118TLA NAS\n",
     "best_arch = None\n",
     "best_acc = 0\n",
     "\n",
@@ -278,7 +285,7 @@
     "    print(f\"\\n--- POKOLENIE {gen+1} ---\")\n",
     "    scores = []\n",
     "    \n",
-    "    # Ocena całej populacji\n",
+    "    # Ocena ca\u0142ej populacji\n",
     "    for arch in population:\n",
     "        acc = evaluate_architecture(arch)\n",
     "        scores.append((acc, arch))\n",
@@ -293,7 +300,7 @@
     "    \n",
     "    print(f\"Najlepsi w tym pokoleniu: {survivors}\")\n",
     "    \n",
-    "    # Reprodukcja (Mutacja zwycięzców)\n",
+    "    # Reprodukcja (Mutacja zwyci\u0119zc\u00f3w)\n",
     "    new_population = list(survivors) # Elityzm (zostawiamy najlepszych)\n",
     "    while len(new_population) < POPULATION_SIZE:\n",
     "        parent = random.choice(survivors)\n",
@@ -303,7 +310,7 @@
     "    population = new_population\n",
     "\n",
     "print(\"-\" * 30)\n",
-    "print(f\"🏆 ZWYCIĘZCA NAS: {best_arch}\")\n",
+    "print(f\"\ud83c\udfc6 ZWYCI\u0118ZCA NAS: {best_arch}\")\n",
     "print(f\"Wynik: {best_acc:.2f}%\")"
    ]
   },
@@ -317,17 +324,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trenowanie zwycięskiej architektury do pełna...\n",
-      "Gotowe. AI zaprojektowało sobie mózg.\n"
+      "Trenowanie zwyci\u0119skiej architektury do pe\u0142na...\n",
+      "Gotowe. AI zaprojektowa\u0142o sobie m\u00f3zg.\n"
      ]
     }
    ],
    "source": [
-    "# Trenujemy zwycięzcę \"na poważnie\" (dłużej)\n",
-    "print(\"Trenowanie zwycięskiej architektury do pełna...\")\n",
+    "# Trenujemy zwyci\u0119zc\u0119 \"na powa\u017cnie\" (d\u0142u\u017cej)\n",
+    "print(\"Trenowanie zwyci\u0119skiej architektury do pe\u0142na...\")\n",
     "final_model = DynamicNet(best_arch).to(DEVICE)\n",
-    "# ... tu byśmy zrobili normalny trening na 10 epok\n",
-    "print(\"Gotowe. AI zaprojektowało sobie mózg.\")"
+    "# ... tu by\u015bmy zrobili normalny trening na 10 epok\n",
+    "print(\"Gotowe. AI zaprojektowa\u0142o sobie m\u00f3zg.\")"
    ]
   },
   {
@@ -335,16 +342,16 @@
    "id": "1904cd08",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: AutoML\n",
+    "## \ud83e\udde0 Podsumowanie: AutoML\n",
     "\n",
-    "To, co zrobiliśmy, to uproszczona wersja algorytmów takich jak **EfficientNet** (który został zaprojektowany przez Google AutoML, a nie człowieka).\n",
+    "To, co zrobili\u015bmy, to uproszczona wersja algorytm\u00f3w takich jak **EfficientNet** (kt\u00f3ry zosta\u0142 zaprojektowany przez Google AutoML, a nie cz\u0142owieka).\n",
     "\n",
     "**Zalety NAS:**\n",
-    "1.  Znajduje nieoczywiste architektury (np. bardzo wąskie, ale głębokie).\n",
-    "2.  Oszczędza czas inżyniera (ale kosztuje czas GPU).\n",
+    "1.  Znajduje nieoczywiste architektury (np. bardzo w\u0105skie, ale g\u0142\u0119bokie).\n",
+    "2.  Oszcz\u0119dza czas in\u017cyniera (ale kosztuje czas GPU).\n",
     "\n",
     "**Wady:**\n",
-    "1.  Jest ekstremalnie kosztowny obliczeniowo (trzeba wytrenować setki modeli). Dlatego w praktyce używa się \"One-Shot NAS\" (współdzielenie wag między modelami), żeby nie trenować od zera."
+    "1.  Jest ekstremalnie kosztowny obliczeniowo (trzeba wytrenowa\u0107 setki modeli). Dlatego w praktyce u\u017cywa si\u0119 \"One-Shot NAS\" (wsp\u00f3\u0142dzielenie wag mi\u0119dzy modelami), \u017ceby nie trenowa\u0107 od zera."
    ]
   }
  ],
